1543000440 | 81 files | M bin/version.txt,  M content/panorama/localization/tenfoot_norwegian.txt,  M content/panorama/localization/tenfoot_romanian.txt,  M content/panorama/localization/tenfoot_russian.txt,  M content/panorama/localization/tenfoot_tchinese.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_czech.txt,  M content/vrmonitor/translations/vrmonitor_errors_danish.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_finnish.tx
https://steamdb.info/patchnotes/3335122/

--- a/content/panorama/localization/tenfoot_norwegian.txt
+++ b/content/panorama/localization/tenfoot_norwegian.txt
@@ -256,31 +256,31 @@
 "[english]Panorama_Selection_Spanish"	"Español (Spanish)"
 "Panorama_Selection_French"	"Français (fransk)"
 "[english]Panorama_Selection_French"	"Français (French)"
-"Panorama_Selection_Italian"	"Italiano (Italiensk)"
+"Panorama_Selection_Italian"	"Italiano (italiensk)"
 "[english]Panorama_Selection_Italian"	"Italiano (Italian)"
 "Panorama_Selection_German"	"Deutsch (tysk)"
 "[english]Panorama_Selection_German"	"Deutsch (German)"
-"Panorama_Selection_Greek"	"Ελληνικά (Gresk)"
+"Panorama_Selection_Greek"	"Ελληνικά (gresk)"
 "[english]Panorama_Selection_Greek"	"Ελληνικά (Greek)"
-"Panorama_Selection_Korean"	"한국어 (Koreansk)"
+"Panorama_Selection_Korean"	"한국어 (koreansk)"
 "[english]Panorama_Selection_Korean"	"한국어 (Korean)"
-"Panorama_Selection_Simplified_Chinese"	"简体中文 (Forenklet kinesisk)"
+"Panorama_Selection_Simplified_Chinese"	"简体中文 (forenklet kinesisk)"
 "[english]Panorama_Selection_Simplified_Chinese"	"简体中文 (Simplified Chinese)"
-"Panorama_Selection_Traditional_Chinese"	"繁體中文 (Tradisjonell kinesisk)"
+"Panorama_Selection_Traditional_Chinese"	"繁體中文 (tradisjonell kinesisk)"
 "[english]Panorama_Selection_Traditional_Chinese"	"繁體中文 (Traditional Chinese)"
-"Panorama_Selection_Russian"	"Русский (Russisk)"
+"Panorama_Selection_Russian"	"Русский (russisk)"
 "[english]Panorama_Selection_Russian"	"Русский (Russian)"
-"Panorama_Selection_Thai"	"ไทย (Thai)"
+"Panorama_Selection_Thai"	"ไทย (thai)"
 "[english]Panorama_Selection_Thai"	"ไทย (Thai)"
-"Panorama_Selection_Japanese"	"日本語 (Japansk)"
+"Panorama_Selection_Japanese"	"日本語 (japansk)"
 "[english]Panorama_Selection_Japanese"	"日本語 (Japanese)"
-"Panorama_Selection_Portuguese"	"Português (Portugisisk)"
+"Panorama_Selection_Portuguese"	"Português (portugisisk)"
 "[english]Panorama_Selection_Portuguese"	"Português (Portuguese)"
-"Panorama_Selection_Brazilian"	"Português-Brasil (Brasiliansk-portugisisk)"
+"Panorama_Selection_Brazilian"	"Português-Brasil (brasiliansk-portugisisk)"
 "[english]Panorama_Selection_Brazilian"	"Português-Brasil (Portuguese-Brazil)"
-"Panorama_Selection_Polish"	"Polski (Polsk)"
+"Panorama_Selection_Polish"	"Polski (polsk)"
 "[english]Panorama_Selection_Polish"	"Polski (Polish)"
-"Panorama_Selection_Danish"	"Dansk (Dansk)"
+"Panorama_Selection_Danish"	"Dansk (dansk)"
 "[english]Panorama_Selection_Danish"	"Dansk (Danish)"
 "Panorama_Selection_Dutch"	"Nederlands (nederlandsk)"
 "[english]Panorama_Selection_Dutch"	"Nederlands (Dutch)"
@@ -288,21 +288,21 @@
 "[english]Panorama_Selection_Finnish"	"Suomi (Finnish)"
 "Panorama_Selection_Norwegian"	"Norsk"
 "[english]Panorama_Selection_Norwegian"	"Norsk (Norwegian)"
-"Panorama_Selection_Swedish"	"Svenska (Svensk)"
+"Panorama_Selection_Swedish"	"Svenska (svensk)"
 "[english]Panorama_Selection_Swedish"	"Svenska (Swedish)"
 "Panorama_Selection_Czech"	"čeština (tsjekkisk)"
 "[english]Panorama_Selection_Czech"	"čeština (Czech)"
 "Panorama_Selection_Hungarian"	"Magyar (ungarsk)"
 "[english]Panorama_Selection_Hungarian"	"Magyar (Hungarian)"
-"Panorama_Selection_Romanian"	"Română (Rumensk)"
+"Panorama_Selection_Romanian"	"Română (rumensk)"
 "[english]Panorama_Selection_Romanian"	"Română (Romanian)"
-"Panorama_Selection_Bulgarian"	"Български (Bulgarsk)"
+"Panorama_Selection_Bulgarian"	"Български (bulgarsk)"
 "[english]Panorama_Selection_Bulgarian"	"Български (Bulgarian)"
-"Panorama_Selection_Turkish"	"Türkçe (Tyrkisk)"
+"Panorama_Selection_Turkish"	"Türkçe (tyrkisk)"
 "[english]Panorama_Selection_Turkish"	"Türkçe (Turkish)"
-"Panorama_Selection_Arabic"	"العربية (Arabisk)"
+"Panorama_Selection_Arabic"	"العربية (arabisk)"
 "[english]Panorama_Selection_Arabic"	"العربية(Arabic)"
-"Panorama_Selection_Ukrainian"	"Українська (Ukrainsk)"
+"Panorama_Selection_Ukrainian"	"Українська (ukrainsk)"
 "[english]Panorama_Selection_Ukrainian"	"Українська (Ukrainian)"
 "Panorama_MoviePlaybackError"	"Det oppstod en feil under avspilling"
 "[english]Panorama_MoviePlaybackError"	"An error ocurred during playback"
@@ -340,7 +340,7 @@
 "[english]Time"	"10:08"
 "Time_Suffix"	"PM"
 "[english]Time_Suffix"	"PM"
-"Now_Playing"	"Spiller nå"
+"Now_Playing"	"SPILLER NÅ"
 "[english]Now_Playing"	"NOW PLAYING"
 "Now_Quitting"	"AVSLUTTER NÅ"
 "[english]Now_Quitting"	"NOW EXITING"
@@ -352,9 +352,9 @@
 "[english]Menu_HTCVive"	"RE Vive"
 "Menu_HTCPhone"	"Telefon"
 "[english]Menu_HTCPhone"	"Phone"
-"Menu_Steam"	"STEAM"
+"Menu_Steam"	"Steam"
 "[english]Menu_Steam"	"Steam"
-"Menu_Browser"	"NETTLESER"
+"Menu_Browser"	"Nettleser"
 "[english]Menu_Browser"	"Web"
 "Menu_Friends"	"Venner"
 "[english]Menu_Friends"	"Friends"
@@ -372,7 +372,7 @@
 "[english]DashboardClose_Header"	"CLOSE"
 "Battery_Status"	"KONTROLLERE"
 "[english]Battery_Status"	"CONTROLLERS"
-"Volume_Status"	"Volum"
+"Volume_Status"	"VOLUM"
 "[english]Volume_Status"	"VOLUME"
 "Gamepad_Tip"	"Naviger dashbordet"
 "[english]Gamepad_Tip"	"Navigate Dashboard"
@@ -390,7 +390,7 @@
 "[english]VRSettings"	"SteamVR Settings"
 "NotificationsHeader"	"Varsler"
 "[english]NotificationsHeader"	"Notifications"
-"NotificationsDesc"	"Når ikke forstyrr er aktivt, vil innkommende varsler bli tilbakeholdt."
+"NotificationsDesc"	"Når ikke forstyrr er slått på, vil innkommende varsler holdes tilbake."
 "[english]NotificationsDesc"	"When Do Not Disturb is enabled, incoming notifications will be suppressed."
 "NotificationsCheck"	"Ikke forstyrr"
 "[english]NotificationsCheck"	"Do Not Disturb"
@@ -426,11 +426,11 @@
 "[english]SeatedSetupHeader"	"Seated Position Setup"
 "SeatedSetupButton"	"Tilbakestill sittende posisjon"
 "[english]SeatedSetupButton"	"Reset Seated Position"
-"SeatedSetupStatus"	"For å tilbakestille din sittende posisjon, se framover i en avslappet sittende posisjon og trykk knappen over."
+"SeatedSetupStatus"	"Se fremover i en avslappet, sittende posisjon og trykk på knappen over, for å tilbakestille den sittende posisjonen."
 "[english]SeatedSetupStatus"	"To reset your seated position, face forward in a relaxed sitting position and press the button above."
 "PromptCancelQuestion"	"Er du sikker på at du vil avslutte {s:current_app_name}?"
 "[english]PromptCancelQuestion"	"Are you sure you want to exit {s:current_app_name}?"
-"PromptCancelInfo"	"Du kan miste framgang om du ikke har lagret."
+"PromptCancelInfo"	"Du kan miste fremgang om du ikke har lagret."
 "[english]PromptCancelInfo"	"You may lose progress if you haven't saved."
 "PromptCancelTransition"	"Avbryt"
 "[english]PromptCancelTransition"	"Cancel"
@@ -582,6 +582,10 @@
 "[english]SettingsTime_20m"	"after 20 minutes of idle time"
 "SettingsTime_Never"	"Aldri"
 "[english]SettingsTime_Never"	"Never"
+"VRSettingsPower_ExitSteamVR"	"Avslutt SteamVR automatisk:"
+"[english]VRSettingsPower_ExitSteamVR"	"Automatically Exit SteamVR:"
+"VRSettingsPower_ExitSteamVR_Description"	"SteamVR kan startes ved å slå på en kontroller, trykke på knappen på hodesettet eller trykke på VR-knappen i Steam."
+"[english]VRSettingsPower_ExitSteamVR_Description"	"SteamVR can be started by turning on a controller, pressing the button on the headset, or clicking the VR button in Steam."
 "VRSettings_ResetToDefault"	"Tilbakestill til standard"
 "[english]VRSettings_ResetToDefault"	"Reset to Default"
 "TurnOffControllersWhenSteamVRExits"	"Slå av kontrollere når SteamVR avsluttes"
@@ -590,6 +594,44 @@
 "[english]SettingsTime_30m"	"after 30 minutes of idle time"
 "SettingsTime_1h"	"etter 1 time uten aktivitet"
 "[english]SettingsTime_1h"	"after 1 hour of idle time"
+"Now_Playing_HomeApp"	"HJEM"
+"[english]Now_Playing_HomeApp"	"HOME"
+"Now_Starting_HomeApp"	"GÅR HJEM TIL"
+"[english]Now_Starting_HomeApp"	"GOING HOME TO"
+"VRSettingsMimeTypes_None"	"Ingen"
+"[english]VRSettingsMimeTypes_None"	"None"
+"VRSettingsMimeTypes_HomeApp"	"Hjemmeapp: "
+"[english]VRSettingsMimeTypes_HomeApp"	"Home App: "
+"BackgroundImageSettings"	"Innstillinger"
+"[english]BackgroundImageSettings"	"Settings"
+"BackgroundImageReload_DomeProjection"	"Bruk kuppelprojeksjon"
+"[english]BackgroundImageReload_DomeProjection"	"Use Dome Projection"
+"BackgroundImageReload_DomeRadius"	"Kuppelradius"
+"[english]BackgroundImageReload_DomeRadius"	"Dome Radius"
+"BackgroundImageReload_CameraHeight"	"Kamerahøyde"
+"[english]BackgroundImageReload_CameraHeight"	"Camera Height"
+"NightModeCheck"	"Nattmodus"
+"[english]NightModeCheck"	"Night Mode"
+"NightModeDesc"	"Nattmodus demper lyset i hodesettet frem til kl. 05.00 (eller frem til SteamVR startes på nytt)."
+"[english]NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
+"Transition_Progress_Description"	"VENTER PÅ..."
+"[english]Transition_Progress_Description"	"WAITING FOR..."
+"Now_Waiting"	"VENTER..."
+"[english]Now_Waiting"	"WAITING..."
+"HomeAppCheck"	"Forbedrede SteamVR-miljø"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"HomeAppDesc"	"De nye SteamVR-miljøene støtter mer innholdsrike hjemmeområder, sosiale funksjoner med mer. Meld deg inn for å teste og komme med tilbakemelding på SteamVR-forumene."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
+"MutedLabel"	"Dempet"
+"[english]MutedLabel"	"Muted"
+"BackToApp"	"TILBAKE TIL APP"
+"[english]BackToApp"	"BACK TO APP"
+"GoHome"	"GÅ HJEM"
+"[english]GoHome"	"GO HOME"
+"QuitApp"	"AVSLUTT APP"
+"[english]QuitApp"	"QUIT APP"
+"Customization_Disclaimer"	"Hvis forbedrede SteamVR-miljø er slått på, bruk menyen i appen for å tilpasse hjemmeområdet."
+"[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
 "VRSettingsCamera_RoomViewMode_Label"	"Kameramodus for romvisning"
 "[english]VRSettingsCamera_RoomViewMode_Label"	"Room View Camera Mode"
 "VRSettingsCamera_RoomViewMode_EdgeA"	"Fargede kanter"
@@ -600,4 +642,6 @@
 "[english]VRSettingsCamera_RoomViewMode_VideoTransluscent"	"Translucent Pass-Through"
 "VRSettingsCamera_RoomViewMode_VideoOpaque"	"Dekkende overgang"
 "[english]VRSettingsCamera_RoomViewMode_VideoOpaque"	"Opaque Pass-Through"
+"VRSettingsBindingUITitle"	"Kontrollerbinding"
+"[english]VRSettingsBindingUITitle"	"Controller Binding"
 }
