--- a/content/panorama/localization/tenfoot_russian.txt
+++ b/content/panorama/localization/tenfoot_russian.txt
@@ -1,10 +1,10 @@
 ﻿"tenfoot"
 {
-"UI_Submit"	"Принять"
+"UI_Submit"	"Отправить"
 "[english]UI_Submit"	"Submit"
-"UI_Select"	"ВЫБРАТЬ"
+"UI_Select"	"Выбрать"
 "[english]UI_Select"	"Select"
-"UI_Inspect"	"Осмотреть"
+"UI_Inspect"	"Просмотреть"
 "[english]UI_Inspect"	"Inspect"
 "UI_LeftStick_Short"	"LS"
 "[english]UI_LeftStick_Short"	"LS"
@@ -30,11 +30,11 @@
 "[english]UI_XButton"	"X"
 "UI_YButton"	"Y"
 "[english]UI_YButton"	"Y"
-"UI_Cancel"	"Отмена"
+"UI_Cancel"	"ОТМЕНА"
 "[english]UI_Cancel"	"CANCEL"
-"UI_Dismiss"	"ОТМЕНА"
+"UI_Dismiss"	"СКРЫТЬ"
 "[english]UI_Dismiss"	"DISMISS"
-"UI_Submit_Caps"	"Принять"
+"UI_Submit_Caps"	"ПОДТВЕРДИТЬ"
 "[english]UI_Submit_Caps"	"SUBMIT"
 "UI_OK"	"OK"
 "[english]UI_OK"	"OK"
@@ -46,13 +46,13 @@
 "[english]UI_Yes"	"YES"
 "UI_No"	"НЕТ"
 "[english]UI_No"	"NO"
-"UI_Unknown"	"Неизвестно"
+"UI_Unknown"	"НЕИЗВЕСТНО"
 "[english]UI_Unknown"	"UNKNOWN"
 "UI_Always"	"ВСЕГДА"
 "[english]UI_Always"	"ALWAYS"
 "UI_Select_Footer"	"ВЫБРАТЬ"
 "[english]UI_Select_Footer"	"SELECT"
-"UI_Cancel_Footer"	"Отмена"
+"UI_Cancel_Footer"	"ОТМЕНА"
 "[english]UI_Cancel_Footer"	"CANCEL"
 "UI_Back_Footer"	"НАЗАД"
 "[english]UI_Back_Footer"	"BACK"
@@ -94,7 +94,7 @@
 "[english]UI_Hour"	"hour"
 "UI_Minute"	"минута"
 "[english]UI_Minute"	"minute"
-"UI_Second"	"сек."
+"UI_Second"	"секунда"
 "[english]UI_Second"	"second"
 "UI_UnknownTime"	"Неизвестно"
 "[english]UI_UnknownTime"	"Unknown"
@@ -142,37 +142,37 @@
 "[english]Month_December"	"December"
 "UI_Continue"	"Продолжить"
 "[english]UI_Continue"	"Continue"
-"UI_Age_Gate_Continue"	"Продолжить"
+"UI_Age_Gate_Continue"	"ПРОДОЛЖИТЬ"
 "[english]UI_Age_Gate_Continue"	"CONTINUE"
 "Panorama_Lang_English"	"Английский"
 "[english]Panorama_Lang_English"	"English"
-"Panorama_Lang_Spanish"	"ИСПАНСКИЙ"
+"Panorama_Lang_Spanish"	"Испанский"
 "[english]Panorama_Lang_Spanish"	"Spanish"
-"Panorama_Lang_French"	"ФРАНЦУЗСКИЙ"
+"Panorama_Lang_French"	"Французский"
 "[english]Panorama_Lang_French"	"French"
-"Panorama_Lang_Italian"	"ИТАЛЬЯНСКИЙ"
+"Panorama_Lang_Italian"	"Итальянский"
 "[english]Panorama_Lang_Italian"	"Italian"
-"Panorama_Lang_German"	"НЕМЕЦКИЙ"
+"Panorama_Lang_German"	"Немецкий"
 "[english]Panorama_Lang_German"	"German"
-"Panorama_Lang_Greek"	"ГРЕЧЕСКИЙ"
+"Panorama_Lang_Greek"	"Греческий"
 "[english]Panorama_Lang_Greek"	"Greek"
-"Panorama_Lang_Korean"	"КОРЕЙСКИЙ"
+"Panorama_Lang_Korean"	"Корейский"
 "[english]Panorama_Lang_Korean"	"Korean"
 "Panorama_Lang_Simplified_Chinese"	"Упрощённый китайский"
 "[english]Panorama_Lang_Simplified_Chinese"	"Simplified Chinese"
 "Panorama_Lang_Traditional_Chinese"	"Традиционный китайский"
 "[english]Panorama_Lang_Traditional_Chinese"	"Traditional Chinese"
-"Panorama_Lang_Russian"	"РУССКИЙ"
+"Panorama_Lang_Russian"	"Русский"
 "[english]Panorama_Lang_Russian"	"Russian"
-"Panorama_Lang_Thai"	"ТАЙСКИЙ"
+"Panorama_Lang_Thai"	"Тайский"
 "[english]Panorama_Lang_Thai"	"Thai"
-"Panorama_Lang_Japanese"	"ЯПОНСКИЙ"
+"Panorama_Lang_Japanese"	"Японский"
 "[english]Panorama_Lang_Japanese"	"Japanese"
-"Panorama_Lang_Portuguese"	"ПОРТУГАЛЬСКИЙ"
+"Panorama_Lang_Portuguese"	"Португальский"
 "[english]Panorama_Lang_Portuguese"	"Portuguese"
 "Panorama_Lang_Brazilian"	"Бразильский португальский"
 "[english]Panorama_Lang_Brazilian"	"Portuguese-Brazil"
-"Panorama_Lang_Polish"	"ПОЛЬСКИЙ"
+"Panorama_Lang_Polish"	"Польский"
 "[english]Panorama_Lang_Polish"	"Polish"
 "Panorama_Lang_Danish"	"Датский"
 "[english]Panorama_Lang_Danish"	"Danish"
@@ -180,25 +180,25 @@
 "[english]Panorama_Lang_Dutch"	"Dutch"
 "Panorama_Lang_Finnish"	"Финский"
 "[english]Panorama_Lang_Finnish"	"Finnish"
-"Panorama_Lang_Norwegian"	"НОРВЕЖСКИЙ"
+"Panorama_Lang_Norwegian"	"Норвежский"
 "[english]Panorama_Lang_Norwegian"	"Norwegian"
-"Panorama_Lang_Swedish"	"ШВЕДСКИЙ"
+"Panorama_Lang_Swedish"	"Шведский"
 "[english]Panorama_Lang_Swedish"	"Swedish"
 "Panorama_Lang_Czech"	"Чешский"
 "[english]Panorama_Lang_Czech"	"Czech"
-"Panorama_Lang_Hungarian"	"ВЕНГЕРСКИЙ"
+"Panorama_Lang_Hungarian"	"Венгерский"
 "[english]Panorama_Lang_Hungarian"	"Hungarian"
-"Panorama_Lang_Romanian"	"РУМЫНСКИЙ"
+"Panorama_Lang_Romanian"	"Румынский"
 "[english]Panorama_Lang_Romanian"	"Romanian"
 "Panorama_Lang_Bulgarian"	"Болгарский"
 "[english]Panorama_Lang_Bulgarian"	"Bulgarian"
-"Panorama_Lang_Turkish"	"ТУРЕЦКИЙ"
+"Panorama_Lang_Turkish"	"Турецкий"
 "[english]Panorama_Lang_Turkish"	"Turkish"
 "Panorama_Lang_Arabic"	"Арабский"
 "[english]Panorama_Lang_Arabic"	"Arabic"
-"Panorama_Lang_Ukrainian"	"УКРАИНСКИЙ"
+"Panorama_Lang_Ukrainian"	"Украинский"
 "[english]Panorama_Lang_Ukrainian"	"Ukrainian"
-"Panorama_Lang_Footer_English"	"Английский"
+"Panorama_Lang_Footer_English"	"АНГЛИЙСКИЙ"
 "[english]Panorama_Lang_Footer_English"	"ENGLISH"
 "Panorama_Lang_Footer_Spanish"	"ИСПАНСКИЙ"
 "[english]Panorama_Lang_Footer_Spanish"	"SPANISH"
@@ -228,69 +228,69 @@
 "[english]Panorama_Lang_Footer_Brazilian"	"PORTUGUESE-B"
 "Panorama_Lang_Footer_Polish"	"ПОЛЬСКИЙ"
 "[english]Panorama_Lang_Footer_Polish"	"POLISH"
-"Panorama_Lang_Footer_Danish"	"Датский"
+"Panorama_Lang_Footer_Danish"	"ДАТСКИЙ"
 "[english]Panorama_Lang_Footer_Danish"	"DANISH"
-"Panorama_Lang_Footer_Dutch"	"Нидерландский"
+"Panorama_Lang_Footer_Dutch"	"НИДЕРЛАНДСКИЙ"
 "[english]Panorama_Lang_Footer_Dutch"	"DUTCH"
-"Panorama_Lang_Footer_Finnish"	"Финский"
+"Panorama_Lang_Footer_Finnish"	"ФИНСКИЙ"
 "[english]Panorama_Lang_Footer_Finnish"	"FINNISH"
 "Panorama_Lang_Footer_Norwegian"	"НОРВЕЖСКИЙ"
 "[english]Panorama_Lang_Footer_Norwegian"	"NORWEGIAN"
 "Panorama_Lang_Footer_Swedish"	"ШВЕДСКИЙ"
 "[english]Panorama_Lang_Footer_Swedish"	"SWEDISH"
-"Panorama_Lang_Footer_Czech"	"Чешский"
+"Panorama_Lang_Footer_Czech"	"ЧЕШСКИЙ"
 "[english]Panorama_Lang_Footer_Czech"	"CZECH"
 "Panorama_Lang_Footer_Hungarian"	"ВЕНГЕРСКИЙ"
 "[english]Panorama_Lang_Footer_Hungarian"	"HUNGARIAN"
 "Panorama_Lang_Footer_Romanian"	"РУМЫНСКИЙ"
 "[english]Panorama_Lang_Footer_Romanian"	"ROMANIAN"
-"Panorama_Lang_Footer_Bulgarian"	"Болгарский"
+"Panorama_Lang_Footer_Bulgarian"	"БОЛГАРСКИЙ"
 "[english]Panorama_Lang_Footer_Bulgarian"	"BULGARIAN"
 "Panorama_Lang_Footer_Turkish"	"ТУРЕЦКИЙ"
 "[english]Panorama_Lang_Footer_Turkish"	"TURKISH"
 "Panorama_Lang_Footer_Ukrainian"	"УКРАИНСКИЙ"
 "[english]Panorama_Lang_Footer_Ukrainian"	"UKRAINIAN"
-"Panorama_Selection_English"	"Английский"
+"Panorama_Selection_English"	"English (Английский)"
 "[english]Panorama_Selection_English"	"English"
-"Panorama_Selection_Spanish"	"Español (Испанский)"
+"Panorama_Selection_Spanish"	"Español (испанский)"
 "[english]Panorama_Selection_Spanish"	"Español (Spanish)"
-"Panorama_Selection_French"	"Français (Французский)"
+"Panorama_Selection_French"	"Français (французский)"
 "[english]Panorama_Selection_French"	"Français (French)"
-"Panorama_Selection_Italian"	"Italiano (Итальянский)"
+"Panorama_Selection_Italian"	"Italiano (итальянский)"
 "[english]Panorama_Selection_Italian"	"Italiano (Italian)"
-"Panorama_Selection_German"	"Deutsch (Немецкий)"
+"Panorama_Selection_German"	"Deutsch (немецкий)"
 "[english]Panorama_Selection_German"	"Deutsch (German)"
-"Panorama_Selection_Greek"	"Ελληνικά (Греческий)"
+"Panorama_Selection_Greek"	"Ελληνικά (греческий)"
 "[english]Panorama_Selection_Greek"	"Ελληνικά (Greek)"
-"Panorama_Selection_Korean"	"한국어 (Корейский)"
+"Panorama_Selection_Korean"	"한국어 (корейский)"
 "[english]Panorama_Selection_Korean"	"한국어 (Korean)"
 "Panorama_Selection_Simplified_Chinese"	"简体中文 (упрощённый китайский)"
 "[english]Panorama_Selection_Simplified_Chinese"	"简体中文 (Simplified Chinese)"
-"Panorama_Selection_Traditional_Chinese"	"繁體中文 (Традиционный китайский)"
+"Panorama_Selection_Traditional_Chinese"	"繁體中文 (традиционный китайский)"
 "[english]Panorama_Selection_Traditional_Chinese"	"繁體中文 (Traditional Chinese)"
 "Panorama_Selection_Russian"	"Русский"
 "[english]Panorama_Selection_Russian"	"Русский (Russian)"
-"Panorama_Selection_Thai"	"ไทย (Тайский)"
+"Panorama_Selection_Thai"	"ไทย (тайский)"
 "[english]Panorama_Selection_Thai"	"ไทย (Thai)"
-"Panorama_Selection_Japanese"	"日本語 (Японский)"
+"Panorama_Selection_Japanese"	"日本語 (японский)"
 "[english]Panorama_Selection_Japanese"	"日本語 (Japanese)"
-"Panorama_Selection_Portuguese"	"Português (Португальский)"
+"Panorama_Selection_Portuguese"	"Português (португальский)"
 "[english]Panorama_Selection_Portuguese"	"Português (Portuguese)"
-"Panorama_Selection_Brazilian"	"Português-Brasil (Бразильский португ.)"
+"Panorama_Selection_Brazilian"	"Português-Brasil (браз. португальский)"
 "[english]Panorama_Selection_Brazilian"	"Português-Brasil (Portuguese-Brazil)"
-"Panorama_Selection_Polish"	"Polski (Польский)"
+"Panorama_Selection_Polish"	"Polski (польский)"
 "[english]Panorama_Selection_Polish"	"Polski (Polish)"
-"Panorama_Selection_Danish"	"Dansk (Датский)"
+"Panorama_Selection_Danish"	"Dansk (датский)"
 "[english]Panorama_Selection_Danish"	"Dansk (Danish)"
-"Panorama_Selection_Dutch"	"Nederlands (Нидерландский)"
+"Panorama_Selection_Dutch"	"Nederlands (нидерландский)"
 "[english]Panorama_Selection_Dutch"	"Nederlands (Dutch)"
-"Panorama_Selection_Finnish"	"Suomi (Финский)"
+"Panorama_Selection_Finnish"	"Suomi (финский)"
 "[english]Panorama_Selection_Finnish"	"Suomi (Finnish)"
-"Panorama_Selection_Norwegian"	"Norsk (Норвежский)"
+"Panorama_Selection_Norwegian"	"Norsk (норвежский)"
 "[english]Panorama_Selection_Norwegian"	"Norsk (Norwegian)"
-"Panorama_Selection_Swedish"	"Svenska (Шведский)"
+"Panorama_Selection_Swedish"	"Svenska (шведский)"
 "[english]Panorama_Selection_Swedish"	"Svenska (Swedish)"
-"Panorama_Selection_Czech"	"Čeština (Чешский)"
+"Panorama_Selection_Czech"	"Čeština (чешский)"
 "[english]Panorama_Selection_Czech"	"čeština (Czech)"
 "Panorama_Selection_Hungarian"	"Magyar (Венгерский)"
 "[english]Panorama_Selection_Hungarian"	"Magyar (Hungarian)"
@@ -341,7 +341,7 @@
 "Time_Suffix"	"
 "
 "[english]Time_Suffix"	"PM"
-"Now_Playing"	"Сейчас играет"
+"Now_Playing"	"СЕЙЧАС ИГРАЕТ"
 "[english]Now_Playing"	"NOW PLAYING"
 "Now_Quitting"	"ВЫХОД..."
 "[english]Now_Quitting"	"NOW EXITING"
@@ -435,7 +435,7 @@
 "[english]PromptCancelInfo"	"You may lose progress if you haven't saved."
 "PromptCancelTransition"	"Отмена"
 "[english]PromptCancelTransition"	"Cancel"
-"PromptQuitAnyway"	"Все равно выйти"
+"PromptQuitAnyway"	"Всё равно выйти"
 "[english]PromptQuitAnyway"	"Exit Anyway"
 "PowerMenuViewRoom"	"Вкл./выкл. обзор комнаты"
 "[english]PowerMenuViewRoom"	"Toggle Room View"
