--- a/content/vrmonitor/translations/vrmonitor_czech.txt
+++ b/content/vrmonitor/translations/vrmonitor_czech.txt
@@ -195,8 +195,8 @@
 "[english]MenuAction_SteamWorksDeveloperSupport"	"SteamWorks Developer Support"
 "MenuAction_CreateSystemReport"	"Vyvolat informace o systému"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
-"MenuAction_DisplayFrameTiming"	"Zobrazit časování snímků"
-"[english]MenuAction_DisplayFrameTiming"	"Display Frame Timing"
+"MenuAction_DisplayFrameTiming"	"Pokročilé časování snímků"
+"[english]MenuAction_DisplayFrameTiming"	"Advanced Frame Timing"
 "MenuAction_RecordTrackingData"	"Nahrát data sledování"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"Zastavit nahrávání"
@@ -623,8 +623,8 @@
 "[english]PairingWizard_PairController_Success_Title"	"Success!"
 "PairingWizard_PairAnotherController"	"Spárovat další ovladač"
 "[english]PairingWizard_PairAnotherController"	"Pair Another Controller"
-"PairingWizard_LookingForControllers_Header"	"Hledání ovladače zařízení Vive..."
-"[english]PairingWizard_LookingForControllers_Header"	"Looking for Vive Controller..."
+"PairingWizard_LookingForControllers_Header"	"Hledání ovladače..."
+"[english]PairingWizard_LookingForControllers_Header"	"Looking for controller..."
 "PairingWizard_LookingForControllers_Content"	"Stiskněte a podržte tlačítka „App“ a „System“, dokud ovladač nezavrní.\n\nTaké by měla začít modře blikat LED kontrolka, což značí režim párování ovladače."
 "[english]PairingWizard_LookingForControllers_Content"	"Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
 "PairingWizard_TimeoutHappened_Header"	"Nebyl nalezen ovladač"
@@ -635,14 +635,14 @@
 "[english]PairingWizard_PairingFailed_Header"	"Pairing Failed"
 "PairingWizard_PairingFailed_Content"	"Ujistěte se, že je Váš ovladač nabitý a při párování je v dohledu headsetu.\n\nPokračujte kliknutím na tlačítko „Zkusit znovu“ níže."
 "[english]PairingWizard_PairingFailed_Content"	"Make sure your controller is charged and stays near your headset when pairing.\n\nClick 'Retry' below to try again."
-"PairingWizard_Success_MoreDonglesAvailable_Header"	"Ovladač zařízení Vive byl spárován!"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive Controller Paired!"
-"PairingWizard_Success_MoreDonglesAvailable_Content"	"Váš ovladač zařízení Vive je spárovaný a připravený k použití. Pokud chcete spárovat další ovladač, klikněte níže na tlačítko „Spárovat další ovladač“."
-"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your Vive controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
-"PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Ovladač zařízení Vive byl spárován!"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller Paired!"
-"PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Váš ovladač zařízení Vive je spárovaný a připravený k použití."
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your Vive controller is paired and ready."
+"PairingWizard_Success_MoreDonglesAvailable_Header"	"Ovladač byl spárován!"
+"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Controller Paired!"
+"PairingWizard_Success_MoreDonglesAvailable_Content"	"Váš ovladač je spárovaný a připravený k použití. Pokud chcete spárovat další ovladač, klikněte níže na tlačítko „Spárovat další ovladač“."
+"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
+"PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Ovladač byl spárován!"
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Controller Paired!"
+"PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Váš ovladač je spárovaný a připravený k použití."
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your controller is paired and ready."
 "FirmwareWizard_StartQuestion_TextContent"	"Tady bude zajisté velmi důležitý text."
 "[english]FirmwareWizard_StartQuestion_TextContent"	"Some text content describing what is going to happen."
 "MenuAction_RunTutorial"	"Spustit tutoriál"
@@ -1373,8 +1373,8 @@
 "[english]MenuAction_PowerOffController"	"Power Off Controller"
 "MenuAction_WakeupAllBaseStations"	"Probudit všechny základní stanice"
 "[english]MenuAction_WakeupAllBaseStations"	"Wakeup All Base Stations"
-"FirmwareWizard_ShutdownForRecovery_TextContent"	"Komponent Vašeho headsetu Vive vyžaduje pro navrácení do funkčního stavu aktualizaci firmwaru.\n\nOpravdu chcete pokračovat?"
-"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your Vive hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
+"FirmwareWizard_ShutdownForRecovery_TextContent"	"Komponent Vašeho headsetu vyžaduje pro navrácení do funkčního stavu aktualizaci firmwaru.\n\nOpravdu chcete pokračovat?"
+"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
 "FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Aktualizace firmwaru se nezdařila"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Firmware Base Station Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Aktualizace firmwaru se nezdařila."
@@ -1405,8 +1405,8 @@
 "[english]VRState_Standby"	"Standby"
 "Settings_Audio_AudioMirrorUnsupported"	"Přehrávání zvuku do zařízení není na této platformě podporováno."
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this platform"
-"Settings_AllowReprojection"	"Povolit prokládanou reprojekci"
-"[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
+"Settings_AllowReprojection"	"Povolit prokládanou reprojekci (doporučeno)"
+"[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
 "DismissableWarning_Detected"	"Zjištěno"
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss"
@@ -1429,10 +1429,10 @@
 "[english]FrameTiming_Other"	"Other"
 "Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>Je dostupná kritická aktualizace firmwaru kamery, kterou je nutné stáhnout. Najeďte proto myší na ikonu headsetu a vyberte možnost „Aktualizovat firmware“.</font>"
 "[english]Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>There is a critical camera firmware update that must be applied. Hover over the headset icon and select Update Firmware.</font>"
-"Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>Kameru nelze v použitém USB portu rozeznat.<br>Zkuste proto zařízení Vive připojit do jiného USB portu a restartujte režim SteamVR.</font>"
-"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the Vive is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
-"FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Váš headset Vive vyžaduje pro další používání režimu SteamVR aktualizaci firmwaru.\n\nOpravdu chcete pokračovat?"
-"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your Vive headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
+"Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>Kameru nelze v použitém USB portu rozeznat.<br>Zkuste proto zařízení připojit do jiného USB portu a restartujte režim SteamVR.</font>"
+"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the headset is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
+"FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Váš headset vyžaduje pro další používání režimu SteamVR aktualizaci firmwaru.\n\nOpravdu chcete pokračovat?"
+"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
 "Status_MenuButton_SteamVR_Branch"	"SteamVR – %1"
 "[english]Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "MenuAction_KnockKnock"	"Ťuky ťuk"
@@ -1568,7 +1568,7 @@
 "Settings_Advanced_DirectMode_Header"	"Přímý zobrazovací režim"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
 "Settings_ForceReprojection"	"Vždy povolit reprojekci"
-"[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
+"[english]Settings_ForceReprojection"	"Enable 'always-on reprojection'"
 "Settings_ForceReprojection_Info"	"Toto nastavení je vhodné pouze pro neakční hry, jelikož sníží kvalitu\npredikce pohybu, aby byl čas pro vyrenderování pomalejších aplikací."
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_CheckForMissedFramesWarning"	"Upozorňovat na vypadlé snímky"
@@ -1810,8 +1810,8 @@
 "[english]Settings_EnableDashboard"	"Enable VR Dashboard"
 "Settings_ArcadeMode"	"Povolit režim pro herny"
 "[english]Settings_ArcadeMode"	"Enable Arcade Mode"
-"Settings_AllowAsyncReprojection"	"Povolit asynchronní reprojekci"
-"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection"
+"Settings_AllowAsyncReprojection"	"Povolit asynchronní reprojekci (doporučeno)"
+"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection (recommended)"
 "Advanced_AsyncActive"	"Asynchronní reprojekce zapnuta"
 "[english]Advanced_AsyncActive"	"Async Reprojection On"
 "Advanced_AsyncNotActive"	"Asynchronní reprojekce vypnuta"
@@ -1962,8 +1962,8 @@
 "[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
 "BugReporter_ProgressSubmittingPercent"	"Odesílání...%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
-"Settings_HomeAppCheck"	"Virtuální domov"
-"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"Settings_HomeAppCheck"	"Spouštět režim SteamVR ve virtuálním domově"
+"[english]Settings_HomeAppCheck"	"Launch SteamVR Home Beta at Startup"
 "Settings_HomeAppDesc"	"Virtuální domov nabízí bohatší domovské prostory, sociální funkce a spoustu dalšího. Momentálně probíhá beta testování, o svůj názor se podělte na fórech."
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"Noční režim"
@@ -2071,10 +2071,50 @@
 "Settings_Advanced_MotionSmoothing"	"Povolit vyhlazování pohybu"
 "[english]Settings_Advanced_MotionSmoothing"	"Enable Motion Smoothing"
 "Settings_Advanced_MotionSmoothing_Disabled"	"Vyhlazování pohybu vyžaduje, aby byla aktivní asynchronní reprojekce."
-"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing requires asynchronous reprojection support."
+"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing is unavailable. It requires Windows 10 and an %1 GPU with drivers %2 or newer."
 "Advanced_MotionEstimationActive"	"Odhadování pohybu zapnuto"
-"[english]Advanced_MotionEstimationActive"	"Motion Estimation On"
+"[english]Advanced_MotionEstimationActive"	"Motion Smoothing On"
 "Advanced_MotionEstimationNotActive"	"Odhadování pohybu vypnuto"
-"[english]Advanced_MotionEstimationNotActive"	"Motion Estimation Off"
+"[english]Advanced_MotionEstimationNotActive"	"Motion Smoothing Off"
+"Settings_GpuInfo_Header"	"Hardware"
+"[english]Settings_GpuInfo_Header"	"Hardware"
+"Settings_GpuInfo_Headset"	"Headset:"
+"[english]Settings_GpuInfo_Headset"	"Headset:"
+"Settings_GpuInfo_GpuName"	"Název GPU:"
+"[english]Settings_GpuInfo_GpuName"	"GPU Name:"
+"Settings_GpuInfo_GpuDriver"	"Ovladač GPU:"
+"[english]Settings_GpuInfo_GpuDriver"	"GPU Driver:"
+"Settings_GpuInfo_GpuSpeed"	"Rychlost GPU:"
+"[english]Settings_GpuInfo_GpuSpeed"	"GPU Measured Speed:"
+"Settings_GpuInfo_Current"	"Při současném nastavení je obraz pro každé oko renderován v rozlišení"
+"[english]Settings_GpuInfo_Current"	"The current setting renders each eye at"
+"Settings_GpuInfo_Recommended"	"Doporučené nastavení pro Váš headset a GPU je"
+"[english]Settings_GpuInfo_Recommended"	"The recommended setting for your GPU and headset is"
+"FrameTiming_MisPresented"	" – reprojekce"
+"[english]FrameTiming_MisPresented"	" --- Reprojected"
+"FrameTiming_FirstView"	" – poprvé použité"
+"[english]FrameTiming_FirstView"	" --- First Viewed"
+"FrameTiming_ReadyForUse"	" – připraveny k použití"
+"[english]FrameTiming_ReadyForUse"	" --- Ready For Use"
+"FrameTiming_Presented"	" – použité (počet)"
+"[english]FrameTiming_Presented"	" --- Present (count)"
+"FrameTiming_Predicted"	" – předpokládané (navíc)"
+"[english]FrameTiming_Predicted"	" --- Predict (extra)"
+"FrameTiming_Throttled"	" – omezené (snímky)"
+"[english]FrameTiming_Throttled"	" --- Throttle (frames)"
+"Settings_GiganticSpace"	"Obrovský prostor"
+"[english]Settings_GiganticSpace"	"Gigantic Space"
+"Settings_GpuInfo_NoHeadset"	"CHYBA! Nebyl nalezen headset!"
+"[english]Settings_GpuInfo_NoHeadset"	"ERROR! No Headset Detected!"
+"QuickCalibrate_GiganticSpace"	"Obrovský prostor"
+"[english]QuickCalibrate_GiganticSpace"	"Gigantic Space"
+"Advanced_PerfGraphInHMD"	"Zobrazit graf výkonu GPU v headsetu (beta)"
+"[english]Advanced_PerfGraphInHMD"	"Show GPU Performance Graph in Headset (Beta)"
+"Advanced_ReprojectionOn"	"Reprojekce zapnuta"
+"[english]Advanced_ReprojectionOn"	"Reprojection On"
+"Advanced_ReprojectionOff"	"Reprojekce vypnuta"
+"[english]Advanced_ReprojectionOff"	"Reprojection Off"
+"Settings_StatusWindowHidePopups_Text"	"Když je okno stavu režimu SteamVR minimalizované, potlačovat upozornění"
+"[english]Settings_StatusWindowHidePopups_Text"	"Suppress warnings and alerts when SteamVR Status is minimized"
 }
 }
