--- a/content/vrmonitor/translations/vrmonitor_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_dutch.txt
@@ -125,7 +125,7 @@
 "[english]PerfTestResults_FramesTested"	"Frames Tested:"
 "PerfTestResults_DroppedFrames"	"Framedrops: %1 (%2%)\n"
 "[english]PerfTestResults_DroppedFrames"	"Dropped: %1 (%2%)\n"
-"PerfTestResults_DroppedPercentage"	"Framedrops: %1%\n"
+"PerfTestResults_DroppedPercentage"	"Gedropte frames: %1%\n"
 "[english]PerfTestResults_DroppedPercentage"	"Dropped Frames: %1%\n"
 "PerfTestResults_DroppedFrameWorstStreak"	"Meeste opeenvolgende drops: %1s\n"
 "[english]PerfTestResults_DroppedFrameWorstStreak"	"Worst Consecutive Drops: %1s\n"
@@ -196,7 +196,7 @@
 "MenuAction_CreateSystemReport"	"Systeemrapport maken"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
 "MenuAction_DisplayFrameTiming"	"Frametiming weergeven"
-"[english]MenuAction_DisplayFrameTiming"	"Display Frame Timing"
+"[english]MenuAction_DisplayFrameTiming"	"Advanced Frame Timing"
 "MenuAction_RecordTrackingData"	"Volgdata opnemen"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"Opnemen stoppen"
@@ -620,7 +620,7 @@
 "PairingWizard_PairAnotherController"	"Een andere controller koppelen"
 "[english]PairingWizard_PairAnotherController"	"Pair Another Controller"
 "PairingWizard_LookingForControllers_Header"	"Zoeken naar Vive-controller..."
-"[english]PairingWizard_LookingForControllers_Header"	"Looking for Vive Controller..."
+"[english]PairingWizard_LookingForControllers_Header"	"Looking for controller..."
 "PairingWizard_LookingForControllers_Content"	"Druk de App- en systeemknoppen in en houdt deze vast, totdat het klingelt.\n\nDe LED van de controller zou dan blauw moeten knipperen om aan te geven dat deze gereed is om te koppelen."
 "[english]PairingWizard_LookingForControllers_Content"	"Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
 "PairingWizard_TimeoutHappened_Header"	"Geen controller gedetecteerd"
@@ -632,13 +632,13 @@
 "PairingWizard_PairingFailed_Content"	"Zorg er voor dat je controller is opgeladen en dat deze bij je headset in de buurt blijft als je gaat koppelen.\n\nKlik op 'Opnieuw proberen' hieronder om het nogmaals te proberen."
 "[english]PairingWizard_PairingFailed_Content"	"Make sure your controller is charged and stays near your headset when pairing.\n\nClick 'Retry' below to try again."
 "PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive-controller gekoppeld!"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_MoreDonglesAvailable_Content"	"Je Vive-controller is gekoppeld en klaar voor gebruik. Om een andere controller te koppelen, klik je hieronder op 'Een andere controller koppelen'."
-"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your Vive controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
+"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
 "PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive-controller gekoppeld!"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Je Vive-controller is gekoppeld en klaar voor gebruik."
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your Vive controller is paired and ready."
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your controller is paired and ready."
 "FirmwareWizard_StartQuestion_TextContent"	"Een tekst die aangeeft wat er gaat gebeuren."
 "[english]FirmwareWizard_StartQuestion_TextContent"	"Some text content describing what is going to happen."
 "MenuAction_RunTutorial"	"Training starten"
@@ -1144,7 +1144,7 @@
 "[english]Settings_Bluetooth_Driver_Install"	"Install Bluetooth Driver"
 "Settings_PowerOffControllers_Info"	" "
 "[english]Settings_PowerOffControllers_Info"	" "
-"Settings_PowerOffBaseStations_Text"	"Energiebeheer van basisstation inschakelen."
+"Settings_PowerOffBaseStations_Text"	"Energiebeheer van basisstation inschakelen"
 "[english]Settings_PowerOffBaseStations_Text"	"Enable Base Station Power Management"
 "Settings_PowerOffBaseStations_Info"	"Bluetooth Link moet worden geïnstalleerd om deze functie in te schakelen."
 "[english]Settings_PowerOffBaseStations_Info"	"Bluetooth Link must be installed to enable this feature."
@@ -1361,7 +1361,7 @@
 "MenuAction_WakeupAllBaseStations"	"Alle basisstations wakker maken"
 "[english]MenuAction_WakeupAllBaseStations"	"Wakeup All Base Stations"
 "FirmwareWizard_ShutdownForRecovery_TextContent"	"Een onderdeel van je Vive-hardware heeft een firmware-update nodig, zodat deze weer bruikbaar is.\n\nWil je doorgaan?"
-"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your Vive hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
 "FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Basisstationfirmware mislukt"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Firmware Base Station Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Firmware-update mislukt."
@@ -1391,16 +1391,16 @@
 "Settings_Audio_AudioMirrorUnsupported"	"Audio spiegelen wordt niet ondersteund op dit apparaat"
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this platform"
 "Settings_AllowReprojection"	"Herprojecteren toestaan"
-"[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
+"[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
 "DismissableWarning_Detected"	"Gedetecteerd"
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss"
 "[english]DismissableWarning_TimeFormat"	"h:mm:ss AP"
 "Settings_Camera_Compatibility"	"<b>Camerasnelheid</b>"
 "[english]Settings_Camera_Compatibility"	"<b>Camera Rate</b>"
-"Settings_Camera_CompatibilityExplanation"	"<font color=#ffffff><b>Als je haperingen in het volgen ervaart dan kun je een lagere camerasnelheid instellen, de camera deactiveren, of een andere USB-poort proberen.</b></font>"
+"Settings_Camera_CompatibilityExplanation"	"<font color=#ffffff><b>Als je haperingen in het volgen ervaart, dan kun je een lagere camerasnelheid instellen, de camera deactiveren of een andere USB-poort proberen.</b></font>"
 "[english]Settings_Camera_CompatibilityExplanation"	"<font color=#ffffff><b>If you experience a loss of tracking you may want to set a lower Camera Rate, disable the camera, or try a different USB port.</b></font>"
-"Settings_Camera_EnableWarning"	"<font color=#ffffff><b>Het inschakelen van de camera kan op incompatibele USB-poorten mogelijk de stabiliteit van het volgen hinderen.<br><br>Als je haperingen in het volgen ervaart dan kun je een lagere camerasnelheid instellen, de camera deactiveren, of een andere USB-poort proberen.</b></font>"
+"Settings_Camera_EnableWarning"	"<font color=#ffffff><b>Het inschakelen van de camera kan op incompatibele USB-poorten mogelijk de stabiliteit van het volgen hinderen.<br><br>Als je haperingen in het volgen ervaart, dan kun je een lagere camerasnelheid instellen, de camera deactiveren of een andere USB-poort proberen.</b></font>"
 "[english]Settings_Camera_EnableWarning"	"<font color=#ffffff><b>Enabling the camera may interfere with tracking stability on incompatible USB ports.<br><br>If you experience a loss of tracking you may want to set a lower Camera Rate, disable the camera, or try a different USB port.</b></font>"
 "Settings_Camera_TrackingRequiredForTest"	"De headset lijkt momenteel niet te volgen.\n\nVoor de cameratest is het nodig dat de headset kan volgen voordat de videostream wordt gestart.\n\nPlaats de headset goed in het zicht van de basisstations en probeer het opnieuw."
 "[english]Settings_Camera_TrackingRequiredForTest"	"The headset does not appear to be currently tracking.\n\nThe camera test requires a properly tracking headset before the video stream is started.\n\nPlace the headset in clear view of the base stations and try again."
@@ -1415,9 +1415,9 @@
 "Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>Er is een belangrijke camera-firmware-update beschikbaar die moet worden toegepast. Zweef over het headsetpictogram en selecteer 'Firmware bijwerken'.</font>"
 "[english]Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>There is a critical camera firmware update that must be applied. Hover over the headset icon and select Update Firmware.</font>"
 "Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>De camera wordt niet herkend op de USB-poort waarop de Vive is aangesloten.<br>Probeer een andere USB-poort en herstart SteamVR.</font>"
-"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the Vive is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
+"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the headset is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
 "FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Je Vive-heaset heeft een firmware-update nodig om SteamVR te kunnen blijven gebruiken.\n\nWil je doorgaan?"
-"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your Vive headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
 "Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "[english]Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "MenuAction_KnockKnock"	"Klop klop"
@@ -1566,6 +1566,8 @@
 "[english]FirmwareWizard_UpdateBasestation_Wireless_Title"	"Update Base Station Firmware"
 "FirmwareWizard_UpdateBasestation_Wireless_UpperText"	" "
 "[english]FirmwareWizard_UpdateBasestation_Wireless_UpperText"	""
+"FirmwareWizard_UpdateBasestation_Wireless_MiddleText"	"Deze update zal draadloos worden uitgevoerd. Ontkoppel de basisstations niet terwijl ze worden bijgewerkt."
+"[english]FirmwareWizard_UpdateBasestation_Wireless_MiddleText"	"This update will happen wirelessly. Do not unplug your base stations while they are being updated."
 "FirmwareWizard_UpdateBasestation_Wireless_LowerText"	" "
 "[english]FirmwareWizard_UpdateBasestation_Wireless_LowerText"	""
 "FirmwareWizard_UpdateBasestation_Continue"	"Doorgaan"
@@ -1764,18 +1766,26 @@
 "[english]Settings_ArcadeMode"	"Enable Arcade Mode"
 "Lighthouse_BasestationInternalFault_01_Header"	"Basisstation onbruikbaar"
 "[english]Lighthouse_BasestationInternalFault_01_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_01_Description"	"Een basisstation heeft een intern probleem ontwikkeld (fout 01). Probeer het basisstation met het rode knipperende lampje te herstarten. Neem contact op met de fabrikant voor ondersteuning als het probleem aanhoudt."
+"[english]Lighthouse_BasestationInternalFault_01_Description"	"A base station has developed an internal problem (fault 01). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_01_Action"	"htcvive.com/support bezoeken"
 "[english]Lighthouse_BasestationInternalFault_01_Action"	"Visit htcvive.com/support"
 "Lighthouse_BasestationInternalFault_02_Header"	"Basisstation onbruikbaar"
 "[english]Lighthouse_BasestationInternalFault_02_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_02_Description"	"Een basisstation heeft een intern probleem ontwikkeld (fout 02). Probeer het basisstation met het rode knipperende lampje te herstarten. Neem contact op met de fabrikant voor ondersteuning als het probleem aanhoudt."
+"[english]Lighthouse_BasestationInternalFault_02_Description"	"A base station has developed an internal problem (fault 02). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_02_Action"	"htcvive.com/support bezoeken"
 "[english]Lighthouse_BasestationInternalFault_02_Action"	"Visit htcvive.com/support"
 "Lighthouse_BasestationInternalFault_03_Header"	"Basisstation onbruikbaar"
 "[english]Lighthouse_BasestationInternalFault_03_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_03_Description"	"Een basisstation heeft een intern probleem ontwikkeld (fout 03). Probeer het basisstation met het rode knipperende lampje te herstarten. Neem contact op met de fabrikant voor ondersteuning als het probleem aanhoudt."
+"[english]Lighthouse_BasestationInternalFault_03_Description"	"A base station has developed an internal problem (fault 03). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_03_Action"	"htcvive.com/support bezoeken"
 "[english]Lighthouse_BasestationInternalFault_03_Action"	"Visit htcvive.com/support"
 "Lighthouse_BasestationInternalFault_04_Header"	"Basisstation onbruikbaar"
 "[english]Lighthouse_BasestationInternalFault_04_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_04_Description"	"Een basisstation heeft een intern probleem ontwikkeld (fout 04). Probeer het basisstation met het rode knipperende lampje te herstarten. Neem contact op met de fabrikant voor ondersteuning als het probleem aanhoudt."
+"[english]Lighthouse_BasestationInternalFault_04_Description"	"A base station has developed an internal problem (fault 04). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_04_Action"	"htcvive.com/support bezoeken"
 "[english]Lighthouse_BasestationInternalFault_04_Action"	"Visit htcvive.com/support"
 "Lighthouse_BasestationInternalFault_05_Header"	"Basisstation onbruikbaar"
@@ -1788,11 +1798,11 @@
 "[english]Settings_StatusWindowMinimizeToTray_Text"	"When minimized, SteamVR Status minimizes to the system tray"
 "ShutdownWhileAppRunning_Title"	"SteamVR afsluiten"
 "[english]ShutdownWhileAppRunning_Title"	"SteamVR Shutdown"
-"ShutdownWhileAppRunning_Format"	"Het sluiten van SteamVR zal ook '%1' afsluiten. Wil je doorgaan?"
+"ShutdownWhileAppRunning_Format"	"Het sluiten van SteamVR zal '%1' ook afsluiten. Wil je doorgaan?"
 "[english]ShutdownWhileAppRunning_Format"	"Shutting down SteamVR will also shut down '%1'. Do you wish to continue?"
 "RebootWhileAppRunning_Title"	"SteamVR herstarten"
 "[english]RebootWhileAppRunning_Title"	"SteamVR Reboot"
-"RebootWhileAppRunning_Format"	"Het herstarten van SteamVR zal ook '%1' afsluiten. Wil je doorgaan?"
+"RebootWhileAppRunning_Format"	"Het herstarten van SteamVR zal '%1' ook afsluiten. Wil je doorgaan?"
 "[english]RebootWhileAppRunning_Format"	"Rebooting SteamVR will also shut down'%1'. Do you wish to reboot?"
 "FirmwareWizard_UpdateGenericTracker_Fail_Title"	"Firmware-update mislukt"
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_Title"	"Firmware Update Failed"
@@ -1802,9 +1812,11 @@
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateGenericTracker_Success_UpperText"	"Gelukt!"
 "[english]FirmwareWizard_UpdateGenericTracker_Success_UpperText"	"Success!"
+"VRInitError_Driver_HmdUnknown_Description"	"Het specifieke serienummer van de headset in de instellingen kan niet worden gevonden."
+"[english]VRInitError_Driver_HmdUnknown_Description"	"The specific headset serial number named in the settings cannot be found."
 "Settings_Advanced_Supersampling_Header"	"Applicatieresolutie"
 "[english]Settings_Advanced_Supersampling_Header"	"Application Resolution"
-"Explanation_Supersampling"	"*Sommige applicaties moeten mogelijk herstart worden om de wijzigingen toe te passen."
+"Explanation_Supersampling"	"* Sommige applicaties moeten mogelijk worden herstart om de wijzigingen toe te passen."
 "[english]Explanation_Supersampling"	"*Some applications may need to be restarted for settings to take effect."
 "MenuAction_Workshop_RunTools"	"Een omgeving maken/aanpassen"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
@@ -1857,7 +1869,7 @@
 "BugReporter_ProgressSubmittingPercent"	"Verzenden... %1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
 "Settings_HomeAppCheck"	"SteamVR Home (bèta)"
-"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"[english]Settings_HomeAppCheck"	"Launch SteamVR Home Beta at Startup"
 "Settings_HomeAppDesc"	"De nieuwe SteamVR Home-ervaring ondersteunt rijkere startomgevingen, sociale functies en meer. Deze functie is momenteel in bèta. Geef feedback op de fora."
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"Nachtmodus"
@@ -1894,5 +1906,23 @@
 "[english]ScanForBaseStation_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations within your proximity."
 "ScanForBaseStations_Refresh"	"Opnieuw scannen"
 "[english]ScanForBaseStations_Refresh"	"Scan Again"
+"Settings_DebugInputBindings"	"Debugopties in de gebruikersinterface voor invoerkoppeling inschakelen"
+"[english]Settings_DebugInputBindings"	"Enable debugging options in the input binding user interface"
+"FrameTiming_MisPresented"	" --- Hergeprojecteerd"
+"[english]FrameTiming_MisPresented"	" --- Reprojected"
+"FrameTiming_FirstView"	" --- Eerst bekeken"
+"[english]FrameTiming_FirstView"	" --- First Viewed"
+"FrameTiming_ReadyForUse"	" --- Gereed voor gebruik"
+"[english]FrameTiming_ReadyForUse"	" --- Ready For Use"
+"FrameTiming_Presented"	" --- Huidig (aantal)"
+"[english]FrameTiming_Presented"	" --- Present (count)"
+"Settings_GiganticSpace"	"Gigantische ruimte"
+"[english]Settings_GiganticSpace"	"Gigantic Space"
+"Settings_GpuInfo_NoHeadset"	"FOUT! Geen headset gedetecteerd!"
+"[english]Settings_GpuInfo_NoHeadset"	"ERROR! No Headset Detected!"
+"QuickCalibrate_GiganticSpace"	"Gigantische ruimte"
+"[english]QuickCalibrate_GiganticSpace"	"Gigantic Space"
+"Advanced_PerfGraphInHMD"	"GPU-prestatiegrafiek in headset tonen (bèta)"
+"[english]Advanced_PerfGraphInHMD"	"Show GPU Performance Graph in Headset (Beta)"
 }
 }
