--- a/content/vrmonitor/translations/vrmonitor_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_english.txt
@@ -69,6 +69,7 @@
 "DismissableWarning_Windows8" "Windows 8 (0x8000)"
 "DismissableWarning_DisplayInExtendedMode" "Display in Extended Mode (0x10000)"
 "DismissableWarning_BasestationsSyncOnBeamChannelConflict" "Sync on Beam Channel Conflict (0x400000)"
+"DismissableWarning_SteamVRInSafeMode" "SteamVR In Safe Mode (0x1000000)"
 
 "DismissableWarning_Detected" "Detected"
 "DismissableWarning_TimeFormat" "h:mm:ss AP"
@@ -186,6 +187,9 @@
 "MenuAction_ShowDisplayMirror" "Show Display Mirror"
 "MenuAction_HideDisplayMirror" "Hide Display Mirror"
 "MenuAction_DisplayMirror" "Display Mirror"
+"MenuAction_ShowControllerBinding" "Controller Input Binding"
+"MenuAction_ShowManageTrackers" "Manage Vive Trackers"
+"MenuAction_ShowQuickStart" "Quick Start"
 "MenuAction_UpdateFirmware" "Update Firmware"
 "MenuAction_ForceFirmware" "Force Firmware"
 "MenuAction_DirectMode" "Direct Mode"
@@ -205,12 +209,16 @@
 "MenuAction_KnockKnock" "Knock Knock"
 "MenuAction_PairTracker" "Pair Tracker"
 "MenuAction_PowerOffTracker" "Power Off Tracker"
-"MenuAction_ReportABug" "Report A Bug"
+"MenuAction_ReportABug" "Report a Bug"
 
 
 "MonitorController_SwitchDirectMode_Header" "Direct Mode"
 "MonitorController_EnableDirectMode_Text" "SteamVR will restart after enabling Direct Mode. Do you want to continue?"
 "MonitorController_DisableDirectMode_Text" "WARNING: Disabling Direct Mode will extend the headset onto the desktop, and is not recommended. Are you sure you want to disable Direct Mode? SteamVR will restart after this change is made."
+
+"MonitorController_SwitchSafeMode_Header" "Safe Mode"
+"MonitorController_EnableSafeMode_Text" "Safe Mode will limit SteamVR to trusted drivers. If your system is working right now, you should not need safe mode.\n\nAre you sure you want to enable Safe Mode? SteamVR will restart after this change is made."
+"MonitorController_DisableSafeMode_Text" "SteamVR is currently operating in safe mode.  In this mode it will only load trusted drivers to avoid compatibility problems.\n\nAre you sure you want to disable Safe Mode and load all installed drivers? SteamVR will restart after this change is made."
 
 "TrayIcon_Tooltip_vrmonitor" "SteamVR Status"
 "MonitorController_SelectRecordingDirectory" "Select Recording Directory"
@@ -236,16 +244,11 @@
 "Settings_CheckStatus" "Check Status"
 "Settings_Firmware_UpdateAvailable" "Update available"
 "Settings_NotAvailableAtThisTime" "Not all settings are available at this time"
-"Settings_AllowAsyncReprojection" "Allow asynchronous reprojection (recommended)"
-"Settings_AllowReprojection" "Allow interleaved reprojection (recommended)"
 "Settings_EnableLinuxGPUProfiling" "Enable GPU profiling"
-"Settings_ForceReprojection" "Enable 'always-on reprojection'"
-"Settings_ForceReprojection_Info" "This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_EnableDashboard" "Enable VR Dashboard"
 "Settings_ArcadeMode" "Enable Arcade Mode"
 "Settings_PauseOnStandby" "Pause rendering when headset is idle"
 "Settings_DebugInputBindings" "Enable debugging options in the input binding user interface"
-"Settings_DebugInputBindings_URL" "View bindings in your <a %1>desktop browser</a> (requires Chrome or Firefox)."
 
 "Settings_ShowPlaylistMenu" "Show Playlist Menu"
 "Settings_StartSteamVROnAppLaunch" "Start SteamVR when an application starts"
@@ -300,9 +303,6 @@
 "Settings_LockedModeCheck" "Locked Mode"
 "Settings_LockedModeDesc" "Allow rendering to headset while workstation is locked."
 "Settings_Dashboard_Explanation" "These applications will be accessible as overlays in the Dashboard."
-"Settings_PowerOffBaseStations_Text" "Enable Base Station Power Management"
-"Settings_PowerOffBaseStations_Info" "Bluetooth Link must be installed to enable this feature."
-"Settings_PowerOffBaseStations_Explanation" "Power managed Base Stations go into standby mode after 60 seconds when SteamVR is not in use and wake up when SteamVR starts. This setting is not recommended for shared tracking spaces with multiple SteamVR users."
 "Settings_BaseStationsWakeUpAll" "Wake Up All Base Stations"
 "Settings_BaseStationsWakeUpAll_Explanation" "Sends a Bluetooth signal to wake up all listening Base Stations participating in Power Management."
 "Settings_EnableScreenshots_Info" "When enabled holding the System button and activating the Trigger button will take a screenshot"
@@ -319,16 +319,22 @@
 "Settings_UseBluetoothLink_Info" "When this is enabled, Base Stations can be wirelessly power managed and updated. This may also enable additional features for some VR headsets."
 
 "Settings_Bluetooth_ServicesNotAvailable" "Bluetooth Services Not Available."
-"Settings_Bluetooth_ScanForBaseStations" "Scan For Base Stations"
-"Settings_Bluetooth_ScanForBaseStations_Explanation" "This scans for Base Stations broadcasting their Bluetooth presence that have been part of a previous tracking session."
-"Settings_Bluetooth_ConfigureBaseStations" "Configure Base Station Channels"
-"Settings_Bluetooth_ConfigureBaseStations_Explanation" "This scans for broadcasting Base Stations and allows manual or automatic configuration of their optical channels to avoid tracking conflicts."
 "Settings_Bluetooth_Driver_Install" "Install Bluetooth Driver"
 "Settings_Bluetooth_Driver_Install_Description"	"Install the Link Box Bluetooth driver to enable wireless Bluetooth communication features. This requires administrative credentials."
 "Settings_Bluetooth_Driver_Update" "Update Bluetooth Driver"
 "Settings_Bluetooth_Driver_Update_Description" "Update the Link Box Bluetooth driver to enable wireless Bluetooth communication features. This requires administrative credentials."
-"Settings_Bluetooth_BaseStation10" "Base Station 1.0"
-"Settings_Bluetooth_BaseStation20" "Base Station 2.0"
+
+"Settings_BaseStation_BluetoothBusy" "Waiting for Bluetooth Services..."
+"Settings_BaseStation_BluetoothRequired" "Wireless features are not available until Bluetooth services are enabled."
+"Settings_BaseStation_OpenSettingsBluetooth" "Open Bluetooth Settings"
+"Settings_BaseStation_PowerManagement" "Power Management"
+"Settings_BaseStation_PowerManagement_Explanation" "Power managed Base Stations go into standby mode when SteamVR is not in use and wake up when SteamVR starts."
+"Settings_BaseStation_ScanForBaseStations" "Scan For Base Stations"
+"Settings_BaseStation_ScanForBaseStations_Explanation" "This scans for Base Stations broadcasting their Bluetooth presence that have been part of a previous tracking session."
+"Settings_BaseStation_ConfigureBaseStations" "Configure Base Station Channels"
+"Settings_BaseStation_ConfigureBaseStations_Explanation" "This scans for broadcasting Base Stations and allows manual or automatic configuration of their optical channels to avoid tracking conflicts."
+"Settings_BaseStation_BaseStation10" "Base Station 1.0"
+"Settings_BaseStation_BaseStation20" "Base Station 2.0"
 
 "Settings_Camera_EnableCamera" "Enable Camera"
 "Settings_Camera_AllowCameraInDashboard" "Allow Camera In Dashboard"
@@ -354,7 +360,7 @@
 
 "Settings_Camera_CameraStatusNotAvailable" "Camera Not Available"
 "Settings_Camera_CameraStatus_NeedsRecovery" "<font color=#969696>There is a critical camera firmware update that must be applied. Hover over the headset icon and select Update Firmware.</font>"
-"Settings_Camera_CameraStatus_UseAnotherPort" "<font color=#969696>The camera is not recognized on the USB port that the Vive is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
+"Settings_Camera_CameraStatus_UseAnotherPort" "<font color=#969696>The camera is not recognized on the USB port that the headset is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
 "Settings_Camera_CameraStatusReady" "Camera Ready"
 "Settings_Camera_CameraStatusActive" "Camera Active"
 "Settings_Camera_CameraStatusPaused" "Camera Idle"
@@ -390,7 +396,8 @@
 "Settings_Advanced_MotionSmoothing_Header" "Motion Smoothing"
 "Settings_Advanced_MotionSmoothing_Description" "SteamVR synthesizes new frames to maintain a good experience when the running application cannot make framerate."
 "Settings_Advanced_MotionSmoothing" "Enable Motion Smoothing"
-"Settings_Advanced_MotionSmoothing_Disabled" "Motion Smoothing is unavailable! It requires an NVIDIA GPU with drivers newer than 398.36."
+"Settings_Advanced_MotionSmoothing_Disabled" "Motion Smoothing is unavailable. It requires Windows 10 and an %1 GPU with drivers %2 or newer."
+"Settings_Advanced_MotionSmoothing_Disabled_AMD" "Motion Smoothing is currently unavailable on AMD hardware."
 
 "Settings_Advanced_Supersampling_Header" "Application Resolution"
 "Settings_Advanced_AllowSupersampleFiltering" "Enable Advanced Supersample Filtering" 
@@ -419,11 +426,12 @@
 "Settings_PerApplication_CustomSuffix" "(Custom)"
 
 "Settings_PerApplication_MotionSmoothing_Header" "Motion Smoothing"
-"Settings_PerApplication_MotionSmoothing_On" "On"
-"Settings_PerApplication_MotionSmoothing_Off" "Off"
+"Settings_PerApplication_MotionSmoothing_On" "Enable"
+"Settings_PerApplication_MotionSmoothing_Off" "Disable"
 "Settings_PerApplication_MotionSmoothing_Checkbox_Default" "Use Global Setting From the Video Tab to the Left (%1)"
-"Settings_PerApplication_MotionSmoothing_Checkbox_ForceOn" "Override Global Setting and Force On"
-"Settings_PerApplication_MotionSmoothing_Checkbox_ForceOff" "Override Global Setting and Force Off"
+"Settings_PerApplication_MotionSmoothing_Checkbox_ForceOn" "Override Global Setting and Enable"
+"Settings_PerApplication_MotionSmoothing_Checkbox_ForceOff" "Override Global Setting and Disable"
+"Settings_PerApplication_MotionSmoothing_Checkbox_AlwaysOn" "Force Always-On (WARNING: Application will run at half framerate)"
 
 "Settings_Audio_Header"  "Audio Settings"
 "Settings_Audio_On"  "When SteamVR is active"
@@ -502,6 +510,8 @@
 "MenuAction_ResetAllSettingsAndQuit" "Reset all Settings and Restart"
 "MenuAction_RebootVive" "Reboot Vive headset"
 "Explanation_RebootVive" "Reboot your Vive headset - this may fix USB related headset issues."
+"MenuAction_RestartSteamVR" "Restart SteamVR"
+"Explanation_RestartSteamVR" "Restart SteamVR - this may fix USB related headset issues."
 "MenuAction_ResetDismissableWarnings" "Reset Warnings"
 "Explanation_ResetDismissableWarnings" "Temporary warnings are reset and will show again as needed."
 
@@ -527,6 +537,7 @@
 "Advanced_Performance" "Video"
 "Advanced_Camera" "Camera"
 "Advanced_Bluetooth" "Bluetooth"
+"Advanced_BaseStation" "Base Station"
 "Advanced_USB" "USB"
 
 "Advanced_HMD" "Headset"
@@ -581,6 +592,8 @@
 "MessageBox_Next" "Next"
 "MessageBox_Submit" "Submit"
 "MessageBox_Stop" "Stop"
+"MessageBox_Forget" "Forget"
+"MessageBox_RefreshAll" "Refresh All"
 
 "MonitorController_NotAbleToStartSteam" "Not able to start Steam."
 
@@ -634,24 +647,24 @@
 "PairingWizard_PairController_Success_Title" "Success!"
 "PairingWizard_PairAnotherController" "Pair Another Controller"
 
-"PairingWizard_LookingForControllers_Header" "Looking for Vive Controller..."
+"PairingWizard_LookingForControllers_Header" "Looking for controller..."
 "PairingWizard_LookingForControllers_Content" "Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
 "PairingWizard_TimeoutHappened_Header" "No Controller Detected"
 "PairingWizard_TimeoutHappened_Content" "Make sure your controller is charged and near your headset when pairing.\n\nClick 'Retry' below to try again."
 "PairingWizard_PairingFailed_Header" "Pairing Failed"
 "PairingWizard_PairingFailed_Content" "Make sure your controller is charged and stays near your headset when pairing.\n\nClick 'Retry' below to try again."
-"PairingWizard_Success_MoreDonglesAvailable_Header" "Vive Controller Paired!"
-"PairingWizard_Success_MoreDonglesAvailable_Content" "Your Vive controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
-"PairingWizard_Success_NoMoreDonglesAvailable_Header" "Vive Controller Paired!"
-"PairingWizard_Success_NoMoreDonglesAvailable_Content" "Your Vive controller is paired and ready."
+"PairingWizard_Success_MoreDonglesAvailable_Header" "Controller Paired!"
+"PairingWizard_Success_MoreDonglesAvailable_Content" "Your controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
+"PairingWizard_Success_NoMoreDonglesAvailable_Header" "Controller Paired!"
+"PairingWizard_Success_NoMoreDonglesAvailable_Content" "Your controller is paired and ready."
 
 "FirmwareWizard_UpdateMoreFirmware" "Update More Firmware"
 
 "FirmwareWizard_Shutdown_Title" "Update Firmware"
 "FirmwareWizard_Shutdown_TextContent" "To update firmware, we will need to quit all of your currently running VR applications.\n\nWould you like to continue?"
 "FirmwareWizard_WaitingForShutdown_TextContent" "Preparing system for firmware update..."
-"FirmwareWizard_ShutdownForRecovery_TextContent" "A component of your Vive hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
-"FirmwareWizard_ShutdownForMandatoryUpdate_TextContent" "Your Vive headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
+"FirmwareWizard_ShutdownForRecovery_TextContent" "A component of your hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
+"FirmwareWizard_ShutdownForMandatoryUpdate_TextContent" "Your headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
 "FirmwareWizard_DeviceOverview_Title" "Update Firmware"
 "FirmwareWizard_DeviceOverview_TextContent" "Which device would you like to update?"
 "FirmwareWizard_DeviceOverview_UpdateAvailable" "Update available"
@@ -1024,7 +1037,7 @@
 "PlaylistOverlay_PauseTimer" "Pause Timer"
 "PlaylistOverlay_GotoFirstEntry" "Goto First Entry"
 
-"BugReporter_Title"	"Report A Bug"
+"BugReporter_Title"	"Report a Bug"
 "BugReporter_Explanation" "Thank you for helping Valve improve SteamVR.\n\nThis bug reporter generates a SteamVR System Report which gathers system, environment, and SteamVR logging for use by Valve for diagnostics."
 "BugReporter_ForPersonalSupport" "This is not a support ticket and you will not receive a direct response. To receive personalized SteamVR support from an agent, please visit the support site."
 "BugReporter_SteamVRSupport" "SteamVR Support"
@@ -1035,17 +1048,21 @@
 "BugReporter_ReportType_Bug" "Bug"
 "BugReporter_ReportType_FeatureRequest" "Feature Request"
 "BugReporter_ReportType_Feedback" "Feedback"
+"BugReporter_Owner"	"Owner:"
+"BugReporter_Priority" "Priority:"
 "BugReporter_PreviewReport" "Preview Report"
-"BugReporter_IncludeReportAndLogs" "Include System Report And Logs"
+"BugReporter_IncludeReportAndLogs" "Include System Report and Logs"
 "BugReporter_IncludeCrashDumps" "Include Crash Dumps"
 "BugReporter_SubjectRequired" "Please supply a subject."
 "BugReporter_DescriptionRequired" "Please supply a description."
 "BugReporter_FailedToCreateZip" "Failed to create ZIP attachment."
-"BugReporter_SteamLoginRequired" "You need to be logged in to your Steam account to Report A Bug."
-"BugReporter_SubmissionSuccess"	"Submission Successful.\n\nThank You."
-"BugReporter_SubmissionFailure"	"Submission Failure.\n\nThe Bug Collector may be busy. Please try submitting again.\n\nError: %1\n"
+"BugReporter_SteamLoginRequired" "You need to be logged in to your Steam account to Report a Bug."
+"BugReporter_NotAvailable" "Report a Bug is not available on this version of SteamVR."
+"BugReporter_InitializationFailure" "Report a Bug failed to initialize.\n\nError: BR-%1"
+"BugReporter_SubmissionSuccess"	"Submission Successful.\n\nYou should receive a confirmation email shortly."
+"BugReporter_SubmissionFailure"	"Submission Failure.\n\nThe Bug Collector may be busy. Please try submitting again.\n\nError: BR-%1\n"
 "BugReporter_SubmissionTimeout" "Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
-"BugReporter_PreviewReportTitle" "Report A Bug - Preview Report"
+"BugReporter_PreviewReportTitle" "Report a Bug - Preview Report"
 "BugReporter_ProgressSubmitting" "Submitting..."
 "BugReporter_ProgressSubmittingPercent" "Submitting...%1%"
 
@@ -1085,16 +1102,17 @@
 "BS20_ConfigureChannel_ProgressScanNoStationsFound"			"Scan Completed.\n\nThere are no broadcasting 2.0 Base Stations within your proximity."
 "BS20_ConfigureChannel_ProgressScanning"					"Scanning For Base Stations...\n\n%1 Seconds Remaining."
 "BS20_ConfigureChannel_ProgressConnecting"					"\nConnecting To Base Station...\n"
-"BS20_ConfigureChannel_ProgressDisconnecting"				"\nDisconnecting...\n"
-"BS20_ConfigureChannel_ProgressDiscoveringServices"			"\nDiscovering Services...\n"
-"BS20_ConfigureChannel_ProgressReadingFirmwareVerion"		"\nReading Firmware Version...\n"
-"BS20_ConfigureChannel_ProgressReadingManufacturer"			"\nReading Manufacturer Name...\n"
-"BS20_ConfigureChannel_ProgressReadingModelNumber"			"\nReading Model Number...\n"
-"BS20_ConfigureChannel_ProgressReadingSerialNumber"			"\nReading Serial Number...\n"
-"BS20_ConfigureChannel_ProgressReadingChannel"				"\nReading Channel...\n"
 "BS20_ConfigureChannel_ProgressWritingChannel"				"\nWriting Channel...\n"
+"BS20_ConfigureChannel_ProgressCancelling"					"\nCancelling Current Operation...\n"
 "BS20_ConfigureChannel_ObservedInTracking"					"Observed in a tracking session"
 "BS20_ConfigureChannel_RSSI"								"RSSI: %1"
+
+"BS_PowerManagement_Title"				"Base Station Power Management"
+"BS_PowerManagement_Enable"				"Enable Power Management *"
+"BS_PowerManagement_Enable_Explanation"	"Power managed Base Stations go into standby mode when SteamVR is not in use and wake up when SteamVR starts.\n\n* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users."
+"BS_PowerManagement_RefreshLink"		"Refresh"
+"BS_PowerManagement_ForgetBase"			"Forget Base"
+"BS_PowerManagement_BaseStations"		"Managed Base Stations"
 
 }
 }
