--- a/content/vrmonitor/translations/vrmonitor_errors_czech.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_czech.txt
@@ -19,8 +19,8 @@
 "[english]Error_NoCompositorAvailable_Header"	"Compositor is not available"
 "Error_NoCompositorAvailable_Description"	"Pro správnou funkci režimu SteamVR je potřeba kompozitor."
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
-"Error_NoCompositorAvailable_Action"	"Spustit kompozitor"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"Error_NoCompositorAvailable_Action"	"Restartovat režim SteamVR"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"Místnost není připravena"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"Pro správnou funkci režimu SteamVR musíte nejprve připravit svoji místnost."
@@ -37,8 +37,8 @@
 "[english]Error_CompositorNotRunning_Header"	"Compositor is not running"
 "Error_CompositorNotRunning_Description"	"Pro správnou funkci režimu SteamVR je potřeba mít spuštěný kompozitor."
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
-"Error_CompositorNotRunning_Action"	"Spustit kompozitor"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"Error_CompositorNotRunning_Action"	"Restartovat režim SteamVR"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"Je spuštěno příliš mnoho kompozitorů"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"Pro správnou funkci režimu SteamVR je možné mít spuštěný pouze jeden kompozitor."
@@ -258,8 +258,8 @@
 "[english]VRInitError_Driver_CalibrationInvalid_Action"	"Troubleshooting"
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset není správně připojen"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
-"VRInitError_Driver_HmdDisplayNotFound_Description"	"Displej headsetu nebyl nalezen. Ujistěte se prosím, že máte kabely HDMI řádně připojeny a restartujte headset kliknutím níže."
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"VRInitError_Driver_HmdDisplayNotFound_Description"	"Displej headsetu nebyl nalezen. Ujistěte se prosím, že máte řádně připojeny kabely a restartujte headset kliknutím níže."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Více informací"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"Něco se pokazilo"
@@ -884,11 +884,11 @@
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Konflikt kanálů při vysílání synchronizačního paprsku"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Sync On Beam Channel Conflict"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Na kanálu %1 byly spatřeny dvě základní stanice. Je doporučeno nastavit každé viditelné stanici vlastní kanál."
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time.  For best results, use unique channels for all bases that can be seen at the same time."
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time. For best results, use unique channels for all bases that can be seen at the same time."
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Nastavit"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Ovladač Bluetooth"
@@ -902,7 +902,7 @@
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Služba Bluetooth Link nebyla nalezena"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Serivce not found"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Service not found"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"Chybí soubor potřebný pro funkci režimu SteamVR. Zkontrolujte prosím instalaci režimu SteamVR."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"A file we need for SteamVR is missing, please check your SteamVR installation."
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"Více informací"
@@ -910,7 +910,7 @@
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Chyba služby Bluetooth Link"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Serivce error"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Service error"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"Došlo k neočekávané chybě Bluetooth."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"There was an unexpected problem within the Bluetooth system."
 "Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Nastavení Bluetooth"
@@ -925,5 +925,21 @@
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	" "
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Aktualizujte ovladače grafické karty"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"Vaše grafická karta používá zastaralou verzi ovladačů.\nPro co nejlepší zážitek v režimu SteamVR doporučujeme aktualizovat na nejnovější ovladače."
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"You are running an old video driver.\nFor the best SteamVR experience, we recommend updating to the latest driver."
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Stáhnout ovladače"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Download Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
+"Error_NoCompositorAvailable_ActionURL"	"vrmonitor://restartsystem"
+"[english]Error_NoCompositorAvailable_ActionURL"	"vrmonitor://restartsystem"
+"Error_CompositorNotRunning_ActionURL"	"vrmonitor://restartsystem"
+"[english]Error_CompositorNotRunning_ActionURL"	"vrmonitor://restartsystem"
+"VRInitError_Compositor_D3D11HardwareRequired_Action"	"Restartovat režim SteamVR"
+"[english]VRInitError_Compositor_D3D11HardwareRequired_Action"	"Restart SteamVR"
+"VRInitError_Compositor_D3D11HardwareRequired_ActionURL"	"vrmonitor://restartsystem"
+"[english]VRInitError_Compositor_D3D11HardwareRequired_ActionURL"	"vrmonitor://restartsystem"
 }
 }
