--- a/content/vrmonitor/translations/vrmonitor_errors_danish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_danish.txt
@@ -19,8 +19,8 @@
 "[english]Error_NoCompositorAvailable_Header"	"Compositor is not available"
 "Error_NoCompositorAvailable_Description"	"Compositoren er påkrævet for at SteamVR kan fungere korrekt."
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
-"Error_NoCompositorAvailable_Action"	"Kør compositor"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"Error_NoCompositorAvailable_Action"	"Genstart SteamVR"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"Rum ikke opsat"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"Opsæt dit rum for at SteamVR kan fungere korrekt."
@@ -37,8 +37,8 @@
 "[english]Error_CompositorNotRunning_Header"	"Compositor is not running"
 "Error_CompositorNotRunning_Description"	"Compositoren er påkrævet for at SteamVR kan fungere korrekt."
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
-"Error_CompositorNotRunning_Action"	"Kør compositor"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"Error_CompositorNotRunning_Action"	"Genstart SteamVR"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"For mange kørende compositors"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"Der må kun køre én compositor for at SteamVR kan fungere korrekt."
@@ -257,8 +257,8 @@
 "[english]VRInitError_Driver_CalibrationInvalid_Action"	"Troubleshooting"
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset ikke tilsluttet korrekt"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
-"VRInitError_Driver_HmdDisplayNotFound_Description"	"Headsettets skærm blev ikke fundet. Sørg for at dine HDMI-kabler er sikkert tilsluttede og genstart derefter headsettet ved at klikke nedenfor."
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"VRInitError_Driver_HmdDisplayNotFound_Description"	"Headsettets skærm blev ikke fundet. Sørg for, at dine videokabler er tilsluttet ordentligt, og genstart derefter headsettet ved at klikke nedenfor."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Fejlfinding"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"Noget er galt"
@@ -805,25 +805,25 @@
 "[english]Warning_DismissableWarning_SomeDisplaysAreMirroring_Action"	"Open Display Properties"
 "Warning_DismissableWarning_WindowsAeroDisabled_Action"	"Åbn Personlig tilpasning"
 "[english]Warning_DismissableWarning_WindowsAeroDisabled_Action"	"Open Personalization"
-"Popover_Off_Tracker_Header"	"Sporer ikke tilsluttet"
+"Popover_Off_Tracker_Header"	"Tracker ikke tilsluttet"
 "[english]Popover_Off_Tracker_Header"	"Tracker not connected"
-"Popover_NotReady_Tracker_Header"	"Sporer ikke klar"
+"Popover_NotReady_Tracker_Header"	"Tracker ikke klar"
 "[english]Popover_NotReady_Tracker_Header"	"Tracker not ready"
-"Popover_Pose_Tracker_Header"	"Sporer klar"
+"Popover_Pose_Tracker_Header"	"Tracker klar"
 "[english]Popover_Pose_Tracker_Header"	"Tracker ready"
 "Popover_Pose_Tracker_Description"	"Denne enhed er tilsluttet og sporer."
 "[english]Popover_Pose_Tracker_Description"	"This device is connected and tracking."
-"Popover_NoPose_Tracker_Header"	"Sporeren sporer ikke"
+"Popover_NoPose_Tracker_Header"	"Trackeren sporer ikke"
 "[english]Popover_NoPose_Tracker_Header"	"Tracker not tracking"
 "Popover_NoPose_Tracker_Description"	"Denne enhed er tilsluttet men sporer ikke."
 "[english]Popover_NoPose_Tracker_Description"	"This device is connected but not tracking."
-"Popover_Standby_Tracker_Header"	"Sporer er i standby"
+"Popover_Standby_Tracker_Header"	"Tracker er i standby"
 "[english]Popover_Standby_Tracker_Header"	"Tracker is in standby"
 "Popover_Standby_Tracker_Description"	"Denne enhed er i standby."
 "[english]Popover_Standby_Tracker_Description"	"This device is in standby."
-"Popover_LowBattery_Tracker_Header"	"Sporer klar med lavt batteri"
+"Popover_LowBattery_Tracker_Header"	"Tracker klar med lavt batteri"
 "[english]Popover_LowBattery_Tracker_Header"	"Tracker ready with low battery"
-"Popover_LowBattery_Tracker_Description"	"Denne sporer er tilsluttet og sporer, men batteriet er lavt."
+"Popover_LowBattery_Tracker_Description"	"Denne tracker er tilsluttet og sporer, men batteriet er lavt."
 "[english]Popover_LowBattery_Tracker_Description"	"This tracker is connected and tracking but the battery is low."
 "VRInitError_Compositor_FirmwareRequiresUpdate_Header"	"Compositor afviste initialisering"
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Header"	"Compositor Rejected Initialization"
@@ -882,11 +882,11 @@
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Synkronisering ved konflikt på strålekanal"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Sync On Beam Channel Conflict"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Registrerede to baser på kanal %1 på samme tid. Brug unikke kanaler til alle baser, der kan ses på samme tid, for at opnå de bedste resultater."
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time.  For best results, use unique channels for all bases that can be seen at the same time."
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time. For best results, use unique channels for all bases that can be seen at the same time."
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Konfigurer"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Bluetooth-driver"
@@ -900,7 +900,7 @@
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link-tjeneste ikke fundet"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Serivce not found"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Service not found"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"Der mangler en fil, vi skal bruge til SteamVR. Kontroller venligst din SteamVR-installation."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"A file we need for SteamVR is missing, please check your SteamVR installation."
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"Fejlfinding"
@@ -908,7 +908,7 @@
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326&l=danish#steamvr-issues"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link-tjenestefejl"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Serivce error"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Service error"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"Der opstod et uventet problem i Bluetooth-systemet."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"There was an unexpected problem within the Bluetooth system."
 "Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Bluetooth-indstillinger"
@@ -923,5 +923,21 @@
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	" "
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Opgrader grafikdriver"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"Du kører en gammel videodriver.\nFor at opnå den bedste SteamVR-oplevelse anbefaler vi at opdatere til den seneste driver."
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"You are running an old video driver.\nFor the best SteamVR experience, we recommend updating to the latest driver."
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Download driver"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Download Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
+"Error_NoCompositorAvailable_ActionURL"	"vrmonitor://restartsystem"
+"[english]Error_NoCompositorAvailable_ActionURL"	"vrmonitor://restartsystem"
+"Error_CompositorNotRunning_ActionURL"	"vrmonitor://restartsystem"
+"[english]Error_CompositorNotRunning_ActionURL"	"vrmonitor://restartsystem"
+"VRInitError_Compositor_D3D11HardwareRequired_Action"	"Genstart SteamVR"
+"[english]VRInitError_Compositor_D3D11HardwareRequired_Action"	"Restart SteamVR"
+"VRInitError_Compositor_D3D11HardwareRequired_ActionURL"	"vrmonitor://restartsystem"
+"[english]VRInitError_Compositor_D3D11HardwareRequired_ActionURL"	"vrmonitor://restartsystem"
 }
 }
