--- a/content/vrmonitor/translations/vrmonitor_errors_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_dutch.txt
@@ -20,7 +20,7 @@
 "Error_NoCompositorAvailable_Description"	"Je hebt dit nodig om SteamVR correct te laten werken."
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
 "Error_NoCompositorAvailable_Action"	"Compositor starten"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"Kamer is niet ingesteld"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"Stel je kamer in om SteamVR correct te laten werken."
@@ -38,7 +38,7 @@
 "Error_CompositorNotRunning_Description"	"Je hebt dit nodig om SteamVR correct te laten werken."
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
 "Error_CompositorNotRunning_Action"	"Compositor starten"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"Te veel compositors actief"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"Er kan maar één compositor actief zijn om SteamVR correct te laten werken."
@@ -258,7 +258,7 @@
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset is niet correct verbonden"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
 "VRInitError_Driver_HmdDisplayNotFound_Description"	"Het scherm van de headset kon niet worden gevonden. Zorg ervoor dat je HDMI-kabels goed zijn verbonden en start daarna de headset opnieuw op door hieronder te klikken."
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Probleemoplossing"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"Er is iets mis"
@@ -878,12 +878,12 @@
 "Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Er zijn twee basisstations gelijktijdig op kanaal %1 aangemeld. Voor de beste resultaten gebruik je unieke kanalen voor alle basisstations die zijn aangemeld."
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time.  For best results, use unique channels for all bases that can be seen at the same time."
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time. For best results, use unique channels for all bases that can be seen at the same time."
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"
 "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Bluetooth-stuurprogramma"
