--- a/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
@@ -20,7 +20,7 @@
 "Error_NoCompositorAvailable_Description"	"Tämä tarvitaan SteamVR:n toimimiseen kunnolla."
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
 "Error_NoCompositorAvailable_Action"	"Käynnistä latoja"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"Huoneelle ei ole määritetty asetuksia"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"Määritä asetukset huoneellesi, jotta SteamVR toimisi oikein."
@@ -38,7 +38,7 @@
 "Error_CompositorNotRunning_Description"	"Tämä tarvitaan SteamVR:n toimimiseen kunnolla."
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
 "Error_CompositorNotRunning_Action"	"Käynnistä latoja"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"Liian monta latojaa käynnissä"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"SteamVR toimii oikein vain yhden latojan kanssa."
@@ -258,7 +258,7 @@
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Visiiri ei ole yhdistetty oikein"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
 "VRInitError_Driver_HmdDisplayNotFound_Description"	"Visiirin näyttöä ei löytynyt, joten varmista, että HDMI-kaapelit on kytketty oikein. Tämän jälkeen käynnistä se uudelleen napsauttamalla alta."
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Vianmääritys"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"Jokin on vialla"
@@ -855,7 +855,7 @@
 "[english]Lighthouse_BasestationInternalFault_07_Action"	"Visit htcvive.com/support"
 "Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Knuckles-ajuri saatavilla"
 "[english]Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Knuckles Driver Available"
-"Warning_DismissableWarning_NeedKnucklesDriver_Description"	"Käytät Knuckles-ohjaimia, mutta sinulta puutuu Knuckles-ajurin asennus."
+"Warning_DismissableWarning_NeedKnucklesDriver_Description"	"Käytät Knuckles-ohjaimia, mutta sinulta puuttuu Knuckles-ajurin asennus."
 "[english]Warning_DismissableWarning_NeedKnucklesDriver_Description"	"You are using Knuckes controllers, but don't have the Knuckles driver installed."
 "Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Asenna ajuri"
 "[english]Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Install Driver"
@@ -882,7 +882,11 @@
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Synkroinintiristiriita sädekanavalla"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Sync On Beam Channel Conflict"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Kaksi tukiasemaa nähtiin käyttävän samaa kanavaa %1 yhtä aikaa. Parhaan tuloksen saat käyttämällä jokaiselle tukiasemalle omaa kanavaa samanaikaiskäytössä."
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time.  For best results, use unique channels for all bases that can be seen at the same time."
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time. For best results, use unique channels for all bases that can be seen at the same time."
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Määritä"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/bluetooth/configurechannels"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Bluetooth-ajuri"
@@ -895,12 +899,16 @@
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsUpdate_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
+"Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth-linkkipalvelua ei löytynyt"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Service not found"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"SteamVR:n käyttöä varten tarvittava tiedosto puuttuu. Tarkista SteaamVR-asennuksesi."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"A file we need for SteamVR is missing, please check your SteamVR installation."
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"Vianetsintä"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"Troubleshooting"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326&l=finnish#steamvr-issues"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
+"Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Virhe Bluetooth-linkkipalvelussa"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Service error"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"Bluetooth-järjestelmässä tapahtui odottaman virhe."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"There was an unexpected problem within the Bluetooth system."
 "Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Bluetooth-asetukset"
@@ -915,5 +923,13 @@
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	" "
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Päivitä näytönohjaimen ajuri"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"Näytönohjaimesi ajuri on vanhentunut.\nParhaan SteamVR-kokemuksen saat, kun päivität näytönohjaimeesi uusimman ajurin."
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"You are running an old video driver.\nFor the best SteamVR experience, we recommend updating to the latest driver."
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Lataa ajuri"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Download Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
 }
 }
