--- a/content/vrmonitor/translations/vrmonitor_errors_french.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_french.txt
@@ -19,8 +19,8 @@
 "[english]Error_NoCompositorAvailable_Header"	"Compositor is not available"
 "Error_NoCompositorAvailable_Description"	"Vous en aurez besoin pour que SteamVR fonctionne correctement."
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
-"Error_NoCompositorAvailable_Action"	"Lancer Compositor"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"Error_NoCompositorAvailable_Action"	"Redémarrer SteamVR"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"La pièce n'est pas configurée"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"Configurez votre pièce pour que SteamVR fonctionne correctement."
@@ -37,8 +37,8 @@
 "[english]Error_CompositorNotRunning_Header"	"Compositor is not running"
 "Error_CompositorNotRunning_Description"	"Vous en aurez besoin pour que SteamVR fonctionne correctement."
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
-"Error_CompositorNotRunning_Action"	"Lancer Compositor"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"Error_CompositorNotRunning_Action"	"Redémarrer SteamVR"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"Trop de Compositors en cours d'exécution"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"Une seul Compositor doit être lancé pour que SteamVR fonctionne correctement."
@@ -257,8 +257,8 @@
 "[english]VRInitError_Driver_CalibrationInvalid_Action"	"Troubleshooting"
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Casque mal branché"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
-"VRInitError_Driver_HmdDisplayNotFound_Description"	"L'écran du casque n'est pas détecté. Assurez-vous que les câbles HDMI sont correctement connectés, puis redémarrez votre casque en en cliquant ci-dessous."
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"VRInitError_Driver_HmdDisplayNotFound_Description"	"L'écran du casque n'est pas détecté. Assurez-vous que les câbles vidéo sont bien branchés, puis redémarrez votre casque en cliquant ci-dessous."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Dépannage"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"Un problème est survenu"
@@ -882,11 +882,11 @@
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Conflit de canal"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Sync On Beam Channel Conflict"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Deux stations de base utilisent le canal %1 simultanément. Veuillez utiliser un canal spécifique pour chaque station de base visible."
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time.  For best results, use unique channels for all bases that can be seen at the same time."
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time. For best results, use unique channels for all bases that can be seen at the same time."
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configurer"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Pilote Bluetooth"
@@ -900,7 +900,7 @@
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Service Bluetooth Link non trouvé"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Serivce not found"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Service not found"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"Il manque un fichier nécessaire à SteamVR. Veuillez vérifier votre installation SteamVR."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"A file we need for SteamVR is missing, please check your SteamVR installation."
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"Dépannage"
@@ -908,7 +908,7 @@
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326&l=french#steamvr-issues"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Erreur du service Bluetooth Link"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Serivce error"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Service error"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"Un problème est survenu avec le système Bluetooth."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"There was an unexpected problem within the Bluetooth system."
 "Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Paramètres Bluetooth"
@@ -923,5 +923,21 @@
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	" "
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Mettez à jour le pilote graphique"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"Vous utilisez un pilote vidéo ancien.\nPour obtenir la meilleure expérience de SteamVR, nous vous recommandons de le mettre à jour avec la dernière version."
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"You are running an old video driver.\nFor the best SteamVR experience, we recommend updating to the latest driver."
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Télécharger le pilote"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Download Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx?lang=fr"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
+"Error_NoCompositorAvailable_ActionURL"	"vrmonitor://restartsystem"
+"[english]Error_NoCompositorAvailable_ActionURL"	"vrmonitor://restartsystem"
+"Error_CompositorNotRunning_ActionURL"	"vrmonitor://restartsystem"
+"[english]Error_CompositorNotRunning_ActionURL"	"vrmonitor://restartsystem"
+"VRInitError_Compositor_D3D11HardwareRequired_Action"	"Redémarrer SteamVR"
+"[english]VRInitError_Compositor_D3D11HardwareRequired_Action"	"Restart SteamVR"
+"VRInitError_Compositor_D3D11HardwareRequired_ActionURL"	"vrmonitor://restartsystem"
+"[english]VRInitError_Compositor_D3D11HardwareRequired_ActionURL"	"vrmonitor://restartsystem"
 }
 }
