--- a/content/vrmonitor/translations/vrmonitor_errors_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_greek.txt
@@ -20,7 +20,7 @@
 "Error_NoCompositorAvailable_Description"	"Το χρειάζεστε αυτό για να λειτουργεί το SteamVR σωστά."
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
 "Error_NoCompositorAvailable_Action"	"Εκκίνηση στοιχειοθέτη"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"Το δωμάτιο δεν έχει ρυθμιστεί"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"Ρυθμίστε το δωμάτιό σας για να λειτουργήσει σωστά το SteamVR."
@@ -38,7 +38,7 @@
 "Error_CompositorNotRunning_Description"	"Το χρειάζεστε για να λειτουργήσει σωστά το SteamVR."
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
 "Error_CompositorNotRunning_Action"	"Εκκίνηση στοιχειοθέτη"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"Εκτελούνται πολλοί στοιχειοθέτες"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"Μόνο ένας στοιχειοθέτης μπορεί να εκτελείται για να λειτουργήσει σωστά το SteamVR."
@@ -258,7 +258,7 @@
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Το headset δεν συνδέθηκε κατάλληλα"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
 "VRInitError_Driver_HmdDisplayNotFound_Description"	"Η οθόνη του headset δεν βρέθηκε, παρακαλούμε βεβαιωθείτε ότι τα καλώδια HDMI σας είναι ασφαλώς συνδεδεμένα και έπειτα επανεκκινήστε το headset σας πατώντας παρακάτω."
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Αντιμετώπιση προβλημάτων"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"Κάτι είναι λάθος"
@@ -869,10 +869,10 @@
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Up to date Windows 10 install required"
 "VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Πατήστε εδώ για περισσότερες πληροφορίες"
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Click here for more information"
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Διαμόρφωση"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Οδηγός Bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Bluetooth Driver"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Action"	"Ρυθμίσεις Bluetooth"
