--- a/content/vrmonitor/translations/vrmonitor_errors_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_italian.txt
@@ -20,7 +20,7 @@
 "Error_NoCompositorAvailable_Description"	"Questo elemento è necessario per il corretto funzionamento di SteamVR."
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
 "Error_NoCompositorAvailable_Action"	"Avvia Compositore"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"La stanza non è stata configurata"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"Prepara la tua stanza perché SteamVR funzioni correttamente."
@@ -38,7 +38,7 @@
 "Error_CompositorNotRunning_Description"	"Ti servirà per il corretto funzionamento di SteamVR."
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
 "Error_CompositorNotRunning_Action"	"Avvia Compositore"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"Troppe istanze del compositore attive"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"Affinché SteamVR funzioni correttamente, deve essere attiva una sola istanza del Compositore."
@@ -258,7 +258,7 @@
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Visore non collegato correttamente"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
 "VRInitError_Driver_HmdDisplayNotFound_Description"	"Lo schermo del visore non è stato trovato, assicurati che i cavi HDMI siano collegati correttamente e riavvia il visore cliccando qui sotto."
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Risoluzione dei problemi"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"C'è qualcosa che non va"
@@ -605,25 +605,25 @@
 "[english]Warning_DismissableWarning_MissedFrames_Description"	"The current VR application runs too slowly, which can give you a bad experience. This may be because the application is too demanding, or your computer is too slow."
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"Driver bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"Bluetooth Driver"
-"Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Description"	"È necessario installare un driver per completare l'installazione di Link Box."
+"Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Description"	"È necessario installare un driver per completare l'installazione della Link Box."
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Description"	"A driver needs to be installed to complete Link Box installation."
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Action"	"Impostazioni Bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Action"	"Bluetooth Settings"
 "Warning_DismissableWarning_BluetoothDriverFailedInstallation_Header"	"Installazione del driver bluetooth non riuscita"
 "[english]Warning_DismissableWarning_BluetoothDriverFailedInstallation_Header"	"Bluetooth Driver installation failed"
-"Warning_DismissableWarning_BluetoothDriverFailedInstallation_Description"	"È necessario installare un driver per completare l'installazione di Link Box. Riavvia SteamVR e riprova."
+"Warning_DismissableWarning_BluetoothDriverFailedInstallation_Description"	"È necessario installare un driver per completare l'installazione della Link Box. Riavvia SteamVR e riprova."
 "[english]Warning_DismissableWarning_BluetoothDriverFailedInstallation_Description"	"A driver needs to be installed to complete Link Box installation. Restart SteamVR and try again."
 "Warning_DismissableWarning_BluetoothDriverFailedInstallation_Action"	"Riprova"
 "[english]Warning_DismissableWarning_BluetoothDriverFailedInstallation_Action"	"Retry"
 "Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Header"	"Bluetooth Link"
 "[english]Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Header"	"Bluetooth Link"
-"Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Description"	"È necessario installare Bluetooth Link per abilitare la comunicazione Link Box."
+"Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Description"	"È necessario installare Bluetooth Link per abilitare la comunicazione con la Link Box."
 "[english]Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Description"	"Bluetooth Link needs to be installed to enable Link Box communication."
 "Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Action"	"Installa"
 "[english]Warning_DismissableWarning_BluetoothLinkNeedsInstallation_Action"	"Install"
 "Warning_DismissableWarning_BluetoothLinkFailedInstallation_Header"	"Installazione di Bluetooth Link non riuscita"
 "[english]Warning_DismissableWarning_BluetoothLinkFailedInstallation_Header"	"Bluetooth Link installation failed"
-"Warning_DismissableWarning_BluetoothLinkFailedInstallation_Description"	"È necessario installare Bluetooth Link per abilitare la comunicazione con Link Box. Riavvia SteamVR e riprova."
+"Warning_DismissableWarning_BluetoothLinkFailedInstallation_Description"	"È necessario installare Bluetooth Link per abilitare la comunicazione con la Link Box. Riavvia SteamVR e riprova."
 "[english]Warning_DismissableWarning_BluetoothLinkFailedInstallation_Description"	"Bluetooth Link needs to be installed to enable Link Box communication. Restart SteamVR and try again."
 "Warning_DismissableWarning_BluetoothLinkFailedInstallation_Action"	"Riprova"
 "[english]Warning_DismissableWarning_BluetoothLinkFailedInstallation_Action"	"Retry"
@@ -641,7 +641,7 @@
 "[english]Popover_LowBattery_Controller_Action"	"Identify controller"
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Header"	"Comunicazione con Bluetooth Link non riuscita"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Header"	"Bluetooth Link communication failed"
-"Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Description"	"Potrebbe essere necessario riavviare Bluetooth Link per abilitare la comunicazione con Link Box. Se il problema persiste, riavvia SteamVR."
+"Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Description"	"Controlla i collegamenti della Link Box, scollega e ricollega il cavo di alimentazione della Link Box per ripristinarla, dopodiché riavvia SteamVR."
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Description"	"Check link box connections, then unplug and replug power to the link box to reset it, then restart SteamVR."
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Action"	"Impostazioni Bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Action"	"Bluetooth Settings"
@@ -873,15 +873,25 @@
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Click here for more information"
 "Lighthouse_RecommendControllerUpgradeOverUsb_Header"	"È necessario aggiornare il controller"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Header"	"Controller needs update"
+"Lighthouse_RecommendControllerUpgradeOverUsb_Description"	"Un controller sta avendo difficoltà a stabilire una connessione wireless. Collega i controller con un cavo USB per aggiornare il firmware e risolvere il problema."
+"[english]Lighthouse_RecommendControllerUpgradeOverUsb_Description"	"A controller is having trouble staying connected over wireless.  Please connect your controllers with a USB cable to perform a firmware update to fix this problem."
 "Lighthouse_RecommendControllerUpgradeOverUsb_Action"	"Aggiorna il firmware"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Action"	"Update Firmware"
 "Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Conflitto di canali (sync-on-beam)"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Sync On Beam Channel Conflict"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Sono state rilevate due stazioni di base sul canale %1 nello stesso momento. Per risultati migliori, usa un canale unico per ogni stazione di base, in modo che tutte possano essere rilevate contemporaneamente."
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time. For best results, use unique channels for all bases that can be seen at the same time."
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configura"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/bluetooth/configurechannels	"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Driver Bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Bluetooth Driver"
-"Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Description"	"È necessario aggiornare un driver per completare l'installazione di Link Box."
+"Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Description"	"È necessario aggiornare un driver per completare l'installazione della Link Box."
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Description"	"A driver needs to be updated to complete Link Box installation."
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Action"	"Impostazioni Bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Action"	"Bluetooth Settings"
@@ -889,11 +899,37 @@
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsUpdate_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
+"Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Servizio Bluetooth Link non trovato"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Service not found"
+"Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"Un file necessario per il funzionamento di SteamVR risulta mancante, controlla la tua installazione di SteamVR."
+"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"A file we need for SteamVR is missing, please check your SteamVR installation."
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"Risoluzione dei problemi"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"Troubleshooting"
+"Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326&l=italian#steamvr-issues"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
+"Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Errore del servizio Bluetooth Link"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Service error"
+"Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"Si è verificato un problema inaspettato nel sistema Bluetooth."
+"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"There was an unexpected problem within the Bluetooth system."
 "Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Impostazioni Bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Bluetooth Settings"
 "Warning_DismissableWarning_BluetoothLinkServiceError_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_ActionURL"	"vrmonitor://open/settings/bluetooth"
+"Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Header"	"Visore collegato alla scheda video errata"
+"[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Header"	"Headset Plugged Into Wrong Video Card"
+"Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Description"	"Per utilizzare questa applicazione è necessario collegare il visore e il monitor principale alla stessa scheda grafica."
+"[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Description"	"This application requires the headset and the main monitor be plugged into the same graphics card."
+"Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	" "
+"[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	" "
+"Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
+"[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Aggiorna i driver della scheda grafica"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"I driver della tua scheda grafica non sono aggiornati.\nPer una migliore esperienza con SteamVR, ti consigliamo di aggiornare i driver alla versione più recente."
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"You are running an old video driver.\nFor the best SteamVR experience, we recommend updating to the latest driver."
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Scarica driver"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Download Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx?lang=IT"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
 }
 }
