--- a/content/vrmonitor/translations/vrmonitor_errors_japanese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_japanese.txt
@@ -20,7 +20,7 @@
 "Error_NoCompositorAvailable_Description"	"これは SteamVR を正常に動作させるために必要となります。"
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
 "Error_NoCompositorAvailable_Action"	"コンポジターを起動"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"部屋がセットアップされていません"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"SteamVR が正常に動作するよう部屋をセットアップしてください。"
@@ -38,7 +38,7 @@
 "Error_CompositorNotRunning_Description"	"これはSteamVR が正常に動作するために必要となります。"
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
 "Error_CompositorNotRunning_Action"	"コンポジターを起動"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"実行中のコンポジターが多すぎます"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"SteamVR が正常に動作するためには、ただ1つのコンポジターのみを実行できます。"
@@ -258,7 +258,7 @@
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"ヘッドセットが適切に接続されていません"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
 "VRInitError_Driver_HmdDisplayNotFound_Description"	"ヘッドセットのディスプレイが見つかりませんでした。HDMI ケーブルがしっかりと接続されていることを確認後、以下をクリックしてヘッドセットを再起動してください。"
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"トラブルシューティング"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"問題が発生しました"
@@ -587,9 +587,9 @@
 "[english]Warning_DismissableWarning_BasestationSingleBaseModeHint_Description"	"If you are only using one base station, tracking quality will improve if you switch this basestation to mode A."
 "VRInitError_Init_NotAvailableToUtilityApps_Header"	"うーん、予期せぬことが発生しました。"
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_NotAvailableToUtilityApps_Description"	"予期しない問題が発生しました。問題を解決するには、SteamVR サポートをご利用ください。"
+"VRInitError_Init_NotAvailableToUtilityApps_Description"	"予期しない問題が発生しました。問題の解決には、SteamVR サポートをご利用ください。"
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_NotAvailableToUtilityApps_Action"	"SteamVR サポートをチェック"
+"VRInitError_Init_NotAvailableToUtilityApps_Action"	"SteamVR サポートをチェック　"
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Action"	"Check SteamVR Support"
 "Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"初回の警告"
 "[english]Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"Warnings for the first time"
@@ -882,11 +882,11 @@
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Sync On Beam チャンネルの競合"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Sync On Beam Channel Conflict"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"チャンネル %1 上に 2 つのベースステーションが同時に認識されました。最良の結果を得るため、同時に認識されるすべてのベースステーションに対して、個別のチャンネルを使用してください。"
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time.  For best results, use unique channels for all bases that can be seen at the same time."
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time. For best results, use unique channels for all bases that can be seen at the same time."
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"設定"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/bluetooth/configurechannels"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"ブルートゥースドライバ"
@@ -900,7 +900,7 @@
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"ブルートゥースリンクサービスが見つかりません"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Serivce not found"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Service not found"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"SteamVR に必要なファイルが見つかりません。SteamVR のインストール状況を確認してください。"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"A file we need for SteamVR is missing, please check your SteamVR installation."
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"トラブルシューティング"
@@ -908,7 +908,7 @@
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"ブルートゥースリンクサービスエラー"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Serivce error"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Service error"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"ブルートゥースシステム内で予期しない問題が発生しました。"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"There was an unexpected problem within the Bluetooth system."
 "Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"ブルートゥース設定"
@@ -923,5 +923,11 @@
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	" "
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"グラフィックドライバのアップグレード"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"ドライバをダウンロード"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Download Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
 }
 }
