--- a/content/vrmonitor/translations/vrmonitor_errors_korean.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_korean.txt
@@ -20,7 +20,7 @@
 "Error_NoCompositorAvailable_Description"	"SteamVR의 원활한 작동을 위해 다음이 필요합니다."
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
 "Error_NoCompositorAvailable_Action"	"컴포지터 실행하기"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"방이 설정되지 않았습니다."
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"SteamVR의 원활한 작동을 위해 방을 설정해주세요."
@@ -38,7 +38,7 @@
 "Error_CompositorNotRunning_Description"	"SteamVR이 제대로 작동하기 위해 이것이 필요합니다."
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
 "Error_CompositorNotRunning_Action"	"컴포지터 실행하기"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"실행 중인 컴포지터가 너무 많음"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"SteamVR이 올바르게 작동하려면 하나의 컴포지터만 실행해야 합니다."
@@ -258,7 +258,7 @@
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"헤드셋이 올바르게 연결되지 않음"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
 "VRInitError_Driver_HmdDisplayNotFound_Description"	"헤드셋의 디스플레이를 찾을 수 없습니다. HDMI 케이블이 잘 연결되어 있는지 확인하시고 아래를 클릭하셔서 재부팅해 주세요."
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"문제 해결"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"뭔가 잘못되었습니다."
@@ -607,7 +607,7 @@
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"Bluetooth Driver"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Description"	"링크 박스 설치를 완료하려면 드라이버가 설치되어야 합니다. 설치가 성공적으로 완료되면 SteamVR을 다시 시작해주십시오."
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Description"	"A driver needs to be installed to complete Link Box installation."
-"Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Action"	"설치"
+"Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Action"	"블루투스 설정"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Action"	"Bluetooth Settings"
 "Warning_DismissableWarning_BluetoothDriverFailedInstallation_Header"	"블루투스 드라이버 설치 실패"
 "[english]Warning_DismissableWarning_BluetoothDriverFailedInstallation_Header"	"Bluetooth Driver installation failed"
@@ -643,7 +643,7 @@
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Header"	"Bluetooth Link communication failed"
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Description"	"링크 박스 대화를 활성화하기 위해 블루투스 링크를 다시 시작해야 할 수 있습니다. 실패하면 SteamVR을 다시 시작하십시오."
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Description"	"Check link box connections, then unplug and replug power to the link box to reset it, then restart SteamVR."
-"Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Action"	"다시 시작"
+"Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Action"	"블루투스 설정"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Action"	"Bluetooth Settings"
 "Popover_Pose_Base_Action"	"베이스 스테이션 식별"
 "[english]Popover_Pose_Base_Action"	"Identify base station"
@@ -851,5 +851,9 @@
 "[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"To use your new driver you will need to restart SteamVR."
 "Warning_DismissableWarning_NewDriverInstalled_Action"	"재시작"
 "[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
+"Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
+"[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
+"Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
+"[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 }
 }
