--- a/content/vrmonitor/translations/vrmonitor_errors_romanian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_romanian.txt
@@ -20,7 +20,7 @@
 "Error_NoCompositorAvailable_Description"	"Ai nevoie de acesta pentru ca SteamVR să ruleze corespunzător."
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
 "Error_NoCompositorAvailable_Action"	"Lansează compozitorul"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"Camera nu este pregătită"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"Pregătește camera pentru ca SteamVR să ruleze corect."
@@ -38,7 +38,7 @@
 "Error_CompositorNotRunning_Description"	"Ai nevoie de acesta pentru ca SteamVR să ruleze corespunzător."
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
 "Error_CompositorNotRunning_Action"	"Pornește compozitorul"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"Rulează prea mulți compozitori"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"Doar un singur compozitor poate funcționa pentru ca SteamVR să ruleze corespunzător."
@@ -65,9 +65,9 @@
 "[english]Error_TrackingDevice_NoPose_Action"	"Troubleshooting"
 "VRInitError_Unknown_Header"	"Hmm, asta nu trebuia să se întâmple."
 "[english]VRInitError_Unknown_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Unknown_Description"	"A apărut o problemă neașteptată. Te rugăm să trimiți un raport de sistem către steamvr@valvesoftware.com."
+"VRInitError_Unknown_Description"	"A apărut o problemă neașteptată. Te rugăm să vizitezi asistența SteamVR pentru ajutor."
 "[english]VRInitError_Unknown_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Unknown_Action"	"Creează raportul de sistem"
+"VRInitError_Unknown_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_Unknown_Action"	"Check SteamVR Support"
 "VRInitError_Init_InstallationNotFound_Header"	"Fișiere lipsă"
 "[english]VRInitError_Init_InstallationNotFound_Header"	"Missing files"
@@ -107,9 +107,9 @@
 "[english]VRInitError_Init_InterfaceNotFound_Action"	""
 "VRInitError_Init_InvalidInterface_Header"	"Hmm, asta nu trebuia să se întâmple."
 "[english]VRInitError_Init_InvalidInterface_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_InvalidInterface_Description"	"A apărut o problemă neașteptă. Te rugăm să trimiți un raport de sistem către steamvr@valvesoftware.com."
+"VRInitError_Init_InvalidInterface_Description"	"A apărut o problemă neașteptă. Te rugăm să vizitezi asistența SteamVR pentru ajutor."
 "[english]VRInitError_Init_InvalidInterface_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_InvalidInterface_Action"	"Creează raportul de sistem"
+"VRInitError_Init_InvalidInterface_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_Init_InvalidInterface_Action"	"Check SteamVR Support"
 "VRInitError_Init_UserConfigDirectoryInvalid_Header"	"Ceva este în neregulă"
 "[english]VRInitError_Init_UserConfigDirectoryInvalid_Header"	"Something is wrong"
@@ -125,9 +125,9 @@
 "[english]VRInitError_Init_HmdNotFound_Action"	"Troubleshooting"
 "VRInitError_Init_NotInitialized_Header"	"Hmm, asta nu trebuia să se întâmple."
 "[english]VRInitError_Init_NotInitialized_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_NotInitialized_Description"	"A apărut o problemă neașteptată. Te rugăm să trimiți un raport de sistem către steamvr@valvesoftware.com."
+"VRInitError_Init_NotInitialized_Description"	"A apărut o problemă neașteptată. Te rugăm să vizitezi asistența SteamVR pentru ajutor."
 "[english]VRInitError_Init_NotInitialized_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_NotInitialized_Action"	"Creează raportul de sistem"
+"VRInitError_Init_NotInitialized_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_Init_NotInitialized_Action"	"Check SteamVR Support"
 "VRInitError_Init_PathRegistryNotFound_Header"	"Fișiere lipsă"
 "[english]VRInitError_Init_PathRegistryNotFound_Header"	"Missing files"
@@ -157,55 +157,55 @@
 "[english]VRInitError_Init_AppInfoInitFailed_Header"	"Something is wrong"
 "VRInitError_Init_AppInfoInitFailed_Description"	"O componentă internă din SteamVR nu funcționează corespunzător. Te rugăm să creezi un raport de sistem și să îl trimți către steamvr@valvesoftware.com."
 "[english]VRInitError_Init_AppInfoInitFailed_Description"	"An internal component of SteamVR isn't working properly. Please check SteamVR Support for help."
-"VRInitError_Init_AppInfoInitFailed_Action"	"Creează raportul de sistem"
+"VRInitError_Init_AppInfoInitFailed_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_Init_AppInfoInitFailed_Action"	"Check SteamVR Support"
 "VRInitError_Init_Retry_Header"	"Hmm, asta nu trebuia să se întâmple."
 "[english]VRInitError_Init_Retry_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_Retry_Description"	"A apărut o problemă neașteptată. Te rugăm să trimiți un raport de sistem către steamvr@valvesoftware.com."
+"VRInitError_Init_Retry_Description"	"A apărut o problemă neașteptată. Te rugăm să vizitezi asistența SteamVR pentru ajutor."
 "[english]VRInitError_Init_Retry_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_Retry_Action"	"Creează raportul de sistem"
+"VRInitError_Init_Retry_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_Init_Retry_Action"	"Check SteamVR Support"
 "VRInitError_Init_InitCanceledByUser_Header"	"Hmm, asta nu trebuia să se întâmple."
 "[english]VRInitError_Init_InitCanceledByUser_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_InitCanceledByUser_Description"	"A apărut o problemă neașteptată. Te rugăm să trimiți un raport de sistem către steamvr@valvesoftware.com."
+"VRInitError_Init_InitCanceledByUser_Description"	"A apărut o problemă neașteptată. Te rugăm să vizitezi asistența SteamVR pentru ajutor."
 "[english]VRInitError_Init_InitCanceledByUser_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_InitCanceledByUser_Action"	"Creează raportul de sistem"
+"VRInitError_Init_InitCanceledByUser_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_Init_InitCanceledByUser_Action"	"Check SteamVR Support"
 "VRInitError_Init_AnotherAppLaunching_Header"	"Hmm, asta nu trebuia să se întâmple."
 "[english]VRInitError_Init_AnotherAppLaunching_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_AnotherAppLaunching_Description"	"A apărut o problemă neașteptată. Te rugăm să trimiți un raport de sistem către steamvr@valvesoftware.com."
+"VRInitError_Init_AnotherAppLaunching_Description"	"A apărut o problemă neașteptată. Te rugăm să vizitezi asistența SteamVR pentru ajutor."
 "[english]VRInitError_Init_AnotherAppLaunching_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_AnotherAppLaunching_Action"	"Creează raportul de sistem"
+"VRInitError_Init_AnotherAppLaunching_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_Init_AnotherAppLaunching_Action"	"Check SteamVR Support"
 "VRInitError_Init_SettingsInitFailed_Header"	"Hmm, asta nu trebuia să se întâmple."
 "[english]VRInitError_Init_SettingsInitFailed_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_SettingsInitFailed_Description"	"A apărut o problemă neașteptată. te rugăm să trimiți un raport de sistem către steamvr@valvesoftware.com."
+"VRInitError_Init_SettingsInitFailed_Description"	"A apărut o problemă neașteptată. Te rugăm să vizitezi asistența SteamVR pentru ajutor."
 "[english]VRInitError_Init_SettingsInitFailed_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_SettingsInitFailed_Action"	"Creează raportul de sistem"
+"VRInitError_Init_SettingsInitFailed_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_Init_SettingsInitFailed_Action"	"Check SteamVR Support"
 "VRInitError_Init_ShuttingDown_Header"	"Hmm, asta nu trebuia să se întâmple."
 "[english]VRInitError_Init_ShuttingDown_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_ShuttingDown_Description"	"A apărut o problemă neașteptată. Te rugăm să trimiți un raport de sistem către steamvr@valvesoftware.com."
+"VRInitError_Init_ShuttingDown_Description"	"A apărut o problemă neașteptată. Te rugăm să vizitezi asistența SteamVR pentru ajutor."
 "[english]VRInitError_Init_ShuttingDown_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_ShuttingDown_Action"	"Creează raportul de sistem"
+"VRInitError_Init_ShuttingDown_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_Init_ShuttingDown_Action"	"Check SteamVR Support"
 "VRInitError_Init_TooManyObjects_Header"	"Hmm, asta nu trebuia să se întâmple."
 "[english]VRInitError_Init_TooManyObjects_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_TooManyObjects_Description"	"A apărut o problemă neașteptată. Te rugăm să trimiți un raport de sistem către steamvr@valvesoftware.com."
+"VRInitError_Init_TooManyObjects_Description"	"A apărut o problemă neașteptată. Te rugăm să vizitezi asistența SteamVR pentru ajutor."
 "[english]VRInitError_Init_TooManyObjects_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_TooManyObjects_Action"	"Creează raportul de sistem"
+"VRInitError_Init_TooManyObjects_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_Init_TooManyObjects_Action"	"Check SteamVR Support"
 "VRInitError_Init_NoServerForBackgroundApp_Header"	"Hmm, asta nu trebuia să se întâmple."
 "[english]VRInitError_Init_NoServerForBackgroundApp_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_NoServerForBackgroundApp_Description"	"A apărut o problemă neașteptată. Te rugăm să trimiți un raport de sistem către steamvr@valvesoftware.com."
+"VRInitError_Init_NoServerForBackgroundApp_Description"	"A apărut o problemă neașteptată. Te rugăm să vizitezi asistența SteamVR pentru ajutor."
 "[english]VRInitError_Init_NoServerForBackgroundApp_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_NoServerForBackgroundApp_Action"	"Creează raportul de sistem"
+"VRInitError_Init_NoServerForBackgroundApp_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_Init_NoServerForBackgroundApp_Action"	"Check SteamVR Support"
 "VRInitError_Init_NotSupportedWithCompositor_Header"	"Hmm, asta nu trebuia să se întâmple."
 "[english]VRInitError_Init_NotSupportedWithCompositor_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_NotSupportedWithCompositor_Description"	"A apărut o problemă neașteptată. Te rugăm să trimiți un raport de sistem către steamvr@valvesoftware.com."
+"VRInitError_Init_NotSupportedWithCompositor_Description"	"A apărut o problemă neașteptată. Te rugăm să vizitezi asistența SteamVR pentru ajutor."
 "[english]VRInitError_Init_NotSupportedWithCompositor_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_NotSupportedWithCompositor_Action"	"Creează raportul de sistem"
+"VRInitError_Init_NotSupportedWithCompositor_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_Init_NotSupportedWithCompositor_Action"	"Check SteamVR Support"
 "VRInitError_Driver_Failed_Header"	"Ceva este în neregulă"
 "[english]VRInitError_Driver_Failed_Header"	"Something is wrong"
@@ -258,7 +258,7 @@
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Headsetul nu este conectat corespunzător"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
 "VRInitError_Driver_HmdDisplayNotFound_Description"	"Afișajul headsetului nu a fost găsit, te rugăm să te asiguri că ai conectat bine cablurile HDMI, apoi repornește-l printr-un clic mai jos."
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Depanare"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"Ceva este în neregulă"
@@ -293,9 +293,9 @@
 "[english]VRInitError_IPC_MutexInitFailed_Action"	"Troubleshooting"
 "VRInitError_IPC_Failed_Header"	"Hmm, asta nu trebuia să se întâmple."
 "[english]VRInitError_IPC_Failed_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_IPC_Failed_Description"	"A apărut o problemă neașteptată. Te rugăm să trimiți un raport de sistem către steamvr@valvesoftware.com."
+"VRInitError_IPC_Failed_Description"	"A apărut o problemă neașteptată. Te rugăm să vizitezi asistența SteamVR pentru ajutor."
 "[english]VRInitError_IPC_Failed_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_IPC_Failed_Action"	"Creează raportul de sistem"
+"VRInitError_IPC_Failed_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_IPC_Failed_Action"	"Check SteamVR Support"
 "VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Header"	"Nu se poate realiza conexiunea către Oculus runtime"
 "[english]VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Header"	"Unable to connect to Oculus runtime"
@@ -445,7 +445,7 @@
 "[english]Lighthouse_UnknownEvent_Header"	"Lighthouse error"
 "Lighthouse_UnknownEvent_Description"	"Ceva este în neregulă cu sistemul tău Lighthouse. Te rugăm trimiți raport de sistem către steamvr@valvesoftware.com"
 "[english]Lighthouse_UnknownEvent_Description"	"Something is wrong with your Lighthouse system. Please check SteamVR Support for help."
-"Lighthouse_UnknownEvent_Action"	"Creează raportul de sistem"
+"Lighthouse_UnknownEvent_Action"	"Vizitează asistența SteamVR"
 "[english]Lighthouse_UnknownEvent_Action"	"Check SteamVR Support"
 "Lighthouse_BasestationFactoryError_Header"	"Stația de bază este inutilizabilă"
 "[english]Lighthouse_BasestationFactoryError_Header"	"Base station unusable"
@@ -587,9 +587,9 @@
 "[english]Warning_DismissableWarning_BasestationSingleBaseModeHint_Description"	"If you are only using one base station, tracking quality will improve if you switch this basestation to mode A."
 "VRInitError_Init_NotAvailableToUtilityApps_Header"	"Hmm, asta nu trebuia să se întâmple."
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_NotAvailableToUtilityApps_Description"	"A apărut o problemă neașteptată. Te rugăm să trimiți un raport către steamvr@valvesoftware.com."
+"VRInitError_Init_NotAvailableToUtilityApps_Description"	"A apărut o problemă neașteptată. Te rugăm să vizitezi asistența SteamVR pentru ajutor."
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
-"VRInitError_Init_NotAvailableToUtilityApps_Action"	"Creează raportul de sistem"
+"VRInitError_Init_NotAvailableToUtilityApps_Action"	"Vizitează asistența SteamVR"
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Action"	"Check SteamVR Support"
 "Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"Avertizări pentru prima dată"
 "[english]Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"Warnings for the first time"
@@ -839,6 +839,8 @@
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Action"	"Update Firmware"
 "Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/bluetooth/configurechannels"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Driver Bluetooth"
