--- a/content/vrmonitor/translations/vrmonitor_errors_spanish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_spanish.txt
@@ -20,7 +20,7 @@
 "Error_NoCompositorAvailable_Description"	"Necesitarás esto para que SteamVR funcione correctamente."
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
 "Error_NoCompositorAvailable_Action"	"Iniciar compositor"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"La habitación no está configurada"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"Configura tu habitación para que SteamVR funcione correctamente."
@@ -38,7 +38,7 @@
 "Error_CompositorNotRunning_Description"	"Necesitarás esto para que SteamVR funcione correctamente."
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
 "Error_CompositorNotRunning_Action"	"Iniciar compositor"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"Demasiados compositores ejecutándose"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"Sólo se puede ejecutar un compositor para que SteamVR funcione correctamente."
@@ -258,7 +258,7 @@
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"El HMD no está conectado correctamente"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
 "VRInitError_Driver_HmdDisplayNotFound_Description"	"No se ha detectado la pantalla del HMD. Asegúrate de que los cables HDMI estén firmemente conectados y después haz clic abajo para reiniciarlo."
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Solución de problemas"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"Algo va mal"
@@ -882,11 +882,11 @@
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Conflicto de canal sync-on-beam"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Sync On Beam Channel Conflict"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Se han detectado dos bases en el canal %1 al mismo tiempo. Para obtener unos resultados óptimos, utiliza canales distintos para cada una de las bases que se puedan ver a la vez."
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time.  For best results, use unique channels for all bases that can be seen at the same time."
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time. For best results, use unique channels for all bases that can be seen at the same time."
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configurar"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/bluetooth/configurechannels"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Controlador Bluetooth"
@@ -900,7 +900,7 @@
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"No se ha encontrado el servicio de enlace Bluetooth"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Serivce not found"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Service not found"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"Falta un archivo que necesitamos para SteamVR. Comprueba la instalación de SteamVR."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"A file we need for SteamVR is missing, please check your SteamVR installation."
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"Solución de problemas"
@@ -908,14 +908,14 @@
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326&l=spanish#steamvr-issues"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Error del servicio de enlace Bluetooth"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Serivce error"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Service error"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"Hubo un problema inesperado en el sistema Bluetooth."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"There was an unexpected problem within the Bluetooth system."
 "Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Configuración de Bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Bluetooth Settings"
 "Warning_DismissableWarning_BluetoothLinkServiceError_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_ActionURL"	"vrmonitor://open/settings/bluetooth"
-"Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Header"	"Visor conectado a la tarjeta de video equivocada"
+"Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Header"	"Visor conectado a la tarjeta de vídeo equivocada"
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Header"	"Headset Plugged Into Wrong Video Card"
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Description"	"Esta aplicación requiere que el visor y el monitor principal estén conectados a la misma tarjeta gráfica."
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Description"	"This application requires the headset and the main monitor be plugged into the same graphics card."
@@ -923,5 +923,13 @@
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	" "
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Actualizar controlador de gráficos"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"Estás utilizando un controlador de vídeo antiguo.\nPara obtener la mejor experiencia en SteamVR, recomendamos actualizar al controlador más reciente."
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"You are running an old video driver.\nFor the best SteamVR experience, we recommend updating to the latest driver."
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Descargar controlador"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Download Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx?lang=ES"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
 }
 }
