--- a/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
@@ -20,7 +20,7 @@
 "Error_NoCompositorAvailable_Description"	"Den måste köras för att SteamVR ska fungera korrekt."
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
 "Error_NoCompositorAvailable_Action"	"Starta Compositor"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"Rummet är ej konfigurerat"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"Konfigurera ditt rum för att SteamVR ska fungera korrekt."
@@ -38,7 +38,7 @@
 "Error_CompositorNotRunning_Description"	"Det behövs för att SteamVR ska fungera korrekt."
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
 "Error_CompositorNotRunning_Action"	"Starta Compositor"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"För många compositors körs"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"Endast en compositor kan köras för att SteamVR ska fungera korrekt."
@@ -259,7 +259,7 @@
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset ej anslutet korrekt"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
 "VRInitError_Driver_HmdDisplayNotFound_Description"	"Headsetets skärm kunde ej hittas, se till att dina HDMI-kablar är fullständigt inkopplade och starta sedan om det genom att klicka nedan."
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Felsökning"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"Något är fel"
@@ -880,10 +880,10 @@ Du behöver kontakta HTC."
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Action"	"Update Firmware"
 "Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Konfigurera"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/bluetooth/configurechannels"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Bluetooth-drivrutin"
@@ -908,5 +908,13 @@ Du behöver kontakta HTC."
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	" "
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Uppdatera grafikdrivrutin"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"Du använder en gammal grafikdrivrutin.\nFör den bästa SteamVR-upplevelsen rekommenderar vi att du uppdaterar till den senaste drivrutinen."
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"You are running an old video driver.\nFor the best SteamVR experience, we recommend updating to the latest driver."
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Ladda ned drivrutin"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Download Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
 }
 }
