--- a/content/vrmonitor/translations/vrmonitor_errors_tchinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_tchinese.txt
@@ -20,7 +20,7 @@
 "Error_NoCompositorAvailable_Description"	"您需要它 SteamVR 才能正確工作。"
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
 "Error_NoCompositorAvailable_Action"	"啟動疊影器"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"房間尚未設定完成"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"完成房間設定才能使 SteamVR 正確的工作。"
@@ -38,14 +38,14 @@
 "Error_CompositorNotRunning_Description"	"您需要它 SteamVR 才能正確工作。"
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
 "Error_CompositorNotRunning_Action"	"啟動疊影器"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"疊影器執行數量過多"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
-"Error_CompositorTooManyRunning_Description"	"只有一次執行一個疊影器 SteamVR 才能正確工作。"
+"Error_CompositorTooManyRunning_Description"	"一次只能執行一個疊影器，如此 SteamVR 才能正確運作。"
 "[english]Error_CompositorTooManyRunning_Description"	"Only one compositor can run for SteamVR to work correctly."
 "Error_CompositorTooManyRunning_Action"	"重新啟動 SteamVR"
 "[english]Error_CompositorTooManyRunning_Action"	"Restart SteamVR"
-"Error_VRServerNotRunning_Header"	"VR 伺服器未運行"
+"Error_VRServerNotRunning_Header"	"VR 伺服器未執行"
 "[english]Error_VRServerNotRunning_Header"	"VR Server is not running"
 "Error_VRServerNotRunning_Description"	"您需要它 SteamVR 才能正確工作。"
 "[english]Error_VRServerNotRunning_Description"	"You'll need this for SteamVR to work correctly."
@@ -258,7 +258,7 @@
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"頭戴顯示器未正確連接"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
 "VRInitError_Driver_HmdDisplayNotFound_Description"	"無法找到頭戴裝置的顯示器，請確認您的 HDMI 纜線是否連接牢靠，然後點擊下方來重新啟動。"
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"疑難排解"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"發生錯誤"
@@ -843,7 +843,7 @@
 "[english]VRInitError_Compositor_UnableToCreateDevice_Action"	"Troubleshooting"
 "Lighthouse_BasestationInternalFault_06_Header"	"定位器無法使用"
 "[english]Lighthouse_BasestationInternalFault_06_Header"	"Base station unusable"
-"Lighthouse_BasestationInternalFault_06_Description"	"定位器產生內部問題（錯誤 06）。請找出指示燈閃紅光的定位器，關閉其電源，再重新啟動。如果問題持續發生，請聯繫製造商尋求協助。"
+"Lighthouse_BasestationInternalFault_06_Description"	"定位器發生內部問題（錯誤 06）。請將指示燈閃紅光的定位器重新開機。如果問題持續發生，請聯繫製造商尋求協助。"
 "[english]Lighthouse_BasestationInternalFault_06_Description"	"A base station has developed an internal problem (fault 06). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_06_Action"	"造訪 htcvive.com/support"
 "[english]Lighthouse_BasestationInternalFault_06_Action"	"Visit htcvive.com/support"
@@ -855,6 +855,8 @@
 "[english]Lighthouse_BasestationInternalFault_07_Action"	"Visit htcvive.com/support"
 "Warning_DismissableWarning_NeedKnucklesDriver_Header"	"現有可用的 Knuckles 驅動程式"
 "[english]Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Knuckles Driver Available"
+"Warning_DismissableWarning_NeedKnucklesDriver_Description"	"您正在使用 Knuckes 控制器，但尚未安裝 Knuckles 驅動程式。"
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Description"	"You are using Knuckes controllers, but don't have the Knuckles driver installed."
 "Warning_DismissableWarning_NeedKnucklesDriver_Action"	"安裝驅動程式"
 "[english]Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Install Driver"
 "Warning_DismissableWarning_NewDriverInstalled_Header"	"已安裝新驅動程式"
@@ -871,14 +873,16 @@
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Click here for more information"
 "Lighthouse_RecommendControllerUpgradeOverUsb_Header"	"控制器需要更新"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Header"	"Controller needs update"
+"Lighthouse_RecommendControllerUpgradeOverUsb_Description"	"一個控制器難以維持無線連結。請將您的控制器接上 USB 連接線進行韌體更新以修復這個問題。"
+"[english]Lighthouse_RecommendControllerUpgradeOverUsb_Description"	"A controller is having trouble staying connected over wireless.  Please connect your controllers with a USB cable to perform a firmware update to fix this problem."
 "Lighthouse_RecommendControllerUpgradeOverUsb_Action"	"更新韌體"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Action"	"Update Firmware"
 "Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"　"
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"　"
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"設定"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/bluetooth/configurechannels"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"藍牙驅動程式"
@@ -892,7 +896,7 @@
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"未找尋到藍牙連接服務"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Serivce not found"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Service not found"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"SteamVR 需要的檔案遺失了。請檢查 SteamVR 的安裝情況。"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"A file we need for SteamVR is missing, please check your SteamVR installation."
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"疑難排解"
@@ -900,16 +904,28 @@
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"藍牙連接服務錯誤"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Serivce error"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Service error"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"藍牙系統發生未預期的狀況。"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"There was an unexpected problem within the Bluetooth system."
 "Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"藍牙設定"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Bluetooth Settings"
 "Warning_DismissableWarning_BluetoothLinkServiceError_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_ActionURL"	"vrmonitor://open/settings/bluetooth"
+"Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Header"	"頭戴顯示器插入錯誤的顯示卡"
+"[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Header"	"Headset Plugged Into Wrong Video Card"
+"Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Description"	"該應用程式需要將頭戴裝置與主要顯示器插入同一張顯示卡。"
+"[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Description"	"This application requires the headset and the main monitor be plugged into the same graphics card."
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	"　"
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	" "
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	"　"
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"升級顯示卡驅動程式"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"您正在運行舊的驅動程式。為了讓您有最佳的 SteamVR 體驗，建議您更新您的驅動程式至最新版。"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"You are running an old video driver.\nFor the best SteamVR experience, we recommend updating to the latest driver."
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"下載驅動程式"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Download Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx?lang=tw"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
 }
 }
