--- a/content/vrmonitor/translations/vrmonitor_errors_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_thai.txt
@@ -20,7 +20,7 @@
 "Error_NoCompositorAvailable_Description"	"คุณจำเป็นจะต้องใช้สิ่งนี้เพื่อเริ่ม SteamVR ให้ทำงานได้อย่างถูกต้อง"
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
 "Error_NoCompositorAvailable_Action"	"เริ่มเปิดตัวประสานการทำงาน"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"ห้องไม่ได้ถูกตั้งค่า"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"ตั้งค่าห้องของคุณเพื่อให้ SteamVR ทำงานได้อย่างถูกต้อง"
@@ -38,7 +38,7 @@
 "Error_CompositorNotRunning_Description"	"คุณจำเป็นจะต้องใช้สิ่งนี้เพื่อให้ SteamVR ทำงานได้อย่างถูกต้อง"
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
 "Error_CompositorNotRunning_Action"	"เริ่มเปิดตัวประสานการทำงาน"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"ตัวประสานการทำงานกำลังเปิดอยู่มากเกินไป"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"ตัวประสานการทำงานเพียงตัวเดียวเท่านั้นที่สามารถเปิดได้ เพื่อให้ SteamVR ทำงานได้อย่างถูกต้อง"
@@ -258,7 +258,7 @@
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"เครื่องสวมศีรษะไม่ได้เชื่อมต่ออย่างถูกต้อง"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
 "VRInitError_Driver_HmdDisplayNotFound_Description"	"ไม่พบหน้าจอของเครื่องสวมศีรษะ กรุณาตรวจสอบให้แน่ใจว่าสาย HDMI ของคุณเชื่อมต่ออยู่อย่างมั่นคงแล้ว จากนั้นรีบูตโดยการคลิกด้านล่าง"
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"การแก้ไขปัญหา"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"บางอย่างผิดปกติ"
@@ -882,13 +882,11 @@
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"ความขัดแย้งของช่องสัญญาณซิงค์ออนบีม"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Sync On Beam Channel Conflict"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"มองเห็นสองสถานีฐานบนช่องสัญญาณ %1 ในเวลาเดียวกัน เพื่อผลลัพธ์ที่ดีที่สุด ให้ใช้ช่องสัญญาณแบบไม่ซ้ำกันสำหรับสถานีฐานทั้งหมดที่จะสามารถมองเห็นได้ในเวลาเดียวกัน"
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time.  For best results, use unique channels for all bases that can be seen at the same time."
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"
-"
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"
-"
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time. For best results, use unique channels for all bases that can be seen at the same time."
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"กำหนดค่า"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"ไดรเวอร์บลูทูธ"
@@ -902,7 +900,7 @@
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"ไม่พบเซอร์วิสลิงก์บลูทูธ"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Serivce not found"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Service not found"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"ไฟล์ที่เราจำเป็นต้องใช้สำหรับ SteamVR สูญหาย กรุณาตรวจสอบการติดตั้ง SteamVR ของคุณ"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"A file we need for SteamVR is missing, please check your SteamVR installation."
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"การแก้ไขปัญหา"
@@ -910,7 +908,7 @@
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326&l=thai#steamvr-issues"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"ข้อผิดพลาดของเซอร์วิสลิงก์บลูทูธ"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Serivce error"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Service error"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"ตรวจพบปัญหาที่ไม่คาดคิดภายในระบบบลูทูธ"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"There was an unexpected problem within the Bluetooth system."
 "Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"การตั้งค่าบลูทูธ"
@@ -927,5 +925,13 @@
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	"
 "
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"อัปเกรดไดรเวอร์กราฟิก"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"คุณกำลังใช้งานไดรเวอร์วิดีโอเวอร์ชันเก่าอยู่ \nสำหรับประสบการณ์ SteamVR ที่ดีที่สุด เราแนะนำให้อัปเดตไดรเวอร์เป็นเวอร์ชันล่าสุด"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"You are running an old video driver.\nFor the best SteamVR experience, we recommend updating to the latest driver."
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"ดาวน์โหลดไดรเวอร์"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Download Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx?lang=th"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
 }
 }
