--- a/content/vrmonitor/translations/vrmonitor_errors_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_turkish.txt
@@ -19,8 +19,8 @@
 "[english]Error_NoCompositorAvailable_Header"	"Compositor is not available"
 "Error_NoCompositorAvailable_Description"	"Bunun için SteamVR doğru bir şekilde çalıştırmanız gerekmekte."
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
-"Error_NoCompositorAvailable_Action"	"Aktarıcıyı Başlat"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"Error_NoCompositorAvailable_Action"	"SteamVR'ı Yeniden Başlat"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"Oda ayarlı değil"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"SteamVR'ın düzgün çalışması için odanızı ayarlayın."
@@ -37,8 +37,8 @@
 "[english]Error_CompositorNotRunning_Header"	"Compositor is not running"
 "Error_CompositorNotRunning_Description"	"SteamVR'ın düzgün çalışması için bu gerekir."
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
-"Error_CompositorNotRunning_Action"	"Aktarıcıyı Başlat"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"Error_CompositorNotRunning_Action"	"SteamVR'ı Yeniden Başlat"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"Çok sayıda aktarıcı çalışıyor"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"SteamVR'ın düzgünce çalışması için sadece bir aktarıcı çalışabilir."
@@ -257,8 +257,8 @@
 "[english]VRInitError_Driver_CalibrationInvalid_Action"	"Troubleshooting"
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Başlık düzgün şekilde bağlanmamış"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
-"VRInitError_Driver_HmdDisplayNotFound_Description"	"Başlığın ekranı bulunamadı, lütfen HDMI kablolarının güvenli bir şekilde bağlandığından emin olup aşağıya tıklayarak yeniden başlatın."
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"VRInitError_Driver_HmdDisplayNotFound_Description"	"Başlığın ekranı bulunamadı, lütfen video kablolarının güvenli bir şekilde bağlandığından emin olup aşağıya tıklayarak yeniden başlatın."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Sorun giderme"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"Bir şeyler yanlış gitti"
@@ -884,11 +884,11 @@
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Kanal Senkronizasyonu Çakışması"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Sync On Beam Channel Conflict"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"İki ana istasyon da aynı anda %1 kanalını kullanıyor. En iyi sonuçlar için bütün ana istasyonlarınızda aynı anda görülebilecek özgün kanalları kullanın."
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time.  For best results, use unique channels for all bases that can be seen at the same time."
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time. For best results, use unique channels for all bases that can be seen at the same time."
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Yapılandır"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/bluetooth/configurechannels"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Bluetooth Sürücüsü"
@@ -902,7 +902,7 @@
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Hizmeti bulunamadı"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Serivce not found"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Service not found"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"SteamVR için gerekli bir dosya eksik, lütfen SteamVR kurulumunu gözden geçirin."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"A file we need for SteamVR is missing, please check your SteamVR installation."
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"Sorun Giderme"
@@ -910,7 +910,7 @@
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Hizmeti hatası"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Serivce error"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Service error"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"Bluetooth sisteminde beklenmeyen bir hata oluştu."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"There was an unexpected problem within the Bluetooth system."
 "Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Bluetooth Ayarları"
@@ -925,5 +925,21 @@
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	" "
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Ekran Kartı Sürücünüzü Güncelleştirin"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"Ekran kartı sürücünüzün eski bir sürümünü kullanıyorsunuz.\nEn iyi SteamVR tecrübesi için en güncel sürücüyü yüklemenizi tavsiye ediyoruz."
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"You are running an old video driver.\nFor the best SteamVR experience, we recommend updating to the latest driver."
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Sürücüyü İndir"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Download Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
+"Error_NoCompositorAvailable_ActionURL"	"vrmonitor://restartsystem"
+"[english]Error_NoCompositorAvailable_ActionURL"	"vrmonitor://restartsystem"
+"Error_CompositorNotRunning_ActionURL"	"vrmonitor://restartsystem"
+"[english]Error_CompositorNotRunning_ActionURL"	"vrmonitor://restartsystem"
+"VRInitError_Compositor_D3D11HardwareRequired_Action"	"SteamVR'ı Yeniden Başlat"
+"[english]VRInitError_Compositor_D3D11HardwareRequired_Action"	"Restart SteamVR"
+"VRInitError_Compositor_D3D11HardwareRequired_ActionURL"	"vrmonitor://restartsystem"
+"[english]VRInitError_Compositor_D3D11HardwareRequired_ActionURL"	"vrmonitor://restartsystem"
 }
 }
