--- a/content/vrmonitor/translations/vrmonitor_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_finnish.txt
@@ -196,7 +196,7 @@
 "MenuAction_CreateSystemReport"	"Luo järjestelmäraportti"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
 "MenuAction_DisplayFrameTiming"	"Näytä kehysajastus"
-"[english]MenuAction_DisplayFrameTiming"	"Display Frame Timing"
+"[english]MenuAction_DisplayFrameTiming"	"Advanced Frame Timing"
 "MenuAction_RecordTrackingData"	"Nauhoita seurantatietoja"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"Lopeta tallennus"
@@ -620,7 +620,7 @@
 "PairingWizard_PairAnotherController"	"Pariliitä toinen ohjain"
 "[english]PairingWizard_PairAnotherController"	"Pair Another Controller"
 "PairingWizard_LookingForControllers_Header"	"Etsitään Vive Controlleria..."
-"[english]PairingWizard_LookingForControllers_Header"	"Looking for Vive Controller..."
+"[english]PairingWizard_LookingForControllers_Header"	"Looking for controller..."
 "PairingWizard_LookingForControllers_Content"	"Paina ja pidä Sovellus- ja Järjestelmä-painikkeita pohjassa, kunnes kuulet äänimerkin. \n\nOhjaimen LED-valon pitäisi alkaa vilkkua sinisenä, kun ohjaimen voi pariliittää."
 "[english]PairingWizard_LookingForControllers_Content"	"Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
 "PairingWizard_TimeoutHappened_Header"	"Ohjainta ei tunnistettu"
@@ -632,13 +632,13 @@
 "PairingWizard_PairingFailed_Content"	"Varmista, että ohjaimesi on ladattu ja lähellä visiiriäsi kun muodostat pariliitosta.\n\nValitse 'Yritä uudelleen' jatkaaksesi."
 "[english]PairingWizard_PairingFailed_Content"	"Make sure your controller is charged and stays near your headset when pairing.\n\nClick 'Retry' below to try again."
 "PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive-ohjain pariliitetty!"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_MoreDonglesAvailable_Content"	"Vive-ohjaimesi on pariliitetty ja se on valmis käytettäväksi. Valitse alta 'Pariliitä toinen ohjain', jos tahdot pariliittää uuden ohjaimen."
-"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your Vive controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
+"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
 "PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive-ohjain pariliitetty!"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Vive-ohjaimesi on pariliitetty ja valmis."
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your Vive controller is paired and ready."
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your controller is paired and ready."
 "FirmwareWizard_StartQuestion_TextContent"	"Tekstiä, joka selittää asioita."
 "[english]FirmwareWizard_StartQuestion_TextContent"	"Some text content describing what is going to happen."
 "MenuAction_RunTutorial"	"Aloita tutoriaali"
@@ -1364,7 +1364,7 @@
 "MenuAction_WakeupAllBaseStations"	"Herätä kaikki tukiasemat"
 "[english]MenuAction_WakeupAllBaseStations"	"Wakeup All Base Stations"
 "FirmwareWizard_ShutdownForRecovery_TextContent"	"Eräs Vive-visiirisi osa vaatii laiteohjelmiston päivityksen toiminnalliseen tilaan palauttamiseksi.\n\nTahdotko jatkaa?"
-"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your Vive hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
 "FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Tukiaseman laiteohjelmisto epäonnistui"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Firmware Base Station Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Laiteohjelmiston päivitys epäonnistui."
@@ -1396,7 +1396,7 @@
 "Settings_Audio_AudioMirrorUnsupported"	"Äänen peilausta ei tueta tällä alustalla"
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this platform"
 "Settings_AllowReprojection"	"Salli lomitettu uudelleenprojektio"
-"[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
+"[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
 "DismissableWarning_Detected"	"Tunnistettu"
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss AP"
@@ -1420,9 +1420,9 @@
 "Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>Tärkeä kameran laiteojelmistopäivitys täytyy suorittaa. Osoita visiiri-kuvaketta ja valitse Päivitä ohjelmisto.</font>"
 "[english]Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>There is a critical camera firmware update that must be applied. Hover over the headset icon and select Update Firmware.</font>"
 "Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>USB-portti ei tunnista siihen kytkettyä Viven kameraa.<br>Kokeile toista USB-porttia ja käynnistä SteamVR uudelleen.</font>"
-"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the Vive is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
+"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the headset is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
 "FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Vive-visiirisi tarvitsee ohjelmistopäivityksen SteamVR:n käytön jatkamiseen.\n\nHaluatko jatkaa?"
-"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your Vive headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
 "Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "[english]Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "MenuAction_KnockKnock"	"Kop kop"
@@ -1556,7 +1556,7 @@
 "Settings_Advanced_DirectMode_Header"	"Suora tila"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
 "Settings_ForceReprojection"	"Ota käyttöön aina päällä oleva reprojisointi."
-"[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
+"[english]Settings_ForceReprojection"	"Enable 'always-on reprojection'"
 "Settings_ForceReprojection_Info"	"Tämä asetus sopii vain ei-aktiivisille peleille, koska se heikentää\nseurantatarkkuutta ja antaa hitaille sovelluksille enemmän aikaan kuvan piirtoon."
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_CheckForMissedFramesWarning"	"Näytä ohitetun kuvan varoitus"
@@ -1796,7 +1796,7 @@
 "Settings_ArcadeMode"	"Ota pelihallitila käyttöön"
 "[english]Settings_ArcadeMode"	"Enable Arcade Mode"
 "Settings_AllowAsyncReprojection"	"Salli asynkroninen uudelleenprojektio"
-"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection"
+"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection (recommended)"
 "Advanced_AsyncActive"	"Asynkroninen uudelleenprojektio päällä"
 "[english]Advanced_AsyncActive"	"Async Reprojection On"
 "Advanced_AsyncNotActive"	"Asynkroninen uudelleenprojektio pois päältä"
@@ -1949,7 +1949,7 @@
 "BugReporter_ProgressSubmittingPercent"	"Lähetetään...%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
 "Settings_HomeAppCheck"	"SteamVR Home -beta"
-"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"[english]Settings_HomeAppCheck"	"Launch SteamVR Home Beta at Startup"
 "Settings_HomeAppDesc"	"Uusi SteamVR Home tukee kirjavampia kotitiloja, sosiaalisia toimintoja, ja paljon muuta. Se on tällä hetkellä betassa, joten lähetäthän siitä palautetta keskustelupalstojemme kautta."
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"Yötila"
@@ -1972,6 +1972,8 @@
 "[english]DismissableWarning_BluetoothLinkServiceNotFound"	"Bluetooth service not found (0x0200)"
 "DismissableWarning_BluetoothLinkServiceError"	"Bluetooth-palvelua ei löytynyt (0x0400)"
 "[english]DismissableWarning_BluetoothLinkServiceError"	"Bluetooth service not found (0x0400)"
+"Settings_PowerOffBaseStations_Explanation"	"Tukiasemat, joissa on virranhallinta, siirtyvät lepotilaan, jos SteamVR:ää ei käytetä 60 sekuntiin. Kun SteamVR käynnistyy, tukiasemat heräävät. Tätä määritystä ei suositella käytettäväksi useiden SteamVR-käyttäjien kanssa seurantateknologiaa soveltavissa tiloissa."
+"[english]Settings_PowerOffBaseStations_Explanation"	"Power managed Base Stations go into standby mode after 60 seconds when SteamVR is not in use and wake up when SteamVR starts. This setting is not recommended for shared tracking spaces with multiple SteamVR users."
 "Settings_BaseStationsWakeUpAll_Explanation"	"Lähettää Bluetooth-viestin, joka tuo valmiustilaan kaikki virranhallinnassa olevat, seurattavat tukiasemat."
 "[english]Settings_BaseStationsWakeUpAll_Explanation"	"Sends a Bluetooth signal to wake up all listening Base Stations participating in Power Management."
 "Settings_Bluetooth_ServicesNotAvailable"	"Bluetooth-palvelut eivät ole käytettävissä."
@@ -1986,7 +1988,7 @@
 "[english]Settings_Bluetooth_Driver_Update"	"Update Bluetooth Driver"
 "Settings_Bluetooth_Driver_Update_Description"	"Päivitä linkkilaatikon Bluetooth-ajuri ottaaksesi langaton Bluetooth-yhteys käyttöön. Tämä vaatii järjestelmänvalvojan oikeudet."
 "[english]Settings_Bluetooth_Driver_Update_Description"	"Update the Link Box Bluetooth driver to enable wireless Bluetooth communication features. This requires administrative credentials."
-"Settings_Advanced_Supersampling_Warning"	"<b>VAROITUS:</b> Manuaalinen ohitus vaikuttaa kaikkiin sovelluksiin. Vaihtaaksesi yksittäisen ohjelman resoluutiota, käytä vasemmalla olevaa Sovellukset-välilehteä."
+"Settings_Advanced_Supersampling_Warning"	"<b>VAROITUS:</b> Manuaalinen ohitus vaikuttaa kaikkiin sovelluksiin. Vaihtaaksesi yksittäisen ohjelman resoluutiota käytä vasemmalla olevaa Sovellukset-välilehteä."
 "[english]Settings_Advanced_Supersampling_Warning"	"<b>WARNING:</b> The manual override below will affect all applications. To change the resolution for a specific application, use the Applications tab on the left."
 "Settings_Advanced_SupersamplingManualOverride"	"Manuaalinen ohitus"
 "[english]Settings_Advanced_SupersamplingManualOverride"	"Manual Override"
@@ -2014,8 +2016,10 @@
 "[english]FirmwareWizard_ImageBridgeUpdate"	"Image Bridge Update"
 "BluetoothControllerStatus_Unknown"	"Tuntematon"
 "[english]BluetoothControllerStatus_Unknown"	"Unknown"
-"BluetoothControllerStatus_ServiceNotFound"	"Bluetooth-palvelua ei löytynyt. Varmista SteamVR-asennuksesi."
+"BluetoothControllerStatus_ServiceNotFound"	"Bluetooth-palvelua ei löytynyt. Tarkista SteamVR-asennuksesi."
 "[english]BluetoothControllerStatus_ServiceNotFound"	"Bluetooth Service not found. Please verify your SteamVR installation."
+"BluetoothControllerStatus_ServiceError"	"Virhe Bluetooth-palvelussa. Linkin tila: %1"
+"[english]BluetoothControllerStatus_ServiceError"	"Bluetooth Service Error. Link Status: %1"
 "BluetoothControllerStatus_NoBluetoothDevice"	"Linkkilaatikon Bluetooth-ominaisuutta ei tunnistettu. Tarkista linkkilaatikon kytkennät, irrota ja kytke virtajohto ja käynnistä SteamVR uudelleen."
 "[english]BluetoothControllerStatus_NoBluetoothDevice"	"Link Box with Bluetooth capability not detected. Check link box connections, then unplug and replug power to the link box to reset it, then restart SteamVR."
 "BluetoothControllerStatus_BluetoothDriverNotInstalled"	"Linkkilaatikon Bluetooth-ajuria ei ole asennettu."
@@ -2050,9 +2054,19 @@
 "[english]Settings_DebugInputBindings"	"Enable debugging options in the input binding user interface"
 "Settings_Advanced_MotionSmoothing"	"Ota käyttöön liikkeen pehmennys"
 "[english]Settings_Advanced_MotionSmoothing"	"Enable Motion Smoothing"
+"Settings_Advanced_MotionSmoothing_Disabled"	"Liikkeen pehmennys edellyttää asynkronisen uudelleenprojektion tukea."
+"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing is unavailable. It requires Windows 10 and an %1 GPU with drivers %2 or newer."
 "Advanced_MotionEstimationActive"	"Liikkeen arviointi käytössä"
-"[english]Advanced_MotionEstimationActive"	"Motion Estimation On"
+"[english]Advanced_MotionEstimationActive"	"Motion Smoothing On"
 "Advanced_MotionEstimationNotActive"	"Liikkeen arviointi ei käytössä"
-"[english]Advanced_MotionEstimationNotActive"	"Motion Estimation Off"
+"[english]Advanced_MotionEstimationNotActive"	"Motion Smoothing Off"
+"Settings_GpuInfo_Header"	"Laitteisto"
+"[english]Settings_GpuInfo_Header"	"Hardware"
+"Settings_GiganticSpace"	"Valtava tila"
+"[english]Settings_GiganticSpace"	"Gigantic Space"
+"Settings_GpuInfo_NoHeadset"	"VIRHE! Virtuaalitodellisuuslaseja ei tunnistettu."
+"[english]Settings_GpuInfo_NoHeadset"	"ERROR! No Headset Detected!"
+"QuickCalibrate_GiganticSpace"	"Valtava tila"
+"[english]QuickCalibrate_GiganticSpace"	"Gigantic Space"
 }
 }
