--- a/content/vrmonitor/translations/vrmonitor_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_greek.txt
@@ -196,7 +196,7 @@
 "MenuAction_CreateSystemReport"	"Δημιουργία αναφοράς συστήματος"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
 "MenuAction_DisplayFrameTiming"	"Προβολή χρονισμού καρέ"
-"[english]MenuAction_DisplayFrameTiming"	"Display Frame Timing"
+"[english]MenuAction_DisplayFrameTiming"	"Advanced Frame Timing"
 "MenuAction_RecordTrackingData"	"Προβολή δεδομένων καταγραφής"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"Διακοπή καταγραφής"
@@ -620,7 +620,7 @@
 "PairingWizard_PairAnotherController"	"Σύζευξη και άλλου Χειριστηρίου"
 "[english]PairingWizard_PairAnotherController"	"Pair Another Controller"
 "PairingWizard_LookingForControllers_Header"	"Αναζήτηση Vive Controller..."
-"[english]PairingWizard_LookingForControllers_Header"	"Looking for Vive Controller..."
+"[english]PairingWizard_LookingForControllers_Header"	"Looking for controller..."
 "PairingWizard_LookingForControllers_Content"	"Πατήστε και κρατήστε τα κουμπιά Εφαρμογής και Συστήματος μέχρι να ηχήσει.\n\nΤο LED του χειριστηρίου θα πρέπει να αρχίσει να αναβοσβήνει μπλε για να υποδείξει ότι βρίσκεται σε λειτουργία σύζευξης."
 "[english]PairingWizard_LookingForControllers_Content"	"Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
 "PairingWizard_TimeoutHappened_Header"	"Δεν ανιχνεύθηκαν χειριστήρια"
@@ -632,13 +632,13 @@
 "PairingWizard_PairingFailed_Content"	"Βεβαιωθείτε ότι το χειριστήριό σας είναι φορτιμένο και βρίσκεται κοντά στο headset σας κατά τη σύζευξη.\n\nΠατήστε «Επανάληψη» παρακάτω για να προσπαθήσετε ξανά."
 "[english]PairingWizard_PairingFailed_Content"	"Make sure your controller is charged and stays near your headset when pairing.\n\nClick 'Retry' below to try again."
 "PairingWizard_Success_MoreDonglesAvailable_Header"	"Επιτυχής σύζευξη Vive Controller!"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_MoreDonglesAvailable_Content"	"Το Vive controller σας είναι συζευγμένο και έτοιμο. Για σύζευξη ενός άλλου χειριστηρίου, πατήστε «Προσθήκη άλλου χειριστηρίου» παρακάτω."
-"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your Vive controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
+"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
 "PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Επιτυχής σύζευξη Vive Controller!"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Το Vive controller σας είναι συζευγμένο και έτοιμο."
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your Vive controller is paired and ready."
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your controller is paired and ready."
 "FirmwareWizard_StartQuestion_TextContent"	"Κείμενο που περιγράφει τι θα γίνεται."
 "[english]FirmwareWizard_StartQuestion_TextContent"	"Some text content describing what is going to happen."
 "MenuAction_RunTutorial"	"Εκκίνηση εκμάθησης"
@@ -1364,12 +1364,12 @@
 "MenuAction_WakeupAllBaseStations"	"Αφύπνηση όλων των σταθμών βάσης"
 "[english]MenuAction_WakeupAllBaseStations"	"Wakeup All Base Stations"
 "FirmwareWizard_ShutdownForRecovery_TextContent"	"Ένα εξάρτημα του Vive headset σας χρειάζεται μια αναβάθμιση υλικολογισμικού για να επανέλθει σε λειτουργική κατάσταση.\n\nΘα θέλατε να συνεχίσετε;"
-"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your Vive hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
 "FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Η ενημέρωση υλικολογισμικού του σταθμού βάσης απέτυχε"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Firmware Base Station Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Η ενημέρωση υλικολογισμικού απέτυχε."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Firmware update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Εάν συνεχίζει να αποτυγχάνει, σταματήστε το SteamVR και επανεκκινήστε το link box και τον σταθμό βάσης. Έπειτα, εκκινήστε το SteamVR και ξαναδοκιμάστε."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Εάν συνεχίζει να αποτυγχάνει, τερματίστε το SteamVR και επανεκκινήστε το LinkBox και τον σταθμό βάσης σας. Έπειτα, εκκινήστε το SteamVR και δοκιμάστε ξανά."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this continues to fail, quit SteamVR and power cycle the link box and base station. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Πατήστε «Επανάληψη» παρακάτω για να δοκιμάσετε ξανά."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
@@ -1396,7 +1396,7 @@
 "Settings_Audio_AudioMirrorUnsupported"	"Ο κατοπτρισμός ήχου δεν υποστηρίζεται σε αυτή την πλατφόρμα"
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this platform"
 "Settings_AllowReprojection"	"Να επιτρέπεται παρεμβολική επαναπροβολή"
-"[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
+"[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
 "DismissableWarning_Detected"	"Εντοπίστηκε"
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"hh:mm:ss"
@@ -1420,9 +1420,9 @@
 "Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>Υπάρχει μια σημαντική ενημέρωση για το υλικολογισμικό της κάμερας που πρέπει να εγκατασταθεί. Μετακινήστε το ποντίκι πάνω από το εικονίδιο του headset και επιλέξτε Ενημέρωση υλικολογισμικού.</font>"
 "[english]Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>There is a critical camera firmware update that must be applied. Hover over the headset icon and select Update Firmware.</font>"
 "Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>Η κάμερα δεν αναγνωρίζεται στη θύρα USB στην οποία είναι συνδεδεμένο το Vive.<br>Δοκιμάστε μια διαφορετική θύρα USB και επανεκκινήστε το SteamVR.</font>"
-"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the Vive is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
+"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the headset is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
 "FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Το Vive headset σας απαιτεί μια ενημέρωση υλικολογισμικού για να συνεχίσει να λειτουργεί με το SteamVR.\n\nΘέλετε να συνεχίσετε;"
-"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your Vive headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
 "Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "[english]Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "MenuAction_KnockKnock"	"Τοκ τοκ"
@@ -1556,7 +1556,7 @@
 "Settings_Advanced_DirectMode_Header"	"Απευθείας λειτουργία"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
 "Settings_ForceReprojection"	"Ενεργοποίηση πάντα ενεργής επαναπροβολής."
-"[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
+"[english]Settings_ForceReprojection"	"Enable 'always-on reprojection'"
 "Settings_ForceReprojection_Info"	"Αυτή η ρύθμιση είναι για μη ενεργά παιχνίδια, καθώς μειώνει την\nπρόβλεψη θέσης με αντάλλαγμα περισσότερο χρόνο για επεξεργασία εικόνας σε πιο αργές εφαρμογές."
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_CheckForMissedFramesWarning"	"Εμφάνιση ειδοποίησης χαμένων καρέ"
@@ -1796,7 +1796,7 @@
 "Settings_ArcadeMode"	"Ενεργοποίηση λειτουργίας Arcade"
 "[english]Settings_ArcadeMode"	"Enable Arcade Mode"
 "Settings_AllowAsyncReprojection"	"Να επιτρέπεται η ασύγχρονη επαναπροβολή"
-"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection"
+"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection (recommended)"
 "Advanced_AsyncActive"	"Ασύγχρονη επαναπροβολή ενεργή"
 "[english]Advanced_AsyncActive"	"Async Reprojection On"
 "Advanced_AsyncNotActive"	"Ασύγχρονη επαναπροβολή ανενεργή"
@@ -1879,7 +1879,7 @@
 "[english]FirmwareWizard_UpdateGenericTracker_Success_LowerText"	"Click 'Done' to finish, or 'Update More Firmware' if you have more hardware to update. "
 "VRInitError_Driver_HmdUnknown_Description"	"Ο συγκεκριμένος σειριακός αριθμός headset που ορίσατε στις ρυθμίσεις δεν μπορεί να βρεθεί."
 "[english]VRInitError_Driver_HmdUnknown_Description"	"The specific headset serial number named in the settings cannot be found."
-"Settings_Advanced_Supersampling_Header"	"Υπερδειγματοληψία"
+"Settings_Advanced_Supersampling_Header"	"Ανάλυση εφαρμογής"
 "[english]Settings_Advanced_Supersampling_Header"	"Application Resolution"
 "Settings_Advanced_Supersampling_RequiresRestart"	"Αυτή η αλλαγή απαιτεί επανεκκίνηση του SteamVR για να τεθεί σε ισχύ."
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
@@ -1948,13 +1948,17 @@
 "BugReporter_ProgressSubmittingPercent"	"Υποβολή...%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
 "Settings_HomeAppCheck"	"Δοκιμαστική έκδοση SteamVR Home"
-"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"[english]Settings_HomeAppCheck"	"Launch SteamVR Home Beta at Startup"
 "Settings_NightModeCheck"	"Λειτουργία νυκτός"
 "[english]Settings_NightModeCheck"	"Night Mode"
 "Settings_NightModeDesc"	"Η λειτουργία νυκτός χαμηλώνει τη φωτεινότητα του headset μέχρι τις 5:00 π.μ. (ή μέχρι να γίνει επανεκκίνηση του SteamVR)."
 "[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 "MenuAction_RunMediaPlayer"	"Πρόγραμμα αναπαραγωγής πολυμέσων"
 "[english]MenuAction_RunMediaPlayer"	"Run Media Player"
+"Advanced_Bluetooth"	"Bluetooth"
+"[english]Advanced_Bluetooth"	"Bluetooth"
+"DismissableWarning_BluetoothDriverNeedsUpdate"	"Ο οδηγός Bluetooth χρειάζεται ενημέρωση (0x0100)"
+"[english]DismissableWarning_BluetoothDriverNeedsUpdate"	"Bluetooth Driver needs update (0x0100)"
 "BluetoothControllerStatus_NoBluetoothDevice"	"Αδυναμία εντοπισμού Link box με δυνατότητες Bluetooth. Ελέγξτε τις συνδέσεις του Link box, έπειτα επαναφέρετε το Link box αποσυνδέοντας και επανασυνδέοντας την παροχή ρεύματος, έπειτα επανεκκινήστε το SteamVR."
 "[english]BluetoothControllerStatus_NoBluetoothDevice"	"Link Box with Bluetooth capability not detected. Check link box connections, then unplug and replug power to the link box to reset it, then restart SteamVR."
 "BluetoothControllerStatus_FailedConnection"	"Αποτυχία σύνδεσης Bluetooth. Ελέγξτε τις συνδέσεις του Link box, έπειτα επαναφέρετε το Link box αποσυνδέοντας και επανασυνδέοντας την παροχή ρεύματος, έπειτα επανεκκινήστε το SteamVR."
