--- a/content/vrmonitor/translations/vrmonitor_japanese.txt
+++ b/content/vrmonitor/translations/vrmonitor_japanese.txt
@@ -196,7 +196,7 @@
 "MenuAction_CreateSystemReport"	"システムレポートを作成"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
 "MenuAction_DisplayFrameTiming"	"フレームタイミングを表示"
-"[english]MenuAction_DisplayFrameTiming"	"Display Frame Timing"
+"[english]MenuAction_DisplayFrameTiming"	"Advanced Frame Timing"
 "MenuAction_RecordTrackingData"	"追跡データを記録"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"録画を停止"
@@ -620,7 +620,7 @@
 "PairingWizard_PairAnotherController"	"別のコントローラをペアリング"
 "[english]PairingWizard_PairAnotherController"	"Pair Another Controller"
 "PairingWizard_LookingForControllers_Header"	"Vive コントローラを検出中..."
-"[english]PairingWizard_LookingForControllers_Header"	"Looking for Vive Controller..."
+"[english]PairingWizard_LookingForControllers_Header"	"Looking for controller..."
 "PairingWizard_LookingForControllers_Content"	"チャイムが鳴るまでアプリボタンとシステムボタンを押し続けてください。\n\nコントローラの LED が青色に点滅し始めたら、ペアリングモードになったことを示します。"
 "[english]PairingWizard_LookingForControllers_Content"	"Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
 "PairingWizard_TimeoutHappened_Header"	"コントローラが検出されませんでした"
@@ -632,13 +632,13 @@
 "PairingWizard_PairingFailed_Content"	"コントローラが充電されていて、ペアリング中にはヘッドセットの近くにあることを確認してください。\n\n下の 「再試行」 をクリックして、もう一度ペアリングしてください。"
 "[english]PairingWizard_PairingFailed_Content"	"Make sure your controller is charged and stays near your headset when pairing.\n\nClick 'Retry' below to try again."
 "PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive コントローラがペアリングされました！"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_MoreDonglesAvailable_Content"	"Vive コントローラがペアリングされ利用可能です。もう一方のコントローラを追加するには、下の '別のコントローラをペアリング' をクリックしてください。"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your Vive controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
+"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
 "PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive コントローラがペアリングされました！"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Vive コントローラがペアリングされ利用可能です。"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your Vive controller is paired and ready."
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your controller is paired and ready."
 "FirmwareWizard_StartQuestion_TextContent"	"何が起きるかを表すテキスト。"
 "[english]FirmwareWizard_StartQuestion_TextContent"	"Some text content describing what is going to happen."
 "MenuAction_RunTutorial"	"チュートリアルを起動"
@@ -767,7 +767,7 @@
 "[english]FirmwareWizard_UpdateController_Success_Title"	"Update Controller Firmware"
 "FirmwareWizard_UpdateController_Success_UpperText"	"完了しました！"
 "[english]FirmwareWizard_UpdateController_Success_UpperText"	"Success!"
-"FirmwareWizard_UpdateController_Success_MiddleText"	"コントローラのファームウェアの更新が'完了しました。ファームウェアが更新されたと登録される前に、コントローラの電源の入れ直しが必要な場合があります。"
+"FirmwareWizard_UpdateController_Success_MiddleText"	"コントローラのファームウェアの更新が'完了しました。ファームウェアの更新が登録される前に、コントローラの電源の入れ直しが必要な場合があります。"
 "[english]FirmwareWizard_UpdateController_Success_MiddleText"	"Controller firmware successfully updated. You may need to power cycle the controller before the firmware registers as updated. "
 "FirmwareWizard_UpdateController_Success_LowerText"	"終了するには [完了] をクリックしてください。他のハードウェアを更新する場合は [他のファームウェアを更新] をクリックしてください。"
 "[english]FirmwareWizard_UpdateController_Success_LowerText"	"Click 'Done' to finish, or 'Update More Firmware' if you have more hardware to update. "
@@ -1364,7 +1364,7 @@
 "MenuAction_WakeupAllBaseStations"	"すべてのベースステーションを起動"
 "[english]MenuAction_WakeupAllBaseStations"	"Wakeup All Base Stations"
 "FirmwareWizard_ShutdownForRecovery_TextContent"	"Vive ヘッドセットを通常の稼動状態に戻すにはファームウェアの更新が必要です。\n\n続行しますか？"
-"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your Vive hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
 "FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"ベースステーションのファームウェア更新に失敗"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Firmware Base Station Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"ファームウェアの更新に失敗しました。"
@@ -1396,7 +1396,7 @@
 "Settings_Audio_AudioMirrorUnsupported"	"このプラットフォームは音声のミラーリングをサポートしていません"
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this platform"
 "Settings_AllowReprojection"	"インターリーブ再投影を許可する"
-"[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
+"[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
 "DismissableWarning_Detected"	"検出済み"
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss AP"
@@ -1420,9 +1420,9 @@
 "Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>カメラのファームウェアに対して適用の必要がある重要な更新があります。ヘッドセットアイコンにマウスを合わせて、[ファームウェアの更新] を選択してください。</font>"
 "[english]Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>There is a critical camera firmware update that must be applied. Hover over the headset icon and select Update Firmware.</font>"
 "Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>Vive が接続されている USB ポートではカメラが認識されません。<br>別の USB ポートに接続し直して、SteamVR を再起動してください。</font>"
-"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the Vive is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
+"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the headset is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
 "FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"SteamVR を使用し続けるには、Vive ヘッドセットのファームウェアを更新する必要があります。\n\n続けますか？"
-"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your Vive headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
 "Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "[english]Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "MenuAction_KnockKnock"	"トントン"
@@ -1556,7 +1556,7 @@
 "Settings_Advanced_DirectMode_Header"	"ダイレクトモード"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
 "Settings_ForceReprojection"	"常時再投影を有効化"
-"[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
+"[english]Settings_ForceReprojection"	"Enable 'always-on reprojection'"
 "Settings_ForceReprojection_Info"	"この設定は、非能動的なゲームにのみ適しています。それは、より低速でアプリケーションのレンダーを行うための時間を設けるために、\n位置予測の向上が犠牲となるからです。"
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_CheckForMissedFramesWarning"	"フレーム欠落警告を表示"
@@ -1796,7 +1796,7 @@
 "Settings_ArcadeMode"	"アーケードモードを有効化"
 "[english]Settings_ArcadeMode"	"Enable Arcade Mode"
 "Settings_AllowAsyncReprojection"	"非同期再投影を許可"
-"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection"
+"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection (recommended)"
 "Advanced_AsyncActive"	"非同期再投影　オン"
 "[english]Advanced_AsyncActive"	"Async Reprojection On"
 "Advanced_AsyncNotActive"	"非同期再投影　オフ"
@@ -1948,7 +1948,7 @@
 "BugReporter_ProgressSubmittingPercent"	"送信しています...%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
 "Settings_HomeAppCheck"	"SteamVR ホームベータ"
-"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"[english]Settings_HomeAppCheck"	"Launch SteamVR Home Beta at Startup"
 "Settings_HomeAppDesc"	"新しい SteamVR ホーム体験は、より豊かなホーム空間、ユーザー同士での交流機能などをサポートします。この機能は現在ベータに含まれており、掲示板でのフィードバックをお待ちしています。"
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"ナイトモード"
@@ -2056,10 +2056,24 @@
 "Settings_Advanced_MotionSmoothing"	"モーションスムージングを有効化"
 "[english]Settings_Advanced_MotionSmoothing"	"Enable Motion Smoothing"
 "Settings_Advanced_MotionSmoothing_Disabled"	"モーションスムージングには、非同期再投影のサポートが必要です。"
-"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing requires asynchronous reprojection support."
+"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing is unavailable. It requires Windows 10 and an %1 GPU with drivers %2 or newer."
 "Advanced_MotionEstimationActive"	"動き推定 オン"
-"[english]Advanced_MotionEstimationActive"	"Motion Estimation On"
+"[english]Advanced_MotionEstimationActive"	"Motion Smoothing On"
 "Advanced_MotionEstimationNotActive"	"動き推定 オフ"
-"[english]Advanced_MotionEstimationNotActive"	"Motion Estimation Off"
+"[english]Advanced_MotionEstimationNotActive"	"Motion Smoothing Off"
+"Settings_GpuInfo_Header"	"ハードウェア"
+"[english]Settings_GpuInfo_Header"	"Hardware"
+"Settings_GpuInfo_Headset"	"ヘッドセット:"
+"[english]Settings_GpuInfo_Headset"	"Headset:"
+"Settings_GpuInfo_GpuName"	"GPU 名:"
+"[english]Settings_GpuInfo_GpuName"	"GPU Name:"
+"Settings_GpuInfo_GpuDriver"	"GPU ドライバ:"
+"[english]Settings_GpuInfo_GpuDriver"	"GPU Driver:"
+"Settings_GpuInfo_GpuSpeed"	"GPU 計測スピード:"
+"[english]Settings_GpuInfo_GpuSpeed"	"GPU Measured Speed:"
+"Settings_GpuInfo_Current"	"現在の片目あたりのレンダリング設定"
+"[english]Settings_GpuInfo_Current"	"The current setting renders each eye at"
+"Settings_GpuInfo_Recommended"	"GPU とヘッドセットの推奨設定"
+"[english]Settings_GpuInfo_Recommended"	"The recommended setting for your GPU and headset is"
 }
 }
