--- a/content/vrmonitor/translations/vrmonitor_polish.txt
+++ b/content/vrmonitor/translations/vrmonitor_polish.txt
@@ -195,8 +195,8 @@
 "[english]MenuAction_SteamWorksDeveloperSupport"	"SteamWorks Developer Support"
 "MenuAction_CreateSystemReport"	"Stwórz raport systemu"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
-"MenuAction_DisplayFrameTiming"	"Wyświetlaj czasy klatek"
-"[english]MenuAction_DisplayFrameTiming"	"Display Frame Timing"
+"MenuAction_DisplayFrameTiming"	"Zaawansowane czasy klatek"
+"[english]MenuAction_DisplayFrameTiming"	"Advanced Frame Timing"
 "MenuAction_RecordTrackingData"	"Nagraj informacje diagnostyczne"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"Zatrzymaj nagrywanie"
@@ -623,8 +623,8 @@
 "[english]PairingWizard_PairController_Success_Title"	"Success!"
 "PairingWizard_PairAnotherController"	"Sparuj następny kontroler"
 "[english]PairingWizard_PairAnotherController"	"Pair Another Controller"
-"PairingWizard_LookingForControllers_Header"	"Wyszukiwanie Vive Controllera..."
-"[english]PairingWizard_LookingForControllers_Header"	"Looking for Vive Controller..."
+"PairingWizard_LookingForControllers_Header"	"Wyszukiwanie kontrolera..."
+"[english]PairingWizard_LookingForControllers_Header"	"Looking for controller..."
 "PairingWizard_LookingForControllers_Content"	"Naciśnij i przytrzymaj przyciski App i System do chwili usłyszenia dźwięku.\n\nDioda LED na kontrolerze powinna zacząć migać na niebiesko w celu oznaczenia, że jest on w trybie parowania."
 "[english]PairingWizard_LookingForControllers_Content"	"Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
 "PairingWizard_TimeoutHappened_Header"	"Nie wykryto kontrolera"
@@ -635,14 +635,14 @@
 "[english]PairingWizard_PairingFailed_Header"	"Pairing Failed"
 "PairingWizard_PairingFailed_Content"	"Upewnij się, że twój kontroler jest naładowany i znajduje się blisko gogli podczas parowania.\n\nKliknij „Ponów” poniżej, by ponowić próbę."
 "[english]PairingWizard_PairingFailed_Content"	"Make sure your controller is charged and stays near your headset when pairing.\n\nClick 'Retry' below to try again."
-"PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive Controller został sparowany!"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive Controller Paired!"
-"PairingWizard_Success_MoreDonglesAvailable_Content"	"Twój Vive Controller jest sparowany i gotowy do użycia. Aby sparować kolejny kontroler, kliknij „Sparuj następny kontroler” poniżej."
-"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your Vive controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
-"PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller został sparowany!"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller Paired!"
-"PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Twój Vive Controller jest sparowany i gotowy."
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your Vive controller is paired and ready."
+"PairingWizard_Success_MoreDonglesAvailable_Header"	"Sparowano kontroler!"
+"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Controller Paired!"
+"PairingWizard_Success_MoreDonglesAvailable_Content"	"Twój kontroler jest sparowany i gotowy do użycia. Aby sparować kolejny kontroler, kliknij „Sparuj następny kontroler” poniżej."
+"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
+"PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Sparowano kontroler!"
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Controller Paired!"
+"PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Twój kontroler jest sparowany i gotowy."
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your controller is paired and ready."
 "FirmwareWizard_StartQuestion_TextContent"	"Zawartość tekstowa opisująca co ma się zdarzyć."
 "[english]FirmwareWizard_StartQuestion_TextContent"	"Some text content describing what is going to happen."
 "MenuAction_RunTutorial"	"Uruchom samouczek"
@@ -1374,8 +1374,8 @@
 "[english]MenuAction_PowerOffController"	"Power Off Controller"
 "MenuAction_WakeupAllBaseStations"	"Wybudź wszystkie stacje bazowe"
 "[english]MenuAction_WakeupAllBaseStations"	"Wakeup All Base Stations"
-"FirmwareWizard_ShutdownForRecovery_TextContent"	"Komponent twojego zestawu Vive wymaga aktualizacji firmware'u, by przywrócić go do stanu używalności.\n\nCzy chcesz kontynuować?"
-"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your Vive hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
+"FirmwareWizard_ShutdownForRecovery_TextContent"	"Komponent twojego urządzenia wymaga aktualizacji firmware'u, by przywrócić go do stanu używalności.\n\nCzy chcesz kontynuować?"
+"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
 "FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Nieudana aktualizacja firmware'u stacji bazowej"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Firmware Base Station Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Aktualizacja firmware'u nieudana."
@@ -1406,8 +1406,8 @@
 "[english]VRState_Standby"	"Standby"
 "Settings_Audio_AudioMirrorUnsupported"	"Duplikacja dźwięku nie jest obsługiwana na tej platformie"
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this platform"
-"Settings_AllowReprojection"	"Zezwalaj na reprojekcję z przeplotem"
-"[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
+"Settings_AllowReprojection"	"Zezwalaj na reprojekcję z przeplotem (zalecane)"
+"[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
 "DismissableWarning_Detected"	"Wykryto"
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss"
@@ -1430,10 +1430,10 @@
 "[english]FrameTiming_Other"	"Other"
 "Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>Istnieje krytyczna aktualizacja firmware'u kamery, która musi zostać zastosowana. Przesuń kursor na ikonę gogli i wybierz Zaktualizuj firmware.</font>"
 "[english]Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>There is a critical camera firmware update that must be applied. Hover over the headset icon and select Update Firmware.</font>"
-"Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>Kamera nie jest wykrywana przez port USB, do którego jest podłączony Vive.<br>Wybierz inny port USB i uruchom ponownie SteamVR.</font>"
-"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the Vive is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
-"FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Twoje gogle Vive wymagają aktualizacji firmware'u, by móc dalej używać SteamVR.\n\nCzy chcesz kontynuować?"
-"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your Vive headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
+"Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>Kamera nie jest wykrywana przez port USB, do którego są podłączone gogle.<br>Wybierz inny port USB i uruchom ponownie SteamVR.</font>"
+"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the headset is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
+"FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Twoje gogle wymagają aktualizacji firmware'u, by móc dalej używać SteamVR.\n\nCzy chcesz kontynuować?"
+"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
 "Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "[english]Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "MenuAction_KnockKnock"	"Puk puk"
@@ -1569,7 +1569,7 @@
 "Settings_Advanced_DirectMode_Header"	"Direct Mode"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
 "Settings_ForceReprojection"	"Wymuś reprojekcję."
-"[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
+"[english]Settings_ForceReprojection"	"Enable 'always-on reprojection'"
 "Settings_ForceReprojection_Info"	"To ustawienie jest odpowiednie tylko dla gier niewymagających wielkiej aktywności, gdyż daje\nwięcej czasu wolniejszym aplikacjom na wyrenderowanie obrazu kosztem zwiększonego przewidywania pozycji."
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_CheckForMissedFramesWarning"	"Pokaż ostrzeżenie o zgubionych klatkach"
@@ -1811,8 +1811,8 @@
 "[english]Settings_EnableDashboard"	"Enable VR Dashboard"
 "Settings_ArcadeMode"	"Włącz tryb zręcznościowy"
 "[english]Settings_ArcadeMode"	"Enable Arcade Mode"
-"Settings_AllowAsyncReprojection"	"Zezwalaj na asynchroniczną reprojekcję"
-"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection"
+"Settings_AllowAsyncReprojection"	"Zezwalaj na asynchroniczną reprojekcję (zalecane)"
+"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection (recommended)"
 "Advanced_AsyncActive"	"Asynchr. reprojekcja wł."
 "[english]Advanced_AsyncActive"	"Async Reprojection On"
 "Advanced_AsyncNotActive"	"Asynchr. reprojekcja wył."
@@ -1963,8 +1963,8 @@
 "[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
 "BugReporter_ProgressSubmittingPercent"	"Wysyłanie...%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
-"Settings_HomeAppCheck"	"SteamVR Home Beta"
-"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"Settings_HomeAppCheck"	"Uruchamiaj SteamVR Home Beta przy uruchamianiu systemu"
+"[english]Settings_HomeAppCheck"	"Launch SteamVR Home Beta at Startup"
 "Settings_HomeAppDesc"	"Nowe SteamVR Home wspiera bogatsze przestrzenie domowe, funkcje społecznościowe i inne. Ta funkcja jest obecnie w wersji beta, wszelkie uwagi zgłaszaj na forum."
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"Tryb nocny"
@@ -2067,15 +2067,97 @@
 "[english]ScanForBaseStations_Refresh"	"Scan Again"
 "Settings_Advanced_Paths_Header"	"Ścieżki"
 "[english]Settings_Advanced_Paths_Header"	"Paths"
-"Settings_DebugInputBindings"	"Włącz opcje debugowania w interfejsie użytkownika dot. przypisywania wprowadzania"
+"Settings_DebugInputBindings"	"Włącz opcje debugowania w interfejsie użytkownika dot. przypisywania danych wejściowych"
 "[english]Settings_DebugInputBindings"	"Enable debugging options in the input binding user interface"
 "Settings_Advanced_MotionSmoothing"	"Włącz wygładzanie ruchu"
 "[english]Settings_Advanced_MotionSmoothing"	"Enable Motion Smoothing"
-"Settings_Advanced_MotionSmoothing_Disabled"	"Funkcja wygładzania ruchu wymaga wsparcia asynchronicznej reprojekcji."
-"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing requires asynchronous reprojection support."
-"Advanced_MotionEstimationActive"	"Szacowanie ruchu wł."
-"[english]Advanced_MotionEstimationActive"	"Motion Estimation On"
-"Advanced_MotionEstimationNotActive"	"Szacowanie ruchu wył."
-"[english]Advanced_MotionEstimationNotActive"	"Motion Estimation Off"
+"Settings_Advanced_MotionSmoothing_Disabled"	"Wygładzanie ruchu jest niedostępne. Wymagany jest system Windows 10 oraz karta graficzna firmy %1 ze sterownikami w wersji %2 lub nowszymi."
+"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing is unavailable. It requires Windows 10 and an %1 GPU with drivers %2 or newer."
+"Advanced_MotionEstimationActive"	"Wygładzanie ruchu wł."
+"[english]Advanced_MotionEstimationActive"	"Motion Smoothing On"
+"Advanced_MotionEstimationNotActive"	"Wygładzanie ruchu wył."
+"[english]Advanced_MotionEstimationNotActive"	"Motion Smoothing Off"
+"Settings_GpuInfo_Header"	"Sprzęt"
+"[english]Settings_GpuInfo_Header"	"Hardware"
+"Settings_GpuInfo_Headset"	"Gogle:"
+"[english]Settings_GpuInfo_Headset"	"Headset:"
+"Settings_GpuInfo_GpuName"	"Nazwa GPU:"
+"[english]Settings_GpuInfo_GpuName"	"GPU Name:"
+"Settings_GpuInfo_GpuDriver"	"Sterownik GPU:"
+"[english]Settings_GpuInfo_GpuDriver"	"GPU Driver:"
+"Settings_GpuInfo_GpuSpeed"	"Zmierzona szybkość GPU:"
+"[english]Settings_GpuInfo_GpuSpeed"	"GPU Measured Speed:"
+"Settings_GpuInfo_Current"	"Obecne ustawienia renderują obraz w każdym oku w rozdzielczości"
+"[english]Settings_GpuInfo_Current"	"The current setting renders each eye at"
+"Settings_GpuInfo_Recommended"	"Zalecanym ustawieniem dla twojej karty graficznej oraz gogli jest"
+"[english]Settings_GpuInfo_Recommended"	"The recommended setting for your GPU and headset is"
+"FrameTiming_MisPresented"	" --- Zreprojektowane"
+"[english]FrameTiming_MisPresented"	" --- Reprojected"
+"FrameTiming_FirstView"	" --- Wyświetlone po raz pierwszy"
+"[english]FrameTiming_FirstView"	" --- First Viewed"
+"FrameTiming_ReadyForUse"	" --- Gotowe do użycia"
+"[english]FrameTiming_ReadyForUse"	" --- Ready For Use"
+"FrameTiming_Presented"	" --- Obecne (liczba)"
+"[english]FrameTiming_Presented"	" --- Present (count)"
+"FrameTiming_Predicted"	" --- Przewidywane (dodatkowe)"
+"[english]FrameTiming_Predicted"	" --- Predict (extra)"
+"FrameTiming_Throttled"	" --- Ograniczone (klatki)"
+"[english]FrameTiming_Throttled"	" --- Throttle (frames)"
+"Settings_GiganticSpace"	"Ogromna przestrzeń"
+"[english]Settings_GiganticSpace"	"Gigantic Space"
+"Settings_GpuInfo_NoHeadset"	"BŁĄD! Nie wykryto gogli VR!"
+"[english]Settings_GpuInfo_NoHeadset"	"ERROR! No Headset Detected!"
+"QuickCalibrate_GiganticSpace"	"Ogromna przestrzeń"
+"[english]QuickCalibrate_GiganticSpace"	"Gigantic Space"
+"Advanced_PerfGraphInHMD"	"Pokaż wydajność karty granicznej w goglach (beta)"
+"[english]Advanced_PerfGraphInHMD"	"Show GPU Performance Graph in Headset (Beta)"
+"Advanced_ReprojectionOn"	"Reprojekcja wł."
+"[english]Advanced_ReprojectionOn"	"Reprojection On"
+"Advanced_ReprojectionOff"	"Reprojekcja wył."
+"[english]Advanced_ReprojectionOff"	"Reprojection Off"
+"Settings_StatusWindowHidePopups_Text"	"Wycisz powiadomienia i ostrzeżenia, gdy status SteamVR jest zminimalizowany"
+"[english]Settings_StatusWindowHidePopups_Text"	"Suppress warnings and alerts when SteamVR Status is minimized"
+"MenuAction_ShowControllerBinding"	"Przypisywanie danych wejściowych kontrolera"
+"[english]MenuAction_ShowControllerBinding"	"Controller Input Binding"
+"MenuAction_ShowManageTrackers"	"Zarządzaj urządzeniami Vive Tracker"
+"[english]MenuAction_ShowManageTrackers"	"Manage Vive Trackers"
+"Settings_BaseStation_BluetoothBusy"	"Oczekiwanie na usługi Bluetooth..."
+"[english]Settings_BaseStation_BluetoothBusy"	"Waiting for Bluetooth Services..."
+"Settings_BaseStation_BluetoothRequired"	"Funkcje bezprzewodowe nie będą dostępne, dopóki nie zostaną włączone usługi Bluetooth."
+"[english]Settings_BaseStation_BluetoothRequired"	"Wireless features are not available until Bluetooth services are enabled."
+"Settings_BaseStation_OpenSettingsBluetooth"	"Otwórz ustawienia Bluetooth"
+"[english]Settings_BaseStation_OpenSettingsBluetooth"	"Open Bluetooth Settings"
+"Settings_BaseStation_PowerManagement"	"Zarządzanie energią"
+"[english]Settings_BaseStation_PowerManagement"	"Power Management"
+"Settings_BaseStation_ScanForBaseStations"	"Skanuj w poszukiwaniu stacji bazowych"
+"[english]Settings_BaseStation_ScanForBaseStations"	"Scan For Base Stations"
+"Settings_BaseStation_ConfigureBaseStations"	"Skonfiguruj kanały stacji bazowej"
+"[english]Settings_BaseStation_ConfigureBaseStations"	"Configure Base Station Channels"
+"Settings_Advanced_MotionReprojection_Disabled"	"Reprojekcja ruchu jest niedostępna. Wymagany jest system Windows 10 oraz karta graficzna firmy %1 ze sterownikami w wersji %2 lub nowszymi."
+"[english]Settings_Advanced_MotionReprojection_Disabled"	"Motion Reprojection is unavailable. It requires Windows 10 and an %1 GPU with drivers %2 or newer."
+"Settings_PerApplication_MotionReprojection_On"	"Wł."
+"[english]Settings_PerApplication_MotionReprojection_On"	"On"
+"Settings_PerApplication_MotionReprojection_Off"	"Wył."
+"[english]Settings_PerApplication_MotionReprojection_Off"	"Off"
+"Settings_PerApplication_MotionReprojection_Checkbox_Default"	"Użyj ustawień globalnych z zakładki „Obraz” po lewej (%1)"
+"[english]Settings_PerApplication_MotionReprojection_Checkbox_Default"	"Use Global Setting From the Video Tab to the Left (%1)"
+"Settings_PerApplication_MotionReprojection_Checkbox_ForceOn"	"Zastąp ustawienia globalne i wymuś włączenie"
+"[english]Settings_PerApplication_MotionReprojection_Checkbox_ForceOn"	"Override Global Setting and Force On"
+"Settings_PerApplication_MotionReprojection_Checkbox_ForceOff"	"Zastąp ustawienia globalne i wymuś wyłączenie"
+"[english]Settings_PerApplication_MotionReprojection_Checkbox_ForceOff"	"Override Global Setting and Force Off"
+"Advanced_MotionReprojection_Disabled"	"Reprojekcja ruchu niedostępna"
+"[english]Advanced_MotionReprojection_Disabled"	"Motion Reprojection Unavailable"
+"MessageBox_RefreshAll"	"Odśwież wszystko"
+"[english]MessageBox_RefreshAll"	"Refresh All"
+"BS_PowerManagement_Title"	"Zarządzanie energią stacji bazowej"
+"[english]BS_PowerManagement_Title"	"Base Station Power Management"
+"BS_PowerManagement_Enable"	"Włącz zarządzanie energią *"
+"[english]BS_PowerManagement_Enable"	"Enable Power Management *"
+"Settings_Advanced_MotionSmoothing_Header"	"Wygładzanie ruchu"
+"[english]Settings_Advanced_MotionSmoothing_Header"	"Motion Smoothing"
+"Settings_PerApplication_MotionSmoothing_Header"	"Wygładzanie ruchu"
+"[english]Settings_PerApplication_MotionSmoothing_Header"	"Motion Smoothing"
+"Advanced_MotionEstimationDisabled"	"Wygładzanie ruchu niedostępne"
+"[english]Advanced_MotionEstimationDisabled"	"Motion Smoothing Unavailable"
 }
 }
