--- a/content/vrmonitor/translations/vrmonitor_portuguese.txt
+++ b/content/vrmonitor/translations/vrmonitor_portuguese.txt
@@ -3,7 +3,7 @@
 "Language"	"portuguese"
 "Tokens"
 {
-"VRController_NoDriver"	"Sem drivers"
+"VRController_NoDriver"	"Sem driver"
 "[english]VRController_NoDriver"	"No Driver"
 "VRController_NoDisplay"	"Sem ecrã"
 "[english]VRController_NoDisplay"	"No Display"
@@ -195,8 +195,8 @@
 "[english]MenuAction_SteamWorksDeveloperSupport"	"SteamWorks Developer Support"
 "MenuAction_CreateSystemReport"	"Criar relatório de sistema"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
-"MenuAction_DisplayFrameTiming"	"Mostrar tempos de frames"
-"[english]MenuAction_DisplayFrameTiming"	"Display Frame Timing"
+"MenuAction_DisplayFrameTiming"	"Tempo das frames (Avançado)"
+"[english]MenuAction_DisplayFrameTiming"	"Advanced Frame Timing"
 "MenuAction_RecordTrackingData"	"Gravar dados de deteção"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"Parar gravação"
@@ -624,7 +624,7 @@
 "PairingWizard_PairAnotherController"	"Emparelhar outro comando"
 "[english]PairingWizard_PairAnotherController"	"Pair Another Controller"
 "PairingWizard_LookingForControllers_Header"	"À procura de comando do Vive..."
-"[english]PairingWizard_LookingForControllers_Header"	"Looking for Vive Controller..."
+"[english]PairingWizard_LookingForControllers_Header"	"Looking for controller..."
 "PairingWizard_LookingForControllers_Content"	"Mantém premidos os botões App e System até ouvires um som.\n\nAs luzes do comando deverão começar a piscar a azul para indicar que está em modo de emparelhamento."
 "[english]PairingWizard_LookingForControllers_Content"	"Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
 "PairingWizard_TimeoutHappened_Header"	"Nenhum comando detetado"
@@ -636,13 +636,13 @@
 "PairingWizard_PairingFailed_Content"	"Certifica-te de que o teu comando está carregado e permanece perto do teu headset durante o emparelhamento.\n\nClica em 'Tentar novamente' para tentar de novo."
 "[english]PairingWizard_PairingFailed_Content"	"Make sure your controller is charged and stays near your headset when pairing.\n\nClick 'Retry' below to try again."
 "PairingWizard_Success_MoreDonglesAvailable_Header"	"Comando do Vive emparelhado!"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_MoreDonglesAvailable_Content"	"O teu comando do Vive está emparelhado e pronto. Para emparelhar outro comando, clica em 'Emparelhar outro comando'."
-"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your Vive controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
+"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
 "PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Comando do Vive emparelhado!"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_NoMoreDonglesAvailable_Content"	"O teu comando do Vive está emparelhado e pronto."
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your Vive controller is paired and ready."
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your controller is paired and ready."
 "FirmwareWizard_StartQuestion_TextContent"	"
 "
 "[english]FirmwareWizard_StartQuestion_TextContent"	"Some text content describing what is going to happen."
@@ -1375,7 +1375,7 @@
 "MenuAction_WakeupAllBaseStations"	"Acordar todas as estações base"
 "[english]MenuAction_WakeupAllBaseStations"	"Wakeup All Base Stations"
 "FirmwareWizard_ShutdownForRecovery_TextContent"	"Um componente do teu hardware do Vive necessita de uma atualização de firmware para voltar a funcionar.\n\nPretendes continuar?"
-"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your Vive hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
 "FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"A atualização das estações base falhou"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Firmware Base Station Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"A atualização do firmware falhou."
@@ -1406,8 +1406,8 @@
 "[english]VRState_Standby"	"Standby"
 "Settings_Audio_AudioMirrorUnsupported"	"Não é possível reencaminhar o áudio nesta plataforma"
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this platform"
-"Settings_AllowReprojection"	"Permitir reprojeção intercalada"
-"[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
+"Settings_AllowReprojection"	"Permitir reprojeção intercalada (recomendado)"
+"[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
 "DismissableWarning_Detected"	"Detetado"
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss"
@@ -1431,9 +1431,9 @@
 "Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>Há uma atualização crucial para o firmware da câmara, que deve ser aplicada. Passa o cursor por cima do ícone do headset e seleciona \"Atualizar firmware\".</font>"
 "[english]Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>There is a critical camera firmware update that must be applied. Hover over the headset icon and select Update Firmware.</font>"
 "Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>A câmara não é reconhecida na porta USB à qual o Vive está ligado.<br>Tenta uma porta USB diferente e reinicia o SteamVR.</font>"
-"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the Vive is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
+"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the headset is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
 "FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"O teu headset precisa de firmware novo para continuar a usar o SteamVR.\n\nGostarias de atualizá-lo?"
-"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your Vive headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
 "Status_MenuButton_SteamVR_Branch"	"SteamVR - %1"
 "[english]Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "MenuAction_KnockKnock"	"Truz-truz"
@@ -1568,8 +1568,8 @@
 "[english]DismissableWarning_DisplayInExtendedMode"	"Display in Extended Mode (0x10000)"
 "Settings_Advanced_DirectMode_Header"	"Modo Direto"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
-"Settings_ForceReprojection"	"Forçar reprojeção."
-"[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
+"Settings_ForceReprojection"	"Forçar reprojeção sempre"
+"[english]Settings_ForceReprojection"	"Enable 'always-on reprojection'"
 "Settings_ForceReprojection_Info"	"Usa esta opção só com jogos não ativos, pois reduz a previsão posicional\nem troca de mais tempo de renderização para aplicações mais lentas."
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_CheckForMissedFramesWarning"	"Mostrar aviso de frame perdida"
@@ -1811,8 +1811,8 @@
 "[english]Settings_EnableDashboard"	"Enable VR Dashboard"
 "Settings_ArcadeMode"	"Ativar modo Arcade"
 "[english]Settings_ArcadeMode"	"Enable Arcade Mode"
-"Settings_AllowAsyncReprojection"	"Permitir reprojeção assíncrona"
-"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection"
+"Settings_AllowAsyncReprojection"	"Permitir reprojeção assíncrona (recomendado)"
+"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection (recommended)"
 "Advanced_AsyncActive"	"Reproj. assínc. ON"
 "[english]Advanced_AsyncActive"	"Async Reprojection On"
 "Advanced_AsyncNotActive"	"Reproj. assínc. OFF"
@@ -1963,8 +1963,8 @@
 "[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
 "BugReporter_ProgressSubmittingPercent"	"A enviar...%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
-"Settings_HomeAppCheck"	"SteamVR Home (Beta)"
-"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"Settings_HomeAppCheck"	"Abrir SteamVR Home (Beta) ao iniciar"
+"[english]Settings_HomeAppCheck"	"Launch SteamVR Home Beta at Startup"
 "Settings_HomeAppDesc"	"O SteamVR Home permite espaços iniciais melhores, funcionalidades sociais e muito mais. Atualmente em fase Beta; por favor, diz-nos a tua opinião nos fóruns."
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"Modo noturno"
@@ -2072,10 +2072,50 @@
 "Settings_Advanced_MotionSmoothing"	"Ativar suavização de movimentos"
 "[english]Settings_Advanced_MotionSmoothing"	"Enable Motion Smoothing"
 "Settings_Advanced_MotionSmoothing_Disabled"	"\"Suavização de movimentos\" requer que o uso de reprojeção assíncrona seja possível."
-"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing requires asynchronous reprojection support."
+"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing is unavailable. It requires Windows 10 and an %1 GPU with drivers %2 or newer."
 "Advanced_MotionEstimationActive"	"Estimação de movimento - On"
-"[english]Advanced_MotionEstimationActive"	"Motion Estimation On"
+"[english]Advanced_MotionEstimationActive"	"Motion Smoothing On"
 "Advanced_MotionEstimationNotActive"	"Estimação de movimento - Off"
-"[english]Advanced_MotionEstimationNotActive"	"Motion Estimation Off"
+"[english]Advanced_MotionEstimationNotActive"	"Motion Smoothing Off"
+"Settings_GpuInfo_Header"	"Hardware"
+"[english]Settings_GpuInfo_Header"	"Hardware"
+"Settings_GpuInfo_Headset"	"Headset:"
+"[english]Settings_GpuInfo_Headset"	"Headset:"
+"Settings_GpuInfo_GpuName"	"Nome do GPU:"
+"[english]Settings_GpuInfo_GpuName"	"GPU Name:"
+"Settings_GpuInfo_GpuDriver"	"Driver do GPU:"
+"[english]Settings_GpuInfo_GpuDriver"	"GPU Driver:"
+"Settings_GpuInfo_GpuSpeed"	"Velocidade medida do GPU:"
+"[english]Settings_GpuInfo_GpuSpeed"	"GPU Measured Speed:"
+"Settings_GpuInfo_Current"	"A definição atual renderiza cada olho a"
+"[english]Settings_GpuInfo_Current"	"The current setting renders each eye at"
+"Settings_GpuInfo_Recommended"	"A definição recomendada para o teu GPU e headset é"
+"[english]Settings_GpuInfo_Recommended"	"The recommended setting for your GPU and headset is"
+"FrameTiming_MisPresented"	" --- Reprojetado"
+"[english]FrameTiming_MisPresented"	" --- Reprojected"
+"FrameTiming_FirstView"	" --- Visto pela 1ª vez"
+"[english]FrameTiming_FirstView"	" --- First Viewed"
+"FrameTiming_ReadyForUse"	" --- Pronto para uso"
+"[english]FrameTiming_ReadyForUse"	" --- Ready For Use"
+"FrameTiming_Presented"	" --- Presente (número)"
+"[english]FrameTiming_Presented"	" --- Present (count)"
+"FrameTiming_Predicted"	" --- Previsto (extra)"
+"[english]FrameTiming_Predicted"	" --- Predict (extra)"
+"FrameTiming_Throttled"	" --- Limite (frames)"
+"[english]FrameTiming_Throttled"	" --- Throttle (frames)"
+"Settings_GiganticSpace"	"Espaço gigantesco"
+"[english]Settings_GiganticSpace"	"Gigantic Space"
+"Settings_GpuInfo_NoHeadset"	"ERRO! Nenhum headset detetado!"
+"[english]Settings_GpuInfo_NoHeadset"	"ERROR! No Headset Detected!"
+"QuickCalibrate_GiganticSpace"	"Espaço gigantesco"
+"[english]QuickCalibrate_GiganticSpace"	"Gigantic Space"
+"Advanced_PerfGraphInHMD"	"Mostrar gráfico de desempenho do GPU no headset (Beta)"
+"[english]Advanced_PerfGraphInHMD"	"Show GPU Performance Graph in Headset (Beta)"
+"Advanced_ReprojectionOn"	"Reprojeção ativada"
+"[english]Advanced_ReprojectionOn"	"Reprojection On"
+"Advanced_ReprojectionOff"	"Reprojeção desativada"
+"[english]Advanced_ReprojectionOff"	"Reprojection Off"
+"Settings_StatusWindowHidePopups_Text"	"Suprimir avisos e alertas se estado do SteamVR estiver minimizado"
+"[english]Settings_StatusWindowHidePopups_Text"	"Suppress warnings and alerts when SteamVR Status is minimized"
 }
 }
