--- a/content/vrmonitor/translations/vrmonitor_romanian.txt
+++ b/content/vrmonitor/translations/vrmonitor_romanian.txt
@@ -192,7 +192,7 @@
 "MenuAction_CreateSystemReport"	"Creează raportul de sistem"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
 "MenuAction_DisplayFrameTiming"	"Afișează sincronizarea cadrelor"
-"[english]MenuAction_DisplayFrameTiming"	"Display Frame Timing"
+"[english]MenuAction_DisplayFrameTiming"	"Advanced Frame Timing"
 "MenuAction_RecordTrackingData"	"Înregistrează informațiile de urmărire"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"Oprește înregistrarea"
@@ -568,7 +568,7 @@
 "PairingWizard_PairingFailed_Header"	"Asociere eșuată"
 "[english]PairingWizard_PairingFailed_Header"	"Pairing Failed"
 "PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller asociat!"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Controller Paired!"
 "MenuAction_RunTutorial"	"Rulează tutorial"
 "[english]MenuAction_RunTutorial"	"Run Tutorial"
 "PairingWizard_HelperAppFailed_Error_ReadError"	"„Eroare de citire” (3)"
@@ -1048,7 +1048,7 @@
 "VRState_Standby"	"În așteptare"
 "[english]VRState_Standby"	"Standby"
 "Settings_AllowReprojection"	"Permite reproiecția intercalată"
-"[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
+"[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
 "DismissableWarning_Detected"	"Detectat"
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss AP"
@@ -1156,7 +1156,7 @@
 "Settings_Advanced_DirectMode_Header"	"Mod direct"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
 "Settings_ForceReprojection"	"Activează reproiecția permanent activată."
-"[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
+"[english]Settings_ForceReprojection"	"Enable 'always-on reprojection'"
 "Settings_ForceReprojection_Info"	"Această setare este potrivită doar pentru jocuri non-active, deoarece favorizează redarea\n procesării unor aplicații mai lente la urmărirea poziționării."
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_CheckForMissedFramesWarning"	"Arată avertizarea pentru cadrele ratate"
