--- a/content/vrmonitor/translations/vrmonitor_schinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_schinese.txt
@@ -196,7 +196,7 @@
 "MenuAction_CreateSystemReport"	"创建系统报告"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
 "MenuAction_DisplayFrameTiming"	"显示帧定时"
-"[english]MenuAction_DisplayFrameTiming"	"Display Frame Timing"
+"[english]MenuAction_DisplayFrameTiming"	"Advanced Frame Timing"
 "MenuAction_RecordTrackingData"	"记录定位数据"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"停止记录"
@@ -620,7 +620,7 @@
 "PairingWizard_PairAnotherController"	"配对另一个控制器"
 "[english]PairingWizard_PairAnotherController"	"Pair Another Controller"
 "PairingWizard_LookingForControllers_Header"	"寻找 Vive 控制器中…"
-"[english]PairingWizard_LookingForControllers_Header"	"Looking for Vive Controller..."
+"[english]PairingWizard_LookingForControllers_Header"	"Looking for controller..."
 "PairingWizard_LookingForControllers_Content"	"按下并按住“应用”和“系统”键直到其发出鸣响。\n\n控制器 LED 灯应开始闪烁蓝色，表明其进入配对模式。"
 "[english]PairingWizard_LookingForControllers_Content"	"Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
 "PairingWizard_TimeoutHappened_Header"	"未检测到控制器"
@@ -632,13 +632,13 @@
 "PairingWizard_PairingFailed_Content"	"在配对时，确保控制器电力充足并将其保持在头戴式显示器附近。n\n请点击下方“重试”，再次尝试。"
 "[english]PairingWizard_PairingFailed_Content"	"Make sure your controller is charged and stays near your headset when pairing.\n\nClick 'Retry' below to try again."
 "PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive 控制器已配对！"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_MoreDonglesAvailable_Content"	"您的 Vive 控制器已配对完毕并准备就绪。要配对另一个控制器，点击下方的“配对另一个控制器”。"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your Vive controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
+"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
 "PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive 控制器已配对！"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_NoMoreDonglesAvailable_Content"	"您的 Vive 控制器已配对完毕并准备就绪。"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your Vive controller is paired and ready."
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your controller is paired and ready."
 "FirmwareWizard_StartQuestion_TextContent"	"写一些用于描述接下来要发生什么的文本内容。"
 "[english]FirmwareWizard_StartQuestion_TextContent"	"Some text content describing what is going to happen."
 "MenuAction_RunTutorial"	"运行教程"
@@ -1364,7 +1364,7 @@
 "MenuAction_WakeupAllBaseStations"	"唤醒全部定位器"
 "[english]MenuAction_WakeupAllBaseStations"	"Wakeup All Base Stations"
 "FirmwareWizard_ShutdownForRecovery_TextContent"	"您的 Vive 硬件的其中一个组件需要固件更新以恢复到正常运作状态。\n\n您想要继续吗？"
-"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your Vive hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
 "FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"定位器固件更新失败"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Firmware Base Station Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"固件更新失败。"
@@ -1396,7 +1396,7 @@
 "Settings_Audio_AudioMirrorUnsupported"	"此平台不支持音频映射"
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this platform"
 "Settings_AllowReprojection"	"允许交错式再投影"
-"[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
+"[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
 "DismissableWarning_Detected"	"已检测"
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss"
@@ -1420,9 +1420,9 @@
 "Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>有一个必须应用的摄像头部件关键更新。将鼠标悬停在头戴式显示器图标上，选择“更新固件”。</font>"
 "[english]Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>There is a critical camera firmware update that must be applied. Hover over the headset icon and select Update Firmware.</font>"
 "Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>摄像头无法识别插着 Vive 的 USB 端口。<br>请尝试更换另外的 USB 端口并重启 SteamVR。</font>"
-"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the Vive is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
+"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the headset is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
 "FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"您的 Vive 头戴式显示器需要固件更新才能继续使用 SteamVR。\n\n您想要继续吗？"
-"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your Vive headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
 "Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "[english]Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "MenuAction_KnockKnock"	"咚咚"
@@ -1556,7 +1556,7 @@
 "Settings_Advanced_DirectMode_Header"	"Direct Mode 直连模式"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
 "Settings_ForceReprojection"	"启用“总是开启再投影”。"
-"[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
+"[english]Settings_ForceReprojection"	"Enable 'always-on reprojection'"
 "Settings_ForceReprojection_Info"	"由于此设置放弃增加的\n位置的预测，使较慢的应用程序有更多时间运行，它仅对非动作游戏适用。"
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_CheckForMissedFramesWarning"	"显示失帧警告"
@@ -1796,7 +1796,7 @@
 "Settings_ArcadeMode"	"启用街机模式"
 "[english]Settings_ArcadeMode"	"Enable Arcade Mode"
 "Settings_AllowAsyncReprojection"	"允许异步再投影"
-"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection"
+"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection (recommended)"
 "Advanced_AsyncActive"	"异步再投影开启"
 "[english]Advanced_AsyncActive"	"Async Reprojection On"
 "Advanced_AsyncNotActive"	"异步再投影关闭"
@@ -1948,7 +1948,7 @@
 "BugReporter_ProgressSubmittingPercent"	"提交中…%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
 "Settings_HomeAppCheck"	"SteamVR 家测试版"
-"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"[english]Settings_HomeAppCheck"	"Launch SteamVR Home Beta at Startup"
 "Settings_HomeAppDesc"	"SteamVR 家提供的全新体验，支持更丰富的家空间、社交功能和更多内容。此功能目前推出测试版，请在论坛中留下您的反馈意见。"
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"夜间模式"
@@ -2056,10 +2056,24 @@
 "Settings_Advanced_MotionSmoothing"	"启用运动平滑"
 "[english]Settings_Advanced_MotionSmoothing"	"Enable Motion Smoothing"
 "Settings_Advanced_MotionSmoothing_Disabled"	"运动平滑需要异步多重投影的支持。"
-"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing requires asynchronous reprojection support."
+"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing is unavailable. It requires Windows 10 and an %1 GPU with drivers %2 or newer."
 "Advanced_MotionEstimationActive"	"运动估计已启用"
-"[english]Advanced_MotionEstimationActive"	"Motion Estimation On"
+"[english]Advanced_MotionEstimationActive"	"Motion Smoothing On"
 "Advanced_MotionEstimationNotActive"	"运动估计已关闭"
-"[english]Advanced_MotionEstimationNotActive"	"Motion Estimation Off"
+"[english]Advanced_MotionEstimationNotActive"	"Motion Smoothing Off"
+"Settings_GpuInfo_Header"	"硬件"
+"[english]Settings_GpuInfo_Header"	"Hardware"
+"Settings_GpuInfo_Headset"	"头戴式显示器："
+"[english]Settings_GpuInfo_Headset"	"Headset:"
+"Settings_GpuInfo_GpuName"	"GPU 名称："
+"[english]Settings_GpuInfo_GpuName"	"GPU Name:"
+"Settings_GpuInfo_GpuDriver"	"GPU 驱动程序："
+"[english]Settings_GpuInfo_GpuDriver"	"GPU Driver:"
+"Settings_GpuInfo_GpuSpeed"	"GPU 测量速度："
+"[english]Settings_GpuInfo_GpuSpeed"	"GPU Measured Speed:"
+"Settings_GpuInfo_Current"	"当前设置单眼渲染为"
+"[english]Settings_GpuInfo_Current"	"The current setting renders each eye at"
+"Settings_GpuInfo_Recommended"	"建议您的 GPU 及头戴式显示器设置为"
+"[english]Settings_GpuInfo_Recommended"	"The recommended setting for your GPU and headset is"
 }
 }
