--- a/content/vrmonitor/translations/vrmonitor_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_swedish.txt
@@ -195,8 +195,8 @@
 "[english]MenuAction_SteamWorksDeveloperSupport"	"SteamWorks Developer Support"
 "MenuAction_CreateSystemReport"	"Skapa systemrapport"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
-"MenuAction_DisplayFrameTiming"	"Visa bildtiming"
-"[english]MenuAction_DisplayFrameTiming"	"Display Frame Timing"
+"MenuAction_DisplayFrameTiming"	"Avancerad bildtiming"
+"[english]MenuAction_DisplayFrameTiming"	"Advanced Frame Timing"
 "MenuAction_RecordTrackingData"	"Spela in spårningsdata"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"Stoppa inspelning"
@@ -624,7 +624,7 @@
 "PairingWizard_PairAnotherController"	"Para ihop en annan kontroll"
 "[english]PairingWizard_PairAnotherController"	"Pair Another Controller"
 "PairingWizard_LookingForControllers_Header"	"Söker efter Vive-kontroller..."
-"[english]PairingWizard_LookingForControllers_Header"	"Looking for Vive Controller..."
+"[english]PairingWizard_LookingForControllers_Header"	"Looking for controller..."
 "PairingWizard_LookingForControllers_Content"	"Tryck och håll in App- och System-knapparna tills den plingar.\n\nKontrollens LED bör börja blinka blått för att indikera att den är i ihopparningsläge."
 "[english]PairingWizard_LookingForControllers_Content"	"Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
 "PairingWizard_TimeoutHappened_Header"	"Ingen kontroll upptäckt"
@@ -636,13 +636,13 @@
 "PairingWizard_PairingFailed_Content"	"Se till att din kontroll är laddad och fortsätter vara nära ditt headset när du parar ihop den.\n\nKlicka på \"Försök igen\" nedan för att prova igen."
 "[english]PairingWizard_PairingFailed_Content"	"Make sure your controller is charged and stays near your headset when pairing.\n\nClick 'Retry' below to try again."
 "PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive-kontroll ihopparad!"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_MoreDonglesAvailable_Content"	"Din Vive-kontroll är ihopparad och redo att användas. För att para ihop en annan kontroll, tryck på \"Para ihop en annan kontroll\" nedan."
-"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your Vive controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
+"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
 "PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive-kontroll ihopparad!"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Din Vive-kontroll är ihopparad och redo."
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your Vive controller is paired and ready."
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your controller is paired and ready."
 "FirmwareWizard_StartQuestion_TextContent"	"Lite textinnehåll som beskriver vad som kommer hända."
 "[english]FirmwareWizard_StartQuestion_TextContent"	"Some text content describing what is going to happen."
 "MenuAction_RunTutorial"	"Starta handledning"
@@ -780,9 +780,9 @@
 "FirmwareWizard_UpdateBasestation_Start_UpperText"	"
 "
 "[english]FirmwareWizard_UpdateBasestation_Start_UpperText"	""
-"FirmwareWizard_UpdateBasestation_Start_MiddleText"	"Koppla ur strömsladden och ta ned basstationen - se till att du inte råkar trycka på Mode-knappen när du kopplar ur basstationen\n\n2. Koppla in basstationen genom en USB-port i din dator med en micro-USB-kabel. Du kan använda samma kabel som används för att ladda dina kontroller.\n\n3. Medan du håller in kanalknappen på baksidan av basstationen, koppla in strömsladden till basstationen."
+"FirmwareWizard_UpdateBasestation_Start_MiddleText"	"1. Koppla ur strömsladden och ta ned basstationen - se till att du inte råkar trycka på kanalknappen när du kopplar ur basstationen.\n\n2. Koppla in basstationen till en USB-port i din dator med en micro-USB-kabel. Du kan använda samma kabel som används för att ladda dina kontroller.\n\n3. Medan du håller in kanalknappen på baksidan av basstationen, koppla in strömsladden till basstationen."
 "[english]FirmwareWizard_UpdateBasestation_Start_MiddleText"	"1. Unmount and unplug your base station from power - make sure not to accidentally press the channel button while unplugging the base station.\n\n2. Use a micro-USB cable to plug the base station into a USB port on your computer. You can use the same cable that is used to charge your controllers.\n\n3. While holding down the channel button on the back of the base station, plug in your base station's power cord."
-"FirmwareWizard_UpdateBasestation_Start_LowerText"	"4. Programvaruuppdateringen påbörjas automatiskt när din basstation upptäcks."
+"FirmwareWizard_UpdateBasestation_Start_LowerText"	"4. Programvaruuppdateringen påbörjas automatiskt när din basstation upptäcks, och då kan du släppa kanalknappen."
 "[english]FirmwareWizard_UpdateBasestation_Start_LowerText"	"4. The firmware update will start automatically once your base station is detected and you may release the channel button."
 "FirmwareWizard_UpdateBasestation_Progress_Title"	"Uppdatera programvara för basstation"
 "[english]FirmwareWizard_UpdateBasestation_Progress_Title"	"Update Base Station Firmware"
@@ -1375,12 +1375,12 @@
 "MenuAction_WakeupAllBaseStations"	"Väck alla basstationer"
 "[english]MenuAction_WakeupAllBaseStations"	"Wakeup All Base Stations"
 "FirmwareWizard_ShutdownForRecovery_TextContent"	"En komponent i Vive-hårdvaran kräver en programvaruuppdatering för att återställa det till ett fungerande tillstånd.\n\nVill du fortsätta?"
-"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your Vive hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
 "FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Uppdatering misslyckades"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Firmware Base Station Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Programvaruuppdatering misslyckades."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Firmware update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Om detta fortsätter att misslyckas, avsluta SteamVR och starta om din basstation. Starta sedan SteamVR och försök igen."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Om detta fortsätter att misslyckas, avsluta SteamVR och starta om din link box och basstation. Starta sedan SteamVR och försök igen."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this continues to fail, quit SteamVR and power cycle the link box and base station. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Klicka på \"Försök igen\" nedan för att försöka igen."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
@@ -1398,7 +1398,7 @@
 "[english]DismissableWarning_WindowsAeroDisabled"	"Windows Aero disabled (0x4000)"
 "Settings_UseBluetoothLink_Text"	"Aktivera Bluetooth-kommunikation"
 "[english]Settings_UseBluetoothLink_Text"	"Enable Bluetooth Communication"
-"Settings_UseBluetoothLink_Info"	"När detta är aktiverat kan basstationerna stängas av/på samt uppdateras trådlöst, och du kan få aviseringar från din telefon."
+"Settings_UseBluetoothLink_Info"	"När detta är aktiverat kan basstationerna stängas av/på samt uppdateras trådlöst. Detta kan även aktivera ytterligare funktioner för vissa VR-headsets."
 "[english]Settings_UseBluetoothLink_Info"	"When this is enabled, Base Stations can be wirelessly power managed and updated. This may also enable additional features for some VR headsets."
 "FirmwareWizard_WaitingForShutdown_TextContent"	"Förbereder system för programvaruuppdatering..."
 "[english]FirmwareWizard_WaitingForShutdown_TextContent"	"Preparing system for firmware update..."
@@ -1406,8 +1406,8 @@
 "[english]VRState_Standby"	"Standby"
 "Settings_Audio_AudioMirrorUnsupported"	"Spegling av ljud stöds inte på denna plattform"
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this platform"
-"Settings_AllowReprojection"	"Tillåt inflätad omprojicering"
-"[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
+"Settings_AllowReprojection"	"Tillåt inflätad omprojicering (rekommenderad)"
+"[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
 "DismissableWarning_Detected"	"Upptäckt"
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss AP"
@@ -1431,9 +1431,9 @@
 "Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>Det finns en viktig uppdatering till kameraprogramvaran som måste appliceras. Håll muspekaren över headset-ikonen och välj Uppdatera programvara.</font>"
 "[english]Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>There is a critical camera firmware update that must be applied. Hover over the headset icon and select Update Firmware.</font>"
 "Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>Kameran känns inte igen på USB-porten som Vive är inkopplad till.<br>Försök med en annan USB-port och starta om SteamVR.</font>"
-"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the Vive is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
+"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the headset is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
 "FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Ditt Vive-headset kräver en programvaruuppdatering för att fortsätta använda SteamVR.\n\nVill du fortsätta?"
-"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your Vive headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
 "Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "[english]Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "MenuAction_KnockKnock"	"Knack Knack"
@@ -1568,8 +1568,8 @@
 "[english]DismissableWarning_DisplayInExtendedMode"	"Display in Extended Mode (0x10000)"
 "Settings_Advanced_DirectMode_Header"	"Direct Mode"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
-"Settings_ForceReprojection"	"Aktivera Always-on Reprojection."
-"[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
+"Settings_ForceReprojection"	"Aktivera \"Konstant omprojicering\""
+"[english]Settings_ForceReprojection"	"Enable 'always-on reprojection'"
 "Settings_ForceReprojection_Info"	"Denna inställning lämpar sig enbart icke-aktiva spel, då den kompromissar\nökad positionsförutsägelse mot att långsammare applikationer får mer tid på sig att rendera."
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_CheckForMissedFramesWarning"	"Visa varning om tappade bildrutor"
@@ -1811,8 +1811,8 @@
 "[english]Settings_EnableDashboard"	"Enable VR Dashboard"
 "Settings_ArcadeMode"	"Aktivera arkadläge"
 "[english]Settings_ArcadeMode"	"Enable Arcade Mode"
-"Settings_AllowAsyncReprojection"	"Tillåt asynkron omprojicering"
-"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection"
+"Settings_AllowAsyncReprojection"	"Tillåt asynkron omprojicering (rekommenderad)"
+"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection (recommended)"
 "Advanced_AsyncActive"	"Asynkron omprojicering på"
 "[english]Advanced_AsyncActive"	"Async Reprojection On"
 "Advanced_AsyncNotActive"	"Asynkron omprojicering av"
@@ -1899,7 +1899,7 @@
 "[english]Settings_Advanced_Supersampling_Header"	"Application Resolution"
 "Settings_Advanced_Supersampling_RequiresRestart"	"Denna ändring kräver omstart av SteamVR för att ta verkan."
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
-"Explanation_Supersampling"	"Supersampling gör att alla VR-applikationer renderas i en högre eller lägre upplösning än det inkopplade headsetets ursprungsupplösning (1.0 är standardvärdet). OBS: Vissa applikationer kan fungera inkorrekt vid en ändring medan de körs, och kan behöva startas om."
+"Explanation_Supersampling"	"*Vissa applikationer kan kräva en omstart för att inställningarna ska börja verka."
 "[english]Explanation_Supersampling"	"*Some applications may need to be restarted for settings to take effect."
 "MenuAction_Workshop_RunTools"	"Skapa/modifiera en miljö"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
@@ -1963,8 +1963,8 @@
 "[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
 "BugReporter_ProgressSubmittingPercent"	"Skickar...%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
-"Settings_HomeAppCheck"	"SteamVR Home-beta"
-"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"Settings_HomeAppCheck"	"Kör SteamVR Home-beta vid uppstart"
+"[english]Settings_HomeAppCheck"	"Launch SteamVR Home Beta at Startup"
 "Settings_HomeAppDesc"	"Den nya SteamVR Home-upplevelsen har stöd för detaljrikare hemutrymmen, sociala funktioner med mera. Denna funktion är i beta för tillfället, ge oss gärna feedback på forumen."
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"Nattläge"
@@ -2006,10 +2006,50 @@
 "Settings_Advanced_MotionSmoothing"	"Aktivera rörelseutjämning"
 "[english]Settings_Advanced_MotionSmoothing"	"Enable Motion Smoothing"
 "Settings_Advanced_MotionSmoothing_Disabled"	"Rörelseutjämning kräver stöd för asynkron omprojicering"
-"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing requires asynchronous reprojection support."
+"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing is unavailable. It requires Windows 10 and an %1 GPU with drivers %2 or newer."
 "Advanced_MotionEstimationActive"	"Rörelseuppskattning - På"
-"[english]Advanced_MotionEstimationActive"	"Motion Estimation On"
+"[english]Advanced_MotionEstimationActive"	"Motion Smoothing On"
 "Advanced_MotionEstimationNotActive"	"Rörelseuppskattning - Av"
-"[english]Advanced_MotionEstimationNotActive"	"Motion Estimation Off"
+"[english]Advanced_MotionEstimationNotActive"	"Motion Smoothing Off"
+"Settings_GpuInfo_Header"	"Hårdvara"
+"[english]Settings_GpuInfo_Header"	"Hardware"
+"Settings_GpuInfo_Headset"	"Headset:"
+"[english]Settings_GpuInfo_Headset"	"Headset:"
+"Settings_GpuInfo_GpuName"	"GPU-namn:"
+"[english]Settings_GpuInfo_GpuName"	"GPU Name:"
+"Settings_GpuInfo_GpuDriver"	"GPU-drivrutin:"
+"[english]Settings_GpuInfo_GpuDriver"	"GPU Driver:"
+"Settings_GpuInfo_GpuSpeed"	"Uppmätt GPU-hastighet:"
+"[english]Settings_GpuInfo_GpuSpeed"	"GPU Measured Speed:"
+"Settings_GpuInfo_Current"	"Den nuvarande inställningen renderar varje öga på"
+"[english]Settings_GpuInfo_Current"	"The current setting renders each eye at"
+"Settings_GpuInfo_Recommended"	"Den rekommenderade inställningen för ditt grafikkort och headset är"
+"[english]Settings_GpuInfo_Recommended"	"The recommended setting for your GPU and headset is"
+"FrameTiming_MisPresented"	" --- Återprojicerad"
+"[english]FrameTiming_MisPresented"	" --- Reprojected"
+"FrameTiming_FirstView"	" --- Visades först"
+"[english]FrameTiming_FirstView"	" --- First Viewed"
+"FrameTiming_ReadyForUse"	" --- Redo för användning"
+"[english]FrameTiming_ReadyForUse"	" --- Ready For Use"
+"FrameTiming_Presented"	" --- Nuvarande (antal)"
+"[english]FrameTiming_Presented"	" --- Present (count)"
+"FrameTiming_Predicted"	" --- Förutsäg (extra)"
+"[english]FrameTiming_Predicted"	" --- Predict (extra)"
+"FrameTiming_Throttled"	" --- Begränsade (bildrutor)"
+"[english]FrameTiming_Throttled"	" --- Throttle (frames)"
+"Settings_GiganticSpace"	"Gigantiskt utrymme"
+"[english]Settings_GiganticSpace"	"Gigantic Space"
+"Settings_GpuInfo_NoHeadset"	"FEL! Inget headset upptäcktes!"
+"[english]Settings_GpuInfo_NoHeadset"	"ERROR! No Headset Detected!"
+"QuickCalibrate_GiganticSpace"	"Gigantiskt utrymme"
+"[english]QuickCalibrate_GiganticSpace"	"Gigantic Space"
+"Advanced_PerfGraphInHMD"	"Visa GPU-prestandagraf i headset (Beta)"
+"[english]Advanced_PerfGraphInHMD"	"Show GPU Performance Graph in Headset (Beta)"
+"Advanced_ReprojectionOn"	"Återprojicering på"
+"[english]Advanced_ReprojectionOn"	"Reprojection On"
+"Advanced_ReprojectionOff"	"Återprojicering av"
+"[english]Advanced_ReprojectionOff"	"Reprojection Off"
+"Settings_StatusWindowHidePopups_Text"	"Tysta varningar när SteamVR-status är minimerad"
+"[english]Settings_StatusWindowHidePopups_Text"	"Suppress warnings and alerts when SteamVR Status is minimized"
 }
 }
