--- a/content/vrmonitor/translations/vrmonitor_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_thai.txt
@@ -195,8 +195,8 @@
 "[english]MenuAction_SteamWorksDeveloperSupport"	"SteamWorks Developer Support"
 "MenuAction_CreateSystemReport"	"สร้างรายงานระบบ"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
-"MenuAction_DisplayFrameTiming"	"หน้าจอการจับเวลาเฟรม"
-"[english]MenuAction_DisplayFrameTiming"	"Display Frame Timing"
+"MenuAction_DisplayFrameTiming"	"การจับเวลาเฟรมขั้นสูง"
+"[english]MenuAction_DisplayFrameTiming"	"Advanced Frame Timing"
 "MenuAction_RecordTrackingData"	"บันทึกข้อมูลการติดตาม"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"หยุดการบันทึก"
@@ -619,8 +619,8 @@
 "[english]PairingWizard_PairController_Success_Title"	"Success!"
 "PairingWizard_PairAnotherController"	"เชื่อมโยงคอนโทรลเลอร์อื่น"
 "[english]PairingWizard_PairAnotherController"	"Pair Another Controller"
-"PairingWizard_LookingForControllers_Header"	"กำลังมองหาคอนโทรลเลอร์ Vive..."
-"[english]PairingWizard_LookingForControllers_Header"	"Looking for Vive Controller..."
+"PairingWizard_LookingForControllers_Header"	"กำลังมองหาคอนโทรลเลอร์..."
+"[english]PairingWizard_LookingForControllers_Header"	"Looking for controller..."
 "PairingWizard_LookingForControllers_Content"	"กดปุ่มแอปและปุ่มระบบค้างไว้จนกระทั่งมีเสียง \n\nไฟ LED ของคอนโทรลเลอร์ควรเริ่มกะพริบสีฟ้า เป็นการระบุว่าคอนโทรลเลอร์อยู่ในโหมดเชื่อมโยง"
 "[english]PairingWizard_LookingForControllers_Content"	"Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
 "PairingWizard_TimeoutHappened_Header"	"ไม่พบคอนโทรลเลอร์"
@@ -632,13 +632,13 @@
 "PairingWizard_PairingFailed_Content"	"ตรวจสอบให้แน่ใจว่าคอนโทรลเลอร์ของคุณถูกชาร์จและอยู่ไม่ไกลจากเครื่องสวมศีรษะเมื่อทำการจับคู่\n\nคลิก 'ลองอีกครั้ง' ด้านล่างเพื่อลองใหม่อีกครั้ง"
 "[english]PairingWizard_PairingFailed_Content"	"Make sure your controller is charged and stays near your headset when pairing.\n\nClick 'Retry' below to try again."
 "PairingWizard_Success_MoreDonglesAvailable_Header"	"คอนโทรลเลอร์ Vive เชื่อมโยงแล้ว!"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_MoreDonglesAvailable_Content"	"คอนโทรลเลอร์ Vive ของคุณถูกเชื่อมโยงแล้วและพร้อมใช้งาน หากต้องการเชื่อมโยงคอนโทรลเลอร์อื่น ให้คลิก 'เชื่อมโยงคอนโทรลเลอร์อื่น' ด้านล่าง"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your Vive controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
+"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
 "PairingWizard_Success_NoMoreDonglesAvailable_Header"	"คอนโทรลเลอร์ Vive เชื่อมโยงแล้ว!"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller Paired!"
-"PairingWizard_Success_NoMoreDonglesAvailable_Content"	"คอนโทรลเลอร์ Vive ของคุณถูกเชื่อมโยงและพร้อมใช้งานแล้ว"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your Vive controller is paired and ready."
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Controller Paired!"
+"PairingWizard_Success_NoMoreDonglesAvailable_Content"	"คอนโทรลเลอร์ของคุณถูกเชื่อมโยงและพร้อมใช้งานแล้ว"
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your controller is paired and ready."
 "FirmwareWizard_StartQuestion_TextContent"	"เนื้อหาข้อความบางส่วนกำลังอธิบายถึงสิ่งที่กำลังเกิดขึ้น"
 "[english]FirmwareWizard_StartQuestion_TextContent"	"Some text content describing what is going to happen."
 "MenuAction_RunTutorial"	"เริ่มการฝึกสอน"
@@ -1364,7 +1364,7 @@
 "MenuAction_WakeupAllBaseStations"	"ปลุกสถานีฐานทั้งหมด"
 "[english]MenuAction_WakeupAllBaseStations"	"Wakeup All Base Stations"
 "FirmwareWizard_ShutdownForRecovery_TextContent"	"ส่วนประกอบของฮาร์ดแวร์ Vive ของคุณจำเป็นต้องใช้การอัปเดตเฟิร์มแวร์ เพื่อคืนค่าไปยังสถานะที่สามารถทำงานได้ \n\nคุณต้องการดำเนินการต่อหรือไม่?"
-"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your Vive hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
 "FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"เฟิร์มแวร์สถานีฐานล้มเหลว"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Firmware Base Station Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"การอัปเดตเฟิร์มแวร์ล้มเหลว"
@@ -1395,8 +1395,8 @@
 "[english]VRState_Standby"	"Standby"
 "Settings_Audio_AudioMirrorUnsupported"	"การส่งเสียงเสมือนไม่รองรับบนแพลตฟอร์มนี้"
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this platform"
-"Settings_AllowReprojection"	"อนุญาตให้รีโปรเจกชันแบบอินเตอร์ลีฟ"
-"[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
+"Settings_AllowReprojection"	"อนุญาตให้รีโปรเจกชันแบบอินเตอร์ลีฟ (แนะนำ)"
+"[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
 "DismissableWarning_Detected"	"ถูกตรวจพบ"
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss"
@@ -1420,9 +1420,9 @@
 "Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>พบอัปเดตเฟิร์มแวร์กล้องที่สำคัญมากจะต้องถูกปรับใช้ ชี้เหนือไอคอนเครื่องสวมศีรษะและเลือกอัปเดตเฟิร์มแวร์</font>"
 "[english]Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>There is a critical camera firmware update that must be applied. Hover over the headset icon and select Update Firmware.</font>"
 "Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>กล้องไม่ได้ถูกจดจำบนพอร์ต USB ที่ Vive เสียบอยู่ <br>ลองเสียบพอร์ต USB ช่องอื่น แล้วรีสตาร์ท SteamVR</font>"
-"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the Vive is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
-"FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"เครื่องสวมศีรษะ Vive ของคุณจำเป็นต้องใช้การอัปเดตเฟิร์มแวร์ เพื่อใช้งาน SteamVR ต่อไป \n\nคุณต้องการดำเนินการต่อหรือไม่?"
-"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your Vive headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
+"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the headset is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
+"FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"เครื่องสวมศีรษะของคุณจำเป็นต้องใช้การอัปเดตเฟิร์มแวร์ เพื่อใช้งาน SteamVR ต่อไป \n\nคุณต้องการดำเนินการต่อหรือไม่?"
+"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
 "Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "[english]Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "MenuAction_KnockKnock"	"ก๊อก ก๊อก"
@@ -1555,8 +1555,8 @@
 "[english]DismissableWarning_DisplayInExtendedMode"	"Display in Extended Mode (0x10000)"
 "Settings_Advanced_DirectMode_Header"	"Direct Mode"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
-"Settings_ForceReprojection"	"เปิดการใช้งานรีโปรเจกชันแบบเปิดตลอดเวลา"
-"[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
+"Settings_ForceReprojection"	"เปิดการใช้งาน 'รีโปรเจกชันแบบเปิดตลอดเวลา'"
+"[english]Settings_ForceReprojection"	"Enable 'always-on reprojection'"
 "Settings_ForceReprojection_Info"	"การตั้งค่านี้เหมาะสำหรับเกมที่ไม่ได้โต้ตอบอย่างรวดเร็วเท่านั้น เนื่องจากต้องใช้ \nการคาดคะเนตำแหน่งเพิ่มขึ้น เพื่อให้มีเวลาเรนเดอร์มากขึ้นสำหรับแอปพลิเคชันที่ช้ากว่า"
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_CheckForMissedFramesWarning"	"แสดงคำเตือนเฟรมสูญหาย"
@@ -1795,8 +1795,8 @@
 "[english]Settings_EnableDashboard"	"Enable VR Dashboard"
 "Settings_ArcadeMode"	"เปิดการใช้งานโหมดอาร์เคด"
 "[english]Settings_ArcadeMode"	"Enable Arcade Mode"
-"Settings_AllowAsyncReprojection"	"อนุญาตให้รีโปรเจกชันแบบอะซิงโครนัส"
-"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection"
+"Settings_AllowAsyncReprojection"	"อนุญาตให้รีโปรเจกชันแบบอะซิงโครนัส (แนะนำ)"
+"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection (recommended)"
 "Advanced_AsyncActive"	"รีโปรเจกชันแบบอะซิงค์เปิดอยู่"
 "[english]Advanced_AsyncActive"	"Async Reprojection On"
 "Advanced_AsyncNotActive"	"รีโปรเจกชันแบบอะซิงค์ปิดอยู่"
@@ -1947,9 +1947,9 @@
 "[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
 "BugReporter_ProgressSubmittingPercent"	"กำลังส่ง...%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
-"Settings_HomeAppCheck"	"หน้าหลัก SteamVR เบต้า"
-"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
-"Settings_HomeAppDesc"	"ประสบการณ์หน้าหลัก SteamVR แบบใหม่รองรับพื้นที่บ้านที่ดียิ่งขึ้น คุณสมบัติทางสังคม และอีกมากมาย คุณสมบัตินี้อยู่ในช่วงเบต้า กรุณาให้ข้อเสนอแนะในฟอรัม"
+"Settings_HomeAppCheck"	"เริ่มเปิดบ้าน SteamVR เบต้าเมื่อเริ่มต้น"
+"[english]Settings_HomeAppCheck"	"Launch SteamVR Home Beta at Startup"
+"Settings_HomeAppDesc"	"ประสบการณ์บ้าน SteamVR แบบใหม่รองรับพื้นที่บ้านที่ดียิ่งขึ้น คุณสมบัติทางสังคม และอีกมากมาย คุณสมบัตินี้อยู่ในเบต้าในขณะนี้ กรุณาให้ข้อเสนอแนะในฟอรัม"
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"โหมดกลางคืน"
 "[english]Settings_NightModeCheck"	"Night Mode"
@@ -2056,10 +2056,50 @@
 "Settings_Advanced_MotionSmoothing"	"เปิดการใช้งานความเคลื่อนไหวแบบราบรื่น"
 "[english]Settings_Advanced_MotionSmoothing"	"Enable Motion Smoothing"
 "Settings_Advanced_MotionSmoothing_Disabled"	"ความเคลื่อนไหวแบบราบรื่นจำเป็นต้องใช้การรองรับรีโปรเจกชันแบบอะซิงโครนัส"
-"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing requires asynchronous reprojection support."
+"[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing is unavailable. It requires Windows 10 and an %1 GPU with drivers %2 or newer."
 "Advanced_MotionEstimationActive"	"การประมาณความเคลื่อนไหวเปิดอยู่"
-"[english]Advanced_MotionEstimationActive"	"Motion Estimation On"
+"[english]Advanced_MotionEstimationActive"	"Motion Smoothing On"
 "Advanced_MotionEstimationNotActive"	"การประมาณความเคลื่อนไหวปิดอยู่"
-"[english]Advanced_MotionEstimationNotActive"	"Motion Estimation Off"
+"[english]Advanced_MotionEstimationNotActive"	"Motion Smoothing Off"
+"Settings_GpuInfo_Header"	"ฮาร์ดแวร์"
+"[english]Settings_GpuInfo_Header"	"Hardware"
+"Settings_GpuInfo_Headset"	"เครื่องสวมศีรษะ:"
+"[english]Settings_GpuInfo_Headset"	"Headset:"
+"Settings_GpuInfo_GpuName"	"ชื่อ GPU:"
+"[english]Settings_GpuInfo_GpuName"	"GPU Name:"
+"Settings_GpuInfo_GpuDriver"	"ไดรเวอร์ GPU:"
+"[english]Settings_GpuInfo_GpuDriver"	"GPU Driver:"
+"Settings_GpuInfo_GpuSpeed"	"ความเร็ว GPU ที่ตรวจวัดได้:"
+"[english]Settings_GpuInfo_GpuSpeed"	"GPU Measured Speed:"
+"Settings_GpuInfo_Current"	"การตั้งค่าปัจจุบันเรนเดอร์ต่อตาแต่ละข้างที่"
+"[english]Settings_GpuInfo_Current"	"The current setting renders each eye at"
+"Settings_GpuInfo_Recommended"	"การตั้งค่าที่แนะนำสำหรับ GPU และเครื่องสวมศีรษะของคุณคือ"
+"[english]Settings_GpuInfo_Recommended"	"The recommended setting for your GPU and headset is"
+"FrameTiming_MisPresented"	" --- รีโปรเจกชัน"
+"[english]FrameTiming_MisPresented"	" --- Reprojected"
+"FrameTiming_FirstView"	" --- ดูครั้งแรก"
+"[english]FrameTiming_FirstView"	" --- First Viewed"
+"FrameTiming_ReadyForUse"	" --- พร้อมใช้งาน"
+"[english]FrameTiming_ReadyForUse"	" --- Ready For Use"
+"FrameTiming_Presented"	" --- ปัจจุบัน (จำนวนนับ)"
+"[english]FrameTiming_Presented"	" --- Present (count)"
+"FrameTiming_Predicted"	" --- ทำนาย (พิเศษ)"
+"[english]FrameTiming_Predicted"	" --- Predict (extra)"
+"FrameTiming_Throttled"	" --- จำกัด (เฟรม)"
+"[english]FrameTiming_Throttled"	" --- Throttle (frames)"
+"Settings_GiganticSpace"	"พื้นที่โล่งกว้าง"
+"[english]Settings_GiganticSpace"	"Gigantic Space"
+"Settings_GpuInfo_NoHeadset"	"ข้อผิดพลาด! ไม่พบเครื่องสวมศีรษะ!"
+"[english]Settings_GpuInfo_NoHeadset"	"ERROR! No Headset Detected!"
+"QuickCalibrate_GiganticSpace"	"พื้นที่โล่งกว้าง"
+"[english]QuickCalibrate_GiganticSpace"	"Gigantic Space"
+"Advanced_PerfGraphInHMD"	"แสดงกราฟประสิทธิภาพ GPU ในเครื่องสวมศีรษะ (เบต้า)"
+"[english]Advanced_PerfGraphInHMD"	"Show GPU Performance Graph in Headset (Beta)"
+"Advanced_ReprojectionOn"	"รีโปรเจกชันเปิดอยู่"
+"[english]Advanced_ReprojectionOn"	"Reprojection On"
+"Advanced_ReprojectionOff"	"รีโปรเจกชันปิดอยู่"
+"[english]Advanced_ReprojectionOff"	"Reprojection Off"
+"Settings_StatusWindowHidePopups_Text"	"ระงับการแสดงคำเตือนและการแจ้งเตือนเมื่อหน้าต่างสถานะ SteamVR ถูกย่ออยู่"
+"[english]Settings_StatusWindowHidePopups_Text"	"Suppress warnings and alerts when SteamVR Status is minimized"
 }
 }
