--- a/content/vrmonitor/translations/vrmonitor_errors_polish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_polish.txt
@@ -19,8 +19,8 @@
 "[english]Error_NoCompositorAvailable_Header"	"Compositor is not available"
 "Error_NoCompositorAvailable_Description"	"Jest to potrzebne, żeby SteamVR mógł działać prawidłowo."
 "[english]Error_NoCompositorAvailable_Description"	"You'll need this to run SteamVR to work correctly."
-"Error_NoCompositorAvailable_Action"	"Uruchom Kompozytora"
-"[english]Error_NoCompositorAvailable_Action"	"Launch Compositor"
+"Error_NoCompositorAvailable_Action"	"Zrestartuj SteamVR"
+"[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"Pokój nie jest przygotowany"
 "[english]Error_NoChaperoneAvailable_Header"	"Room is not set up"
 "Error_NoChaperoneAvailable_Description"	"Przygotuj swój pokój, aby SteamVR mógł działać prawidłowo."
@@ -37,8 +37,8 @@
 "[english]Error_CompositorNotRunning_Header"	"Compositor is not running"
 "Error_CompositorNotRunning_Description"	"Jest to potrzebne do prawidłowej pracy SteamVR."
 "[english]Error_CompositorNotRunning_Description"	"You'll need this for SteamVR to work correctly."
-"Error_CompositorNotRunning_Action"	"Uruchom Kompozytora"
-"[english]Error_CompositorNotRunning_Action"	"Launch Compositor"
+"Error_CompositorNotRunning_Action"	"Zrestartuj SteamVR"
+"[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"Zbyt dużo uruchomionych kompozytorów"
 "[english]Error_CompositorTooManyRunning_Header"	"Too many compositors running"
 "Error_CompositorTooManyRunning_Description"	"Aby SteamVR działał prawidłowo, musi być uruchomiony tylko jeden kompozytor."
@@ -258,8 +258,8 @@
 "[english]VRInitError_Driver_CalibrationInvalid_Action"	"Troubleshooting"
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Gogle nie są podłączone prawidłowo"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset not connected properly"
-"VRInitError_Driver_HmdDisplayNotFound_Description"	"Wyświetlacz gogli nie został wykryty. Upewnij się, że kable HDMI są prawidłowo podłączone, a następnie uruchom je ponownie, klikając poniżej."
-"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
+"VRInitError_Driver_HmdDisplayNotFound_Description"	"Wyświetlacz gogli nie został wykryty. Upewnij się, że kable wideo są prawidłowo podłączone, a następnie uruchom urządzenie ponownie, klikając poniżej."
+"[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"The headset's display was not found, please make sure your video cables are securely connected, then reboot it by clicking below."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Rozwiązywanie problemów"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"Troubleshooting"
 "VRInitError_IPC_ServerInitFailed_Header"	"Coś jest nie tak"
@@ -884,11 +884,11 @@
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Konflikt synchronizacji kanałów"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Sync On Beam Channel Conflict"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Obydwie stacje bazowe znajdowały się na kanale %1 w tym samym czasie. Dla najlepszych rezultatów używaj unikalnych kanałów dla wszystkich stacji działających w tym samym momencie."
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time.  For best results, use unique channels for all bases that can be seen at the same time."
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	" "
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
-"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	" "
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Saw two bases on channel %1 at the same time. For best results, use unique channels for all bases that can be seen at the same time."
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Skonfiguruj"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_ActionURL"	"vrmonitor://open/settings/basestation/configurechannels"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothDriverNeedsUpdate_Header"	"Sterownik Bluetooth"
@@ -902,7 +902,7 @@
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Nie znaleziono usługi łącza Bluetooth"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Serivce not found"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Header"	"Bluetooth Link Service not found"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"Nie znaleziono wymaganego pliku dla SteamVR. Sprawdź instalację SteamVR."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Description"	"A file we need for SteamVR is missing, please check your SteamVR installation."
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"Rozwiązywanie problemów"
@@ -910,7 +910,7 @@
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326&l=polish#steamvr-issues"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Błąd usługi łącza Bluetooth"
-"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Serivce error"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Link Service error"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"Wystąpił nieoczekiwany błąd w systemie Bluetooth."
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Description"	"There was an unexpected problem within the Bluetooth system."
 "Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Ustawienia Bluetooth"
@@ -925,5 +925,21 @@
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	" "
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	" "
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Zaktualizuj sterowniki karty graficznej"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"Używasz starszej wersji sterowników karty graficznej.\nDla najlepszych rezultatów ze SteamVR zalecamy zaktualizowanie sterowników do najnowszej wersji."
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"You are running an old video driver.\nFor the best SteamVR experience, we recommend updating to the latest driver."
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Pobierz sterowniki"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"Download Driver"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx?lang=pl"
+"[english]Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx"
+"Error_NoCompositorAvailable_ActionURL"	"vrmonitor://restartsystem"
+"[english]Error_NoCompositorAvailable_ActionURL"	"vrmonitor://restartsystem"
+"Error_CompositorNotRunning_ActionURL"	"vrmonitor://restartsystem"
+"[english]Error_CompositorNotRunning_ActionURL"	"vrmonitor://restartsystem"
+"VRInitError_Compositor_D3D11HardwareRequired_Action"	"Zrestartuj SteamVR"
+"[english]VRInitError_Compositor_D3D11HardwareRequired_Action"	"Restart SteamVR"
+"VRInitError_Compositor_D3D11HardwareRequired_ActionURL"	"vrmonitor://restartsystem"
+"[english]VRInitError_Compositor_D3D11HardwareRequired_ActionURL"	"vrmonitor://restartsystem"
 }
 }
