--- a/content/vrmonitor/translations/vrmonitor_koreana.txt
+++ b/content/vrmonitor/translations/vrmonitor_koreana.txt
@@ -196,7 +196,7 @@
 "MenuAction_CreateSystemReport"	"시스템 보고서 작성"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
 "MenuAction_DisplayFrameTiming"	"프레임 타이밍 표시"
-"[english]MenuAction_DisplayFrameTiming"	"Display Frame Timing"
+"[english]MenuAction_DisplayFrameTiming"	"Advanced Frame Timing"
 "MenuAction_RecordTrackingData"	"추적 데이터 기록"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"녹화 중지"
@@ -620,7 +620,7 @@
 "PairingWizard_PairAnotherController"	"다른 컨트롤러 연결"
 "[english]PairingWizard_PairAnotherController"	"Pair Another Controller"
 "PairingWizard_LookingForControllers_Header"	"Vive 컨트롤러 찾는 중..."
-"[english]PairingWizard_LookingForControllers_Header"	"Looking for Vive Controller..."
+"[english]PairingWizard_LookingForControllers_Header"	"Looking for controller..."
 "PairingWizard_LookingForControllers_Content"	"소리가 날 때까지 앱 및 시스템 버튼을 누르고 계십시오.\n\n컨트롤러의 LED가 파란색으로 깜빡이기 시작하며 연결 모드에 진입했음을 알려줍니다."
 "[english]PairingWizard_LookingForControllers_Content"	"Press and hold the App and System buttons until it chimes.\n\nThe controller LED should start blinking blue to indicate that it is in pairing mode."
 "PairingWizard_TimeoutHappened_Header"	"컨트롤러가 발견되지 않았습니다."
@@ -632,13 +632,13 @@
 "PairingWizard_PairingFailed_Content"	"연결 시 귀하의 컨트롤러가 충전 되어 있고 헤드셋 가까이에 놓여 있는지 확인하십시오.\n\n아래의 '재시도' 버튼을 눌러 다시 시도하세요."
 "[english]PairingWizard_PairingFailed_Content"	"Make sure your controller is charged and stays near your headset when pairing.\n\nClick 'Retry' below to try again."
 "PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive 컨트롤러가 연결 되었습니다!"
-"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_MoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_MoreDonglesAvailable_Content"	"귀하의 Vive 컨트롤러가 연결 되었으며 바로 사용하실 수 있습니다. 다른 컨트롤러를 추가하시려면, 아래의 '다른 컨트롤러 연결'을 클릭하세요."
-"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your Vive controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
+"[english]PairingWizard_Success_MoreDonglesAvailable_Content"	"Your controller is paired and ready to go. To pair another controller,  click 'Pair Another Controller' below."
 "PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive 컨트롤러가 연결 되었습니다!"
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Vive Controller Paired!"
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Header"	"Controller Paired!"
 "PairingWizard_Success_NoMoreDonglesAvailable_Content"	"귀하의 Vive 컨트롤러가 연결 되었으며 사용하실 수 있습니다."
-"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your Vive controller is paired and ready."
+"[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your controller is paired and ready."
 "FirmwareWizard_StartQuestion_TextContent"	"어떻게 작동되는지 안내문이 나타납니다."
 "[english]FirmwareWizard_StartQuestion_TextContent"	"Some text content describing what is going to happen."
 "MenuAction_RunTutorial"	"튜토리얼 실행하기"
@@ -1364,7 +1364,7 @@
 "MenuAction_WakeupAllBaseStations"	"모든 베이스 스테이션 깨우기"
 "[english]MenuAction_WakeupAllBaseStations"	"Wakeup All Base Stations"
 "FirmwareWizard_ShutdownForRecovery_TextContent"	"Vive 하드웨어의 구성 요소를 실행 가능한 상태로 복구하려면 펌웨어를 업데이트해야 합니다.\n\n계속하시겠습니까?"
-"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your Vive hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForRecovery_TextContent"	"A component of your hardware requires a firmware update to restore it to an operational state.\n\nWould you like to continue?"
 "FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"베이스 스테이션 펌웨어 실패"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	"Firmware Base Station Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"펌웨어 업데이트 실패."
@@ -1396,7 +1396,7 @@
 "Settings_Audio_AudioMirrorUnsupported"	"오디오 복제는 이 플랫폼에서 지원되지 않습니다"
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this platform"
 "Settings_AllowReprojection"	"인터리브 중복 프로젝션 허용"
-"[english]Settings_AllowReprojection"	"Allow interleaved reprojection"
+"[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
 "DismissableWarning_Detected"	"발견됨"
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss AP"
@@ -1420,9 +1420,9 @@
 "Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>반드시 적용되어야 할 중요한 카메라 펌웨어가 있습니다. 헤드셋 아이콘 위에 마우스 포인터를 놓고 '펌웨어 업데이트하기'를 선택하세요.</font>"
 "[english]Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>There is a critical camera firmware update that must be applied. Hover over the headset icon and select Update Firmware.</font>"
 "Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>Vive가 연결된 USB 포트에서 카메라가 인식되지 않습니다.<br>다른 USB 포트를 사용하여 SteamVR을 다시 시작해 보세요.</font>"
-"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the Vive is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
+"[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>The camera is not recognized on the USB port that the headset is plugged into.<br>Try a different USB port and restart SteamVR.</font>"
 "FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"SteamVR을 계속 사용하려면 Vive 헤드셋은 펌웨어 업데이트가 필요합니다.\n\n계속하시겠습니까?"
-"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your Vive headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
+"[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your headset requires a firmware update to continue using SteamVR.\n\nWould you like to continue?"
 "Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "[english]Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "MenuAction_KnockKnock"	"똑똑"
@@ -1556,7 +1556,7 @@
 "Settings_Advanced_DirectMode_Header"	"직접 모드"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Mode"
 "Settings_ForceReprojection"	"중복 프로젝션 항상 켜기를 활성화합니다."
-"[english]Settings_ForceReprojection"	"Enable Always-on Reprojection."
+"[english]Settings_ForceReprojection"	"Enable 'always-on reprojection'"
 "Settings_ForceReprojection_Info"	"늘어난 위치적 예측을 절충하며 더 느린 애플리케이션을 위해\n좀 더 많은 시간을 제공하므로 이 설정은 비활성 게임에만 적합합니다."
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
 "Settings_CheckForMissedFramesWarning"	"누락된 프레임 경고 보이기"
@@ -1796,7 +1796,7 @@
 "Settings_ArcadeMode"	"아케이드 모드 활성화하기"
 "[english]Settings_ArcadeMode"	"Enable Arcade Mode"
 "Settings_AllowAsyncReprojection"	"비동기 중복 프로젝션 허용"
-"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection"
+"[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection (recommended)"
 "Advanced_AsyncActive"	"비동기 중복 프로젝션 켜기"
 "[english]Advanced_AsyncActive"	"Async Reprojection On"
 "Advanced_AsyncNotActive"	"비동기 중복 프로젝션 끄기"
@@ -1896,7 +1896,7 @@
 "BugReporter_ReportType_FeatureRequest"	"기능 요청"
 "[english]BugReporter_ReportType_FeatureRequest"	"Feature Request"
 "Settings_HomeAppCheck"	"SteamVR Home 베타"
-"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"[english]Settings_HomeAppCheck"	"Launch SteamVR Home Beta at Startup"
 "Settings_HomeAppDesc"	"새로 바뀐 SteamVR Home 경험은 더욱 알찬 홈 공간과 소셜 기능 등을 지원합니다. 해당 기능은 현재 베타에서 사용 가능합니다. 포럼에서 피드백을 제공해 주세요."
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"야간 모드"
